commit bilingual contents

--- a/docs/visual-basic/misc/bc30656.md
+++ b/docs/visual-basic/misc/bc30656.md
@@ -1,5 +1,5 @@
 ---
-title: Campo '<fieldname>' è di tipo non supportato
+title: Il campo '<fieldname>' è di tipo non supportato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30656
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30656
 ms.assetid: 3c806df2-19f7-4f54-a72a-4043d2cdba9f
-ms.openlocfilehash: f35394f36e5abc41d6be23e71eb02c6dcb1dfee2
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e864d4180068bd92d7d083022aa100306be73283
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61925424"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414998"
 ---
-# <a name="field-fieldname-is-of-an-unsupported-type"></a><span data-ttu-id="e8228-102">Campo '\<nomecampo >' è di tipo non supportato</span><span class="sxs-lookup"><span data-stu-id="e8228-102">Field '\<fieldname>' is of an unsupported type</span></span>
-<span data-ttu-id="e8228-103">Un campo viene dichiarato come tipo che non può essere rappresentato da Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="e8228-103">A field is declared as a type that cannot be represented by Visual Studio.</span></span>  
+# <a name="field-fieldname-is-of-an-unsupported-type"></a><span data-ttu-id="b2490-102">Il campo '\<fieldname>' è di tipo non supportato</span><span class="sxs-lookup"><span data-stu-id="b2490-102">Field '\<fieldname>' is of an unsupported type</span></span>
+<span data-ttu-id="b2490-103">Un campo viene dichiarato come un tipo che non può essere rappresentato da Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="b2490-103">A field is declared as a type that cannot be represented by Visual Studio.</span></span>  
   
- <span data-ttu-id="e8228-104">**ID errore:** BC30656</span><span class="sxs-lookup"><span data-stu-id="e8228-104">**Error ID:** BC30656</span></span>  
+ <span data-ttu-id="b2490-104">**ID errore:** BC30656</span><span class="sxs-lookup"><span data-stu-id="b2490-104">**Error ID:** BC30656</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e8228-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e8228-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b2490-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b2490-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="e8228-106">Definire il campo come un tipo supportato.</span><span class="sxs-lookup"><span data-stu-id="e8228-106">Define the field as a supported type.</span></span>  
+1. <span data-ttu-id="b2490-106">Definire il campo come un tipo supportato.</span><span class="sxs-lookup"><span data-stu-id="b2490-106">Define the field as a supported type.</span></span>  
   
-2. <span data-ttu-id="e8228-107">Sviluppare un nuovo tipo che descrive i dati nel campo.</span><span class="sxs-lookup"><span data-stu-id="e8228-107">Develop a new type that describes the data in the field.</span></span>  
+2. <span data-ttu-id="b2490-107">Sviluppare un nuovo tipo che descrive i dati nel campo.</span><span class="sxs-lookup"><span data-stu-id="b2490-107">Develop a new type that describes the data in the field.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e8228-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e8228-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b2490-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b2490-108">See also</span></span>
 
-- [<span data-ttu-id="e8228-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="e8228-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
+- [<span data-ttu-id="b2490-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="b2490-109">Data Types</span></span>](../language-reference/data-types/index.md)
