--- a/docs/visual-basic/misc/bc30932.md
+++ b/docs/visual-basic/misc/bc30932.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30932
 ms.assetid: a38ca4ad-6bbf-421e-a0d7-c5e0a9029160
-ms.openlocfilehash: 5cbb4aafae32fce6ac5ba8957b0536f7dbfe5284
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 2725211cf5297d95922ecb3f522b0dc75bf5bd6f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61768082"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414051"
 ---
-# <a name="constraints-for-this-type-parameter-do-not-match-the-constraints-on-the-corresponding-type-parameter-defined-on-one-of-the-other-partial-types-of-1"></a><span data-ttu-id="e549b-102">I vincoli per questo parametro di tipo non corrispondono ai vincoli nel corrispondente parametro di tipo definito in uno degli altri tipi parziali di '|1'</span><span class="sxs-lookup"><span data-stu-id="e549b-102">Constraints for this type parameter do not match the constraints on the corresponding type parameter defined on one of the other partial types of '|1'</span></span>
-<span data-ttu-id="e549b-103">Quando si divide la definizione di una classe o struttura in diverse dichiarazioni, il compilatore considera la classe o struttura come l'unione di tutte le relative dichiarazioni parziali.</span><span class="sxs-lookup"><span data-stu-id="e549b-103">When you divide the definition of a class or structure among several declarations, the compiler treats the class or structure as the union of all its partial declarations.</span></span> <span data-ttu-id="e549b-104">Per questo motivo, non è possibile definire elenchi di parametri di tipo o modificatori in conflitto nelle varie dichiarazioni parziali.</span><span class="sxs-lookup"><span data-stu-id="e549b-104">Because of this, you cannot define any conflicting modifiers or type parameter lists in the various partial declarations.</span></span>  
+# <a name="constraints-for-this-type-parameter-do-not-match-the-constraints-on-the-corresponding-type-parameter-defined-on-one-of-the-other-partial-types-of-1"></a><span data-ttu-id="330c1-102">I vincoli per questo parametro di tipo non corrispondono ai vincoli nel corrispondente parametro di tipo definito in uno degli altri tipi parziali di '|1'</span><span class="sxs-lookup"><span data-stu-id="330c1-102">Constraints for this type parameter do not match the constraints on the corresponding type parameter defined on one of the other partial types of '|1'</span></span>
+<span data-ttu-id="330c1-103">Quando si divide la definizione di una classe o struttura in diverse dichiarazioni, il compilatore considera la classe o struttura come l'unione di tutte le relative dichiarazioni parziali.</span><span class="sxs-lookup"><span data-stu-id="330c1-103">When you divide the definition of a class or structure among several declarations, the compiler treats the class or structure as the union of all its partial declarations.</span></span> <span data-ttu-id="330c1-104">Per questo motivo, non è possibile definire elenchi di parametri di tipo o modificatori in conflitto nelle varie dichiarazioni parziali.</span><span class="sxs-lookup"><span data-stu-id="330c1-104">Because of this, you cannot define any conflicting modifiers or type parameter lists in the various partial declarations.</span></span>  
   
- <span data-ttu-id="e549b-105">**ID errore:** BC30932</span><span class="sxs-lookup"><span data-stu-id="e549b-105">**Error ID:** BC30932</span></span>  
+ <span data-ttu-id="330c1-105">**ID errore:** BC30932</span><span class="sxs-lookup"><span data-stu-id="330c1-105">**Error ID:** BC30932</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e549b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e549b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="330c1-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="330c1-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="e549b-107">Determinare quale elenco parametri di tipo si vuole per la classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="e549b-107">Determine which type parameter list is the desired one for your class or structure.</span></span> <span data-ttu-id="e549b-108">Questo include i parametri, il relativo ordine e i relativi elenchi di vincoli.</span><span class="sxs-lookup"><span data-stu-id="e549b-108">This includes the parameters, their order, and their constraint lists.</span></span>  
+1. <span data-ttu-id="330c1-107">Determinare quale elenco parametri di tipo si vuole per la classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="330c1-107">Determine which type parameter list is the desired one for your class or structure.</span></span> <span data-ttu-id="330c1-108">Questo include i parametri, il relativo ordine e i relativi elenchi di vincoli.</span><span class="sxs-lookup"><span data-stu-id="330c1-108">This includes the parameters, their order, and their constraint lists.</span></span>  
   
-2. <span data-ttu-id="e549b-109">Verificare che tutte le definizioni parziali usino lo stesso elenco di parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="e549b-109">Make sure every partial definition uses the identical type parameter list.</span></span>  
+2. <span data-ttu-id="330c1-109">Verificare che tutte le definizioni parziali usino lo stesso elenco di parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="330c1-109">Make sure every partial definition uses the identical type parameter list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e549b-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e549b-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="330c1-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="330c1-110">See also</span></span>
 
-- [<span data-ttu-id="e549b-111">Partial</span><span class="sxs-lookup"><span data-stu-id="e549b-111">Partial</span></span>](../../visual-basic/language-reference/modifiers/partial.md)
-- [<span data-ttu-id="e549b-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e549b-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="330c1-111">Partial</span><span class="sxs-lookup"><span data-stu-id="330c1-111">Partial</span></span>](../language-reference/modifiers/partial.md)
+- [<span data-ttu-id="330c1-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="330c1-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
