--- a/docs/visual-basic/misc/bc30934.md
+++ b/docs/visual-basic/misc/bc30934.md
@@ -1,5 +1,5 @@
 ---
-title: La conversione da<type1>'' a<type2>'' non può verificarsi in un'espressione costante usata come argomento di un attributo
+title: In un'espressione costante usata come argomento di un attributo non può verificarsi la conversione da '<type1>' a '<type2>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30934
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30934
 ms.assetid: 120e05f9-1d0e-4800-b05c-a8373e286b9b
-ms.openlocfilehash: 95554b1e2f8f15228724845942c7537851529408
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5aee9f1939186886bf81ff4499f533986118832c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667023"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414038"
 ---
-# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a><span data-ttu-id="77cf3-102">La conversione da\<' tipo1 >' a\<' tipo2 >' non può verificarsi in un'espressione costante usata come argomento di un attributo</span><span class="sxs-lookup"><span data-stu-id="77cf3-102">Conversion from '\<type1>' to '\<type2>' cannot occur in a constant expression used as an argument to an attribute</span></span>
-<span data-ttu-id="77cf3-103">Un'espressione utilizzata per un argomento di attributo restituisce un tipo di dati diverso da quello del parametro di attributo corrispondente e Visual Basic non consente la conversione di tipo richiesta per gli argomenti dell'attributo.</span><span class="sxs-lookup"><span data-stu-id="77cf3-103">An expression used for an attribute argument evaluates to a data type different from that of the corresponding attribute parameter, and Visual Basic does not allow the required type conversion for attribute arguments.</span></span>  
+# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a><span data-ttu-id="30fcb-102">In un'espressione costante usata come argomento di un attributo non può verificarsi la conversione da '\<type1>' a '\<type2>'</span><span class="sxs-lookup"><span data-stu-id="30fcb-102">Conversion from '\<type1>' to '\<type2>' cannot occur in a constant expression used as an argument to an attribute</span></span>
+<span data-ttu-id="30fcb-103">Un'espressione utilizzata per un argomento di attributo restituisce un tipo di dati diverso da quello del parametro di attributo corrispondente e Visual Basic non consente la conversione di tipo richiesta per gli argomenti dell'attributo.</span><span class="sxs-lookup"><span data-stu-id="30fcb-103">An expression used for an attribute argument evaluates to a data type different from that of the corresponding attribute parameter, and Visual Basic does not allow the required type conversion for attribute arguments.</span></span>  
   
- <span data-ttu-id="77cf3-104">Un attributo fornisce metadati per l'elemento a cui è applicato e il compilatore deve essere in grado di costruire tutti i metadati in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="77cf3-104">An attribute provides metadata for the element it is applied to, and the compiler must be able to construct all the metadata at compile time.</span></span> <span data-ttu-id="77cf3-105">Per questo motivo, ogni attributo deve usare valori costanti in fase di compilazione e, di conseguenza, anche ogni argomento di attributo deve restituire un valore costante.</span><span class="sxs-lookup"><span data-stu-id="77cf3-105">For this reason, every attribute must use values that are constant at compile time, and therefore every attribute argument must evaluate to a compile-time constant value.</span></span>  
+ <span data-ttu-id="30fcb-104">Un attributo fornisce metadati per l'elemento a cui è applicato e il compilatore deve essere in grado di costruire tutti i metadati in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="30fcb-104">An attribute provides metadata for the element it is applied to, and the compiler must be able to construct all the metadata at compile time.</span></span> <span data-ttu-id="30fcb-105">Per questo motivo, ogni attributo deve usare valori costanti in fase di compilazione e, di conseguenza, anche ogni argomento di attributo deve restituire un valore costante.</span><span class="sxs-lookup"><span data-stu-id="30fcb-105">For this reason, every attribute must use values that are constant at compile time, and therefore every attribute argument must evaluate to a compile-time constant value.</span></span>  
   
- <span data-ttu-id="77cf3-106">Alcune conversioni di tipo non possono produrre valori costanti in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="77cf3-106">Certain type conversions cannot produce values that are constant at compile time.</span></span> <span data-ttu-id="77cf3-107">Ad esempio, la conversione di `String` in `Double` o in `Date` dipende dalle impostazioni locali in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="77cf3-107">For example, converting a `String` to a `Double` or a `Date` depends on the locale setting at run time.</span></span> <span data-ttu-id="77cf3-108">Altre conversioni, ad esempio la conversione di una matrice di un tipo derivato in una matrice di `Object`, presentano diversi problemi che impediscono al compilatore di accettarle negli argomenti di attributo.</span><span class="sxs-lookup"><span data-stu-id="77cf3-108">Other conversions, such as an array of a derived type to an array of `Object`, present a variety of problems that do not permit the compiler to allow them on attribute arguments.</span></span>  
+ <span data-ttu-id="30fcb-106">Alcune conversioni di tipo non possono produrre valori costanti in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="30fcb-106">Certain type conversions cannot produce values that are constant at compile time.</span></span> <span data-ttu-id="30fcb-107">Ad esempio, la conversione di `String` in `Double` o in `Date` dipende dalle impostazioni locali in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="30fcb-107">For example, converting a `String` to a `Double` or a `Date` depends on the locale setting at run time.</span></span> <span data-ttu-id="30fcb-108">Altre conversioni, ad esempio la conversione di una matrice di un tipo derivato in una matrice di `Object`, presentano diversi problemi che impediscono al compilatore di accettarle negli argomenti di attributo.</span><span class="sxs-lookup"><span data-stu-id="30fcb-108">Other conversions, such as an array of a derived type to an array of `Object`, present a variety of problems that do not permit the compiler to allow them on attribute arguments.</span></span>  
   
- <span data-ttu-id="77cf3-109">**ID errore:** BC30934</span><span class="sxs-lookup"><span data-stu-id="77cf3-109">**Error ID:** BC30934</span></span>  
+ <span data-ttu-id="30fcb-109">**ID errore:** BC30934</span><span class="sxs-lookup"><span data-stu-id="30fcb-109">**Error ID:** BC30934</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="77cf3-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="77cf3-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="30fcb-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="30fcb-110">To correct this error</span></span>  
   
-- <span data-ttu-id="77cf3-111">Usare un'espressione che restituisca lo stesso tipo di dati del parametro corrispondente, come definito dall'attributo.</span><span class="sxs-lookup"><span data-stu-id="77cf3-111">Use an expression that evaluates to the same data type as the corresponding parameter, as defined by the attribute.</span></span>  
+- <span data-ttu-id="30fcb-111">Usare un'espressione che restituisca lo stesso tipo di dati del parametro corrispondente, come definito dall'attributo.</span><span class="sxs-lookup"><span data-stu-id="30fcb-111">Use an expression that evaluates to the same data type as the corresponding parameter, as defined by the attribute.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="77cf3-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="77cf3-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="30fcb-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="30fcb-112">See also</span></span>
 
-- [<span data-ttu-id="77cf3-113">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="77cf3-113">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="30fcb-113">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="30fcb-113">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
 
-- [<span data-ttu-id="77cf3-114">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="77cf3-114">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
-- [<span data-ttu-id="77cf3-115">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="77cf3-115">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="30fcb-114">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="30fcb-114">Const Statement</span></span>](../language-reference/statements/const-statement.md)
+- [<span data-ttu-id="30fcb-115">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="30fcb-115">Type Conversions in Visual Basic</span></span>](../programming-guide/language-features/data-types/type-conversions.md)
