--- a/docs/visual-basic/misc/bc31138.md
+++ b/docs/visual-basic/misc/bc31138.md
@@ -1,5 +1,5 @@
 ---
-title: I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono<modifier>essere dichiarati ''
+title: I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono essere dichiarati ' <modifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31138
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC31138
 ms.assetid: 6d8df92a-95fc-4a7d-ab1e-06d312155c55
-ms.openlocfilehash: a87125c058e46072c48d4d084480f2839b04ba40
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 4fd7104fb1289d17639ba1a768669e8490abae25
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664441"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414660"
 ---
-# <a name="addhandler-removehandler-and-raiseevent-method-parameters-cannot-be-declared-modifier"></a><span data-ttu-id="35305-102">I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono\<essere dichiarati come ' modifier >'</span><span class="sxs-lookup"><span data-stu-id="35305-102">'AddHandler', 'RemoveHandler' and 'RaiseEvent' method parameters cannot be declared '\<modifier>'</span></span>
-<span data-ttu-id="35305-103">I parametri dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` non possono essere dichiarati con i modificatori `Optional` o `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="35305-103">The parameters of the `AddHandler`, `RemoveHandler`, and `RaiseEvent` methods cannot be declared with the `Optional` or `ParamArray` modifiers.</span></span>  
+# <a name="addhandler-removehandler-and-raiseevent-method-parameters-cannot-be-declared-modifier"></a><span data-ttu-id="402e0-102">I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono essere dichiarati ' \<modifier> '</span><span class="sxs-lookup"><span data-stu-id="402e0-102">'AddHandler', 'RemoveHandler' and 'RaiseEvent' method parameters cannot be declared '\<modifier>'</span></span>
+<span data-ttu-id="402e0-103">I parametri dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` non possono essere dichiarati con i modificatori `Optional` o `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="402e0-103">The parameters of the `AddHandler`, `RemoveHandler`, and `RaiseEvent` methods cannot be declared with the `Optional` or `ParamArray` modifiers.</span></span>  
   
- <span data-ttu-id="35305-104">I modificatori `Optional` o `ParamArray` sono consentiti solo nei parametri nelle dichiarazioni `Declare`, `Function`, `Property`e `Sub` .</span><span class="sxs-lookup"><span data-stu-id="35305-104">The `Optional` or `ParamArray` modifiers are allowed only on parameters in `Declare`, `Function`, `Property`, and `Sub` declarations.</span></span>  
+ <span data-ttu-id="402e0-104">I modificatori `Optional` o `ParamArray` sono consentiti solo nei parametri nelle dichiarazioni `Declare`, `Function`, `Property`e `Sub` .</span><span class="sxs-lookup"><span data-stu-id="402e0-104">The `Optional` or `ParamArray` modifiers are allowed only on parameters in `Declare`, `Function`, `Property`, and `Sub` declarations.</span></span>  
   
- <span data-ttu-id="35305-105">**ID errore:** BC31138</span><span class="sxs-lookup"><span data-stu-id="35305-105">**Error ID:** BC31138</span></span>  
+ <span data-ttu-id="402e0-105">**ID errore:** BC31138</span><span class="sxs-lookup"><span data-stu-id="402e0-105">**Error ID:** BC31138</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="35305-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="35305-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="402e0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="402e0-106">To correct this error</span></span>  
   
-- <span data-ttu-id="35305-107">Rimuovere la parola chiave `Optional` o `ParamArray` dall'elenco di parametri.</span><span class="sxs-lookup"><span data-stu-id="35305-107">Remove the `Optional` or `ParamArray` keyword from the parameter list.</span></span>  
+- <span data-ttu-id="402e0-107">Rimuovere la parola chiave `Optional` o `ParamArray` dall'elenco di parametri.</span><span class="sxs-lookup"><span data-stu-id="402e0-107">Remove the `Optional` or `ParamArray` keyword from the parameter list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="35305-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="35305-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="402e0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="402e0-108">See also</span></span>
 
-- [<span data-ttu-id="35305-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="35305-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="35305-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="35305-110">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="35305-111">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="35305-111">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="35305-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="35305-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="35305-113">Facoltativo</span><span class="sxs-lookup"><span data-stu-id="35305-113">Optional</span></span>](../../visual-basic/language-reference/modifiers/optional.md)
-- [<span data-ttu-id="35305-114">ParamArray</span><span class="sxs-lookup"><span data-stu-id="35305-114">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [<span data-ttu-id="35305-115">Eventi</span><span class="sxs-lookup"><span data-stu-id="35305-115">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="402e0-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="402e0-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="402e0-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="402e0-110">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="402e0-111">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="402e0-111">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="402e0-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="402e0-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="402e0-113">Facoltativo</span><span class="sxs-lookup"><span data-stu-id="402e0-113">Optional</span></span>](../language-reference/modifiers/optional.md)
+- [<span data-ttu-id="402e0-114">ParamArray</span><span class="sxs-lookup"><span data-stu-id="402e0-114">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="402e0-115">Events</span><span class="sxs-lookup"><span data-stu-id="402e0-115">Events</span></span>](../programming-guide/language-features/events/index.md)
