--- a/docs/visual-basic/misc/bc32072.md
+++ b/docs/visual-basic/misc/bc32072.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile implementare<interfacename1>l'interfaccia '' perché l'implementazione potrebbe essere in conflitto con l'implementazione<interfacename2>di un'altra interfaccia implementata '' per alcuni argomenti di tipo
+title: Non è possibile eseguire l'implementazione dell'interfaccia '<interfacename1>' perché potrebbe essere in conflitto con l'implementazione di un'altra interfaccia '<interfacename2>' per alcuni argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - BC32072
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - BC32072
 ms.assetid: af1cc688-c8cf-4cb2-a8a9-310f5139fe7b
-ms.openlocfilehash: 721fd6cffb952cdbe89b38a4b805d40dbf5b4aab
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 4ff70a8d854e25b31a06705eba4b4e7bb7c9d6ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512695"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413791"
 ---
-# <a name="cannot-implement-interface-interfacename1-because-its-implementation-could-conflict-with-the-implementation-of-another-implemented-interface-interfacename2-for-some-type-arguments"></a><span data-ttu-id="eccf9-102">Non è possibile implementare\<l'interfaccia ' nomeinterfaccia1 >' perché l'implementazione potrebbe essere in conflitto con l'implementazione\<di un'altra interfaccia implementata ' nomeinterfaccia2 >' per alcuni argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="eccf9-102">Cannot implement interface '\<interfacename1>' because its implementation could conflict with the implementation of another implemented interface '\<interfacename2>' for some type arguments</span></span>
+# <a name="cannot-implement-interface-interfacename1-because-its-implementation-could-conflict-with-the-implementation-of-another-implemented-interface-interfacename2-for-some-type-arguments"></a><span data-ttu-id="b60ec-102">Non è possibile eseguire l'implementazione dell'interfaccia '\<interfacename1>' perché potrebbe essere in conflitto con l'implementazione di un'altra interfaccia '\<interfacename2>' per alcuni argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="b60ec-102">Cannot implement interface '\<interfacename1>' because its implementation could conflict with the implementation of another implemented interface '\<interfacename2>' for some type arguments</span></span>
 
-<span data-ttu-id="eccf9-103">Una dichiarazione di classe include un'istruzione `Implements` che specifica due o più interfacce, di cui almeno una delle due è generica e due delle implementazioni potrebbero entrare in conflitto per alcuni valori degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="eccf9-103">A class declaration includes an `Implements` statement that specifies two or more interfaces, but at least one of the interfaces is generic and two of the implementations could conflict for certain values of type arguments.</span></span>
+<span data-ttu-id="b60ec-103">Una dichiarazione di classe include un'istruzione `Implements` che specifica due o più interfacce, di cui almeno una delle due è generica e due delle implementazioni potrebbero entrare in conflitto per alcuni valori degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="b60ec-103">A class declaration includes an `Implements` statement that specifies two or more interfaces, but at least one of the interfaces is generic and two of the implementations could conflict for certain values of type arguments.</span></span>
 
-<span data-ttu-id="eccf9-104">Le istruzioni seguenti possono generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="eccf9-104">The following statements can generate this error.</span></span>
+<span data-ttu-id="b60ec-104">Le istruzioni seguenti possono generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="b60ec-104">The following statements can generate this error.</span></span>
 
 ```vb
 Public Interface iFace1
@@ -32,22 +32,22 @@ Public Class testClass
 End Class
 ```
 
-<span data-ttu-id="eccf9-105">Poiché `iFace2` viene creato usando `String`, `testClass` deve implementare due versioni di `testSub` con firme identiche.</span><span class="sxs-lookup"><span data-stu-id="eccf9-105">Because `iFace2` is constructed using `String`, `testClass` must implement two versions of `testSub` with identical signatures.</span></span> <span data-ttu-id="eccf9-106">In questo modo si produrrebbe un'ambiguità sulla versione a cui accedere.</span><span class="sxs-lookup"><span data-stu-id="eccf9-106">Doing so would produce an ambiguity about which version to access.</span></span>
+<span data-ttu-id="b60ec-105">Poiché `iFace2` viene creato usando `String`, `testClass` deve implementare due versioni di `testSub` con firme identiche.</span><span class="sxs-lookup"><span data-stu-id="b60ec-105">Because `iFace2` is constructed using `String`, `testClass` must implement two versions of `testSub` with identical signatures.</span></span> <span data-ttu-id="b60ec-106">In questo modo si produrrebbe un'ambiguità sulla versione a cui accedere.</span><span class="sxs-lookup"><span data-stu-id="b60ec-106">Doing so would produce an ambiguity about which version to access.</span></span>
 
-<span data-ttu-id="eccf9-107">**ID errore:** BC32072</span><span class="sxs-lookup"><span data-stu-id="eccf9-107">**Error ID:** BC32072</span></span>
+<span data-ttu-id="b60ec-107">**ID errore:** BC32072</span><span class="sxs-lookup"><span data-stu-id="b60ec-107">**Error ID:** BC32072</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="eccf9-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="eccf9-108">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="b60ec-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b60ec-108">To correct this error</span></span>
 
-- <span data-ttu-id="eccf9-109">Modificare l'argomento di tipo fornito all'interfaccia generica in modo che non vi siano conflitti.</span><span class="sxs-lookup"><span data-stu-id="eccf9-109">Change the type argument supplied to the generic interface so that there is no conflict.</span></span>
+- <span data-ttu-id="b60ec-109">Modificare l'argomento di tipo fornito all'interfaccia generica in modo che non vi siano conflitti.</span><span class="sxs-lookup"><span data-stu-id="b60ec-109">Change the type argument supplied to the generic interface so that there is no conflict.</span></span>
 
-  <span data-ttu-id="eccf9-110">\-oppure-</span><span class="sxs-lookup"><span data-stu-id="eccf9-110">\-or-</span></span>
+  <span data-ttu-id="b60ec-110">\-oppure-</span><span class="sxs-lookup"><span data-stu-id="b60ec-110">\-or-</span></span>
 
-- <span data-ttu-id="eccf9-111">Rimuovere dall'istruzione `Implements` una delle interfacce che producono il conflitto di implementazione.</span><span class="sxs-lookup"><span data-stu-id="eccf9-111">Remove from the `Implements` statement one of the interfaces resulting in the implementation conflict.</span></span>
+- <span data-ttu-id="b60ec-111">Rimuovere dall'istruzione `Implements` una delle interfacce che producono il conflitto di implementazione.</span><span class="sxs-lookup"><span data-stu-id="b60ec-111">Remove from the `Implements` statement one of the interfaces resulting in the implementation conflict.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="eccf9-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="eccf9-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b60ec-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b60ec-112">See also</span></span>
 
-- [<span data-ttu-id="eccf9-113">Istruzione Class</span><span class="sxs-lookup"><span data-stu-id="eccf9-113">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="eccf9-114">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="eccf9-114">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="eccf9-115">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="eccf9-115">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="b60ec-113">Istruzione Class</span><span class="sxs-lookup"><span data-stu-id="b60ec-113">Class Statement</span></span>](../language-reference/statements/class-statement.md)
+- [<span data-ttu-id="b60ec-114">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="b60ec-114">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="b60ec-115">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="b60ec-115">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
 
-- [<span data-ttu-id="eccf9-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="eccf9-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="b60ec-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b60ec-116">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
