--- a/docs/visual-basic/misc/bc32078.md
+++ b/docs/visual-basic/misc/bc32078.md
@@ -1,5 +1,5 @@
 ---
-title: «<membername>'non può implementare'<interfacename>.<interfacemembername>' perché si differenziano per i vincoli del parametro
+title: "' <membername> ' non può implementare ' <interfacename> . <interfacemembername> ' perché si differenziano per vincoli di parametro di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32078
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC32078
 ms.assetid: 2c971345-edb4-491e-9202-8eb8286b66f8
-ms.openlocfilehash: d86f1712b05657e48d83727eb8e2a0897f77322e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f556794ed2cfb390cb19d08c065dbea154a3b9e3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618720"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413700"
 ---
-# <a name="membername-cannot-implement-interfacenameinterfacemembername-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="90236-102">«\<nomeMembro >' non può implementare '\<nomeinterfaccia >.\< NomeMembroInterfaccia >' perché si differenziano per i vincoli del parametro</span><span class="sxs-lookup"><span data-stu-id="90236-102">'\<membername>' cannot implement '\<interfacename>.\<interfacemembername>' because they differ by type parameter constraints</span></span>
-<span data-ttu-id="90236-103">Un evento generico, una proprietà o una routine prova a implementare un membro simile definito in un'interfaccia, ma hanno elenchi di vincoli diversi nei parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="90236-103">A generic event, property, or procedure attempts to implement a similar member defined in an interface, but they have different constraint lists on their type parameters.</span></span>  
+# <a name="membername-cannot-implement-interfacenameinterfacemembername-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="7aeb6-102">' \<membername> ' non può implementare ' \<interfacename> . \<interfacemembername> ' perché si differenziano per vincoli di parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="7aeb6-102">'\<membername>' cannot implement '\<interfacename>.\<interfacemembername>' because they differ by type parameter constraints</span></span>
+<span data-ttu-id="7aeb6-103">Un evento generico, una proprietà o una routine prova a implementare un membro simile definito in un'interfaccia, ma hanno elenchi di vincoli diversi nei parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-103">A generic event, property, or procedure attempts to implement a similar member defined in an interface, but they have different constraint lists on their type parameters.</span></span>  
   
- <span data-ttu-id="90236-104">Per implementare un membro di interfaccia, il membro di implementazione deve corrispondere non solo alla firma completa del membro di interfaccia, ma anche al meccanismo di passaggio di ogni parametro.</span><span class="sxs-lookup"><span data-stu-id="90236-104">To implement an interface member, the implementing member must match not only the complete signature of the interface member, but also the passing mechanism of each parameter.</span></span>  
+ <span data-ttu-id="7aeb6-104">Per implementare un membro di interfaccia, il membro di implementazione deve corrispondere non solo alla firma completa del membro di interfaccia, ma anche al meccanismo di passaggio di ogni parametro.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-104">To implement an interface member, the implementing member must match not only the complete signature of the interface member, but also the passing mechanism of each parameter.</span></span>  
   
- <span data-ttu-id="90236-105">Per implementare un membro di interfaccia generica, il membro di implementazione deve corrispondere al numero di parametri di tipo e all'elenco di vincoli di ciascuno di essi.</span><span class="sxs-lookup"><span data-stu-id="90236-105">To implement a generic interface member, the implementing member must additionally match the number of type parameters and the constraint list of each one.</span></span>  
+ <span data-ttu-id="7aeb6-105">Per implementare un membro di interfaccia generica, il membro di implementazione deve corrispondere al numero di parametri di tipo e all'elenco di vincoli di ciascuno di essi.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-105">To implement a generic interface member, the implementing member must additionally match the number of type parameters and the constraint list of each one.</span></span>  
   
- <span data-ttu-id="90236-106">Per informazioni dettagliate sull'implementazione dell'interfaccia, vedere.</span><span class="sxs-lookup"><span data-stu-id="90236-106">For details on interface implementation, see .</span></span>  
+ <span data-ttu-id="7aeb6-106">Per informazioni dettagliate sull'implementazione dell'interfaccia, vedere.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-106">For details on interface implementation, see .</span></span>  
   
- <span data-ttu-id="90236-107">**ID errore:** BC32078</span><span class="sxs-lookup"><span data-stu-id="90236-107">**Error ID:** BC32078</span></span>  
+ <span data-ttu-id="7aeb6-107">**ID errore:** BC32078</span><span class="sxs-lookup"><span data-stu-id="7aeb6-107">**Error ID:** BC32078</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="90236-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="90236-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7aeb6-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7aeb6-108">To correct this error</span></span>  
   
-- <span data-ttu-id="90236-109">Se si prevede di implementare il membro di interfaccia, verificare che i vincoli del parametro di tipo corrispondano esattamente a quelli del membro di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="90236-109">If you intend to implement the interface member, revise the type parameter constraints to exactly match those of the interface member.</span></span>  
+- <span data-ttu-id="7aeb6-109">Se si prevede di implementare il membro di interfaccia, verificare che i vincoli del parametro di tipo corrispondano esattamente a quelli del membro di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-109">If you intend to implement the interface member, revise the type parameter constraints to exactly match those of the interface member.</span></span>  
   
-- <span data-ttu-id="90236-110">Se i vincoli del parametro di tipo devono rimanere così come sono, non è possibile implementare il membro di interfaccia in questa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="90236-110">If the type parameter constraints must remain as you have them, you cannot implement the interface member in this declaration.</span></span> <span data-ttu-id="90236-111">Rimuovere il [implementa](../../visual-basic/language-reference/statements/implements-clause.md) parola chiave dalla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="90236-111">Remove the [Implements](../../visual-basic/language-reference/statements/implements-clause.md) keyword from the declaration.</span></span>  
+- <span data-ttu-id="7aeb6-110">Se i vincoli del parametro di tipo devono rimanere così come sono, non è possibile implementare il membro di interfaccia in questa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-110">If the type parameter constraints must remain as you have them, you cannot implement the interface member in this declaration.</span></span> <span data-ttu-id="7aeb6-111">Rimuovere la parola chiave [Implements](../language-reference/statements/implements-clause.md) dalla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="7aeb6-111">Remove the [Implements](../language-reference/statements/implements-clause.md) keyword from the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="90236-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="90236-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7aeb6-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7aeb6-112">See also</span></span>
 
-- [<span data-ttu-id="90236-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="90236-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="7aeb6-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7aeb6-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
