--- a/docs/visual-basic/misc/bc32105.md
+++ b/docs/visual-basic/misc/bc32105.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'non soddisfa il vincolo 'Structure' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' non soddisfa il vincolo ' Structure ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32105
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32105
 ms.assetid: 09e5a837-8afd-4360-86bd-157e53c47513
-ms.openlocfilehash: ce1983f3152f4e6b6c86094b3436f7b6c1331cef
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 27133ff36700bfc3918f9b4c6ee4b2a1e3454664
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913454"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413661"
 ---
-# <a name="type-argument-typeargumentname-does-not-satisfy-the-structure-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="df77e-102">Argomento di tipo '\<nomeargomentotipo >' non soddisfa il vincolo 'Structure' per il parametro di tipo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="df77e-102">Type argument '\<typeargumentname>' does not satisfy the 'Structure' constraint for type parameter '\<typeparametername>'</span></span>
-<span data-ttu-id="df77e-103">Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di tipo valore nel parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="df77e-103">A type argument supplied to a generic type does not satisfy the value type constraint on its corresponding type parameter.</span></span>  
+# <a name="type-argument-typeargumentname-does-not-satisfy-the-structure-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="63d2b-102">L'argomento di tipo ' \<typeargumentname> ' non soddisfa il vincolo ' Structure ' per il parametro di tipo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="63d2b-102">Type argument '\<typeargumentname>' does not satisfy the 'Structure' constraint for type parameter '\<typeparametername>'</span></span>
+<span data-ttu-id="63d2b-103">Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di tipo valore nel parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="63d2b-103">A type argument supplied to a generic type does not satisfy the value type constraint on its corresponding type parameter.</span></span>  
   
- <span data-ttu-id="df77e-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="df77e-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="df77e-105">Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito generale specificando una delle seguenti condizioni:</span><span class="sxs-lookup"><span data-stu-id="df77e-105">If you do not include any specific class or interface in the constraint list, you can impose a general requirement by specifying one of the following:</span></span>  
+ <span data-ttu-id="63d2b-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="63d2b-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="63d2b-105">Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito generale specificando una delle seguenti condizioni:</span><span class="sxs-lookup"><span data-stu-id="63d2b-105">If you do not include any specific class or interface in the constraint list, you can impose a general requirement by specifying one of the following:</span></span>  
   
-- <span data-ttu-id="df77e-106">L'argomento di tipo deve essere un tipo valore (deve includere il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="df77e-106">The type argument must be a value type (include the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint)</span></span>  
+- <span data-ttu-id="63d2b-106">L'argomento di tipo deve essere un tipo valore (deve includere il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="63d2b-106">The type argument must be a value type (include the [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) constraint)</span></span>  
   
-- <span data-ttu-id="df77e-107">L'argomento di tipo deve essere un tipo riferimento (deve includere il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="df77e-107">The type argument must be a reference type (include the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint)</span></span>  
+- <span data-ttu-id="63d2b-107">L'argomento di tipo deve essere un tipo riferimento (deve includere il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="63d2b-107">The type argument must be a reference type (include the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint)</span></span>  
   
- <span data-ttu-id="df77e-108">Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="df77e-108">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="63d2b-108">Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="63d2b-108">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="df77e-109">**ID errore:** BC32105</span><span class="sxs-lookup"><span data-stu-id="df77e-109">**Error ID:** BC32105</span></span>  
+ <span data-ttu-id="63d2b-109">**ID errore:** BC32105</span><span class="sxs-lookup"><span data-stu-id="63d2b-109">**Error ID:** BC32105</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="df77e-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="df77e-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="63d2b-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="63d2b-110">To correct this error</span></span>  
   
-- <span data-ttu-id="df77e-111">Selezionare un argomento di tipo di qualsiasi tipo valore.</span><span class="sxs-lookup"><span data-stu-id="df77e-111">Select a type argument of any value type.</span></span>  
+- <span data-ttu-id="63d2b-111">Selezionare un argomento di tipo di qualsiasi tipo valore.</span><span class="sxs-lookup"><span data-stu-id="63d2b-111">Select a type argument of any value type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="df77e-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="df77e-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="63d2b-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="63d2b-112">See also</span></span>
 
-- [<span data-ttu-id="df77e-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="df77e-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="df77e-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="df77e-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [<span data-ttu-id="df77e-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="df77e-115">How to: Use a Generic Class</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [<span data-ttu-id="63d2b-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="63d2b-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="63d2b-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="63d2b-114">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="63d2b-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="63d2b-115">How to: Use a Generic Class</span></span>](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
