--- a/docs/visual-basic/misc/bc42302.md
+++ b/docs/visual-basic/misc/bc42302.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42302
 ms.assetid: c3344328-adef-4c3d-b75e-e8a9e450e67c
-ms.openlocfilehash: 5d5d0fde809a559442658fb017154935410bf36b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 07e271c62022ffe8e86421cda71ff6044bb356d9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588045"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413570"
 ---
-# <a name="xml-comment-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="2cd66-102">Il commento XML deve essere la prima istruzione di una riga</span><span class="sxs-lookup"><span data-stu-id="2cd66-102">XML comment must be the first statement on a line</span></span>
-<span data-ttu-id="2cd66-103">Il commento XML deve essere la prima istruzione di una riga.</span><span class="sxs-lookup"><span data-stu-id="2cd66-103">XML comment must be the first statement on a line.</span></span> <span data-ttu-id="2cd66-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="2cd66-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="7bccf-102">Il commento XML deve essere la prima istruzione di una riga</span><span class="sxs-lookup"><span data-stu-id="7bccf-102">XML comment must be the first statement on a line</span></span>
+<span data-ttu-id="7bccf-103">Il commento XML deve essere la prima istruzione di una riga.</span><span class="sxs-lookup"><span data-stu-id="7bccf-103">XML comment must be the first statement on a line.</span></span> <span data-ttu-id="7bccf-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="7bccf-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="2cd66-105">Un commento XML è stato inserito dopo un altro elemento di linguaggio. Questa operazione non è consentita.</span><span class="sxs-lookup"><span data-stu-id="2cd66-105">An XML comment was placed after another language element, which is not allowed.</span></span>  
+ <span data-ttu-id="7bccf-105">Un commento XML è stato inserito dopo un altro elemento di linguaggio. Questa operazione non è consentita.</span><span class="sxs-lookup"><span data-stu-id="7bccf-105">An XML comment was placed after another language element, which is not allowed.</span></span>  
   
- <span data-ttu-id="2cd66-106">**ID errore:** BC42302</span><span class="sxs-lookup"><span data-stu-id="2cd66-106">**Error ID:** BC42302</span></span>  
+ <span data-ttu-id="7bccf-106">**ID errore:** BC42302</span><span class="sxs-lookup"><span data-stu-id="7bccf-106">**Error ID:** BC42302</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2cd66-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2cd66-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7bccf-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7bccf-107">To correct this error</span></span>  
   
-- <span data-ttu-id="2cd66-108">Spostare il commento XML in una nuova riga.</span><span class="sxs-lookup"><span data-stu-id="2cd66-108">Move the XML comment to a new line.</span></span>  
+- <span data-ttu-id="7bccf-108">Spostare il commento XML in una nuova riga.</span><span class="sxs-lookup"><span data-stu-id="7bccf-108">Move the XML comment to a new line.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2cd66-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2cd66-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7bccf-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7bccf-109">See also</span></span>
 
-- [<span data-ttu-id="2cd66-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="2cd66-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="2cd66-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="2cd66-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="7bccf-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="7bccf-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="7bccf-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="7bccf-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
