--- a/docs/visual-basic/misc/bc42307.md
+++ b/docs/visual-basic/misc/bc42307.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro del commento XML '<parameter>' non corrisponde a un parametro corrispondente <keyword> istruzione
+title: Il parametro '<parameter>' del commento XML non corrisponde a un parametro nell'istruzione <keyword> corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42307
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42307
 ms.assetid: 59029afa-5c86-4e24-9823-0ffdd5805a95
-ms.openlocfilehash: c2d205fbd6506bd197d0f8dd1cdf37248f237c8c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3bb2d2ae18b5d9e68676d7285e56c6e05d9abbe0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64635861"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413505"
 ---
-# <a name="xml-comment-parameter-parameter-does-not-match-a-parameter-on-the-corresponding-keyword-statement"></a><span data-ttu-id="d466b-102">Il parametro del commento XML '\<parametro >' non corrisponde a un parametro corrispondente \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="d466b-102">XML comment parameter '\<parameter>' does not match a parameter on the corresponding \<keyword> statement</span></span>
-<span data-ttu-id="d466b-103">Il parametro del commento XML \<parametro > non corrisponde a un parametro corrispondente \<parola chiave > istruzione.</span><span class="sxs-lookup"><span data-stu-id="d466b-103">XML comment parameter \<parameter> does not match a parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="d466b-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="d466b-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-parameter-parameter-does-not-match-a-parameter-on-the-corresponding-keyword-statement"></a><span data-ttu-id="de62a-102">Il parametro '\<parameter>' del commento XML non corrisponde a un parametro nell'istruzione \<keyword> corrispondente</span><span class="sxs-lookup"><span data-stu-id="de62a-102">XML comment parameter '\<parameter>' does not match a parameter on the corresponding \<keyword> statement</span></span>
+<span data-ttu-id="de62a-103">Il parametro del commento XML non \<parameter> corrisponde a un parametro nell' \<keyword> istruzione corrispondente.</span><span class="sxs-lookup"><span data-stu-id="de62a-103">XML comment parameter \<parameter> does not match a parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="de62a-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="de62a-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="d466b-105">Un tag di commenti XML è stato specificato per alcuni, ma non per tutti, i parametri in un metodo.</span><span class="sxs-lookup"><span data-stu-id="d466b-105">An XML comment tag was specified for some but not all parameters in a method.</span></span>  
+ <span data-ttu-id="de62a-105">Un tag di commenti XML è stato specificato per alcuni, ma non per tutti, i parametri in un metodo.</span><span class="sxs-lookup"><span data-stu-id="de62a-105">An XML comment tag was specified for some but not all parameters in a method.</span></span>  
   
- <span data-ttu-id="d466b-106">**ID errore:** BC42307</span><span class="sxs-lookup"><span data-stu-id="d466b-106">**Error ID:** BC42307</span></span>  
+ <span data-ttu-id="de62a-106">**ID errore:** BC42307</span><span class="sxs-lookup"><span data-stu-id="de62a-106">**Error ID:** BC42307</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d466b-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d466b-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="de62a-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="de62a-107">To correct this error</span></span>  
   
-- <span data-ttu-id="d466b-108">Specificare il tag di commento XML per tutti i parametri nel metodo.</span><span class="sxs-lookup"><span data-stu-id="d466b-108">Provide the XML comment tag for all parameters in the method.</span></span>  
+- <span data-ttu-id="de62a-108">Specificare il tag di commento XML per tutti i parametri nel metodo.</span><span class="sxs-lookup"><span data-stu-id="de62a-108">Provide the XML comment tag for all parameters in the method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d466b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d466b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="de62a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="de62a-109">See also</span></span>
 
-- [<span data-ttu-id="d466b-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="d466b-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="d466b-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="d466b-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="de62a-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="de62a-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="de62a-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="de62a-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
