--- a/docs/visual-basic/language-reference/error-messages/bc30828.md
+++ b/docs/visual-basic/language-reference/error-messages/bc30828.md
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC30828
 ms.assetid: 7e5cf519-8b64-4ac5-8116-705fe26c846d
-ms.openlocfilehash: 3593f238c72cbcce911c72e42552d6a75188b628
-ms.sourcegitcommit: 2e95559d957a1a942e490c5fd916df04b39d73a9
+ms.openlocfilehash: d15db242564a98f6aa86c0b85897fd73972b905e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/16/2019
-ms.locfileid: "72405060"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415453"
 ---
-# <a name="as-any-is-not-supported-in-declare-statements"></a><span data-ttu-id="28cbc-102">'As Any' non è supportato nelle istruzioni 'Declare'</span><span class="sxs-lookup"><span data-stu-id="28cbc-102">'As Any' is not supported in 'Declare' statements</span></span>
-<span data-ttu-id="28cbc-103">Il tipo di dati `Any` è stato usato con le istruzioni `Declare` in Visual Basic 6,0 e versioni precedenti per consentire l'uso di argomenti che potrebbero contenere qualsiasi tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="28cbc-103">The `Any` data type was used with `Declare` statements in Visual Basic 6.0 and earlier versions to permit the use of arguments that could contain any type of data.</span></span> <span data-ttu-id="28cbc-104">Visual Basic supporta l'overload, tuttavia, rende obsoleto il tipo di dati `Any`.</span><span class="sxs-lookup"><span data-stu-id="28cbc-104">Visual Basic supports overloading, however, and so makes the `Any` data type obsolete.</span></span>  
+# <a name="as-any-is-not-supported-in-declare-statements"></a><span data-ttu-id="989fd-102">'As Any' non è supportato nelle istruzioni 'Declare'</span><span class="sxs-lookup"><span data-stu-id="989fd-102">'As Any' is not supported in 'Declare' statements</span></span>
+<span data-ttu-id="989fd-103">Il `Any` tipo di dati è stato usato con le `Declare` istruzioni in Visual Basic 6,0 e versioni precedenti per consentire l'uso di argomenti che potrebbero contenere qualsiasi tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="989fd-103">The `Any` data type was used with `Declare` statements in Visual Basic 6.0 and earlier versions to permit the use of arguments that could contain any type of data.</span></span> <span data-ttu-id="989fd-104">Visual Basic supporta tuttavia l'overload, quindi rende `Any` obsoleto il tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="989fd-104">Visual Basic supports overloading, however, and so makes the `Any` data type obsolete.</span></span>  
   
- <span data-ttu-id="28cbc-105">**ID errore:** BC30828</span><span class="sxs-lookup"><span data-stu-id="28cbc-105">**Error ID:** BC30828</span></span>  
+ <span data-ttu-id="989fd-105">**ID errore:** BC30828</span><span class="sxs-lookup"><span data-stu-id="989fd-105">**Error ID:** BC30828</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="28cbc-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="28cbc-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="989fd-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="989fd-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="28cbc-107">Dichiarare i parametri del tipo specifico che si desidera utilizzare. Per esempio.</span><span class="sxs-lookup"><span data-stu-id="28cbc-107">Declare parameters of the specific type you want to use; for example.</span></span>  
+1. <span data-ttu-id="989fd-107">Dichiarare i parametri del tipo specifico che si desidera utilizzare. Per esempio.</span><span class="sxs-lookup"><span data-stu-id="989fd-107">Declare parameters of the specific type you want to use; for example.</span></span>  
   
      [!code-vb[VbVbalrStatements#95](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrStatements/VB/class5.vb#95)]  
   
-2. <span data-ttu-id="28cbc-108">Utilizzare l'attributo <xref:System.Runtime.InteropServices.MarshalAsAttribute> per specificare `As Any` quando è previsto `Void*` dalla procedura chiamata.</span><span class="sxs-lookup"><span data-stu-id="28cbc-108">Use the <xref:System.Runtime.InteropServices.MarshalAsAttribute> attribute to specify `As Any` when `Void*` is expected by the procedure being called.</span></span>  
+2. <span data-ttu-id="989fd-108">Utilizzare l' <xref:System.Runtime.InteropServices.MarshalAsAttribute> attributo per specificare `As Any` quando `Void*` si prevede che la routine venga chiamata.</span><span class="sxs-lookup"><span data-stu-id="989fd-108">Use the <xref:System.Runtime.InteropServices.MarshalAsAttribute> attribute to specify `As Any` when `Void*` is expected by the procedure being called.</span></span>  
   
      [!code-vb[VbVbalrStatements#96](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrStatements/VB/class5.vb#96)]  
   
-## <a name="see-also"></a><span data-ttu-id="28cbc-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="28cbc-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="989fd-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="989fd-109">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.MarshalAsAttribute>
-- [<span data-ttu-id="28cbc-110">Procedura dettagliata: Chiamata delle API di Windows</span><span class="sxs-lookup"><span data-stu-id="28cbc-110">Walkthrough: Calling Windows APIs</span></span>](../../../visual-basic/programming-guide/com-interop/walkthrough-calling-windows-apis.md)
-- [<span data-ttu-id="28cbc-111">Istruzione Declare</span><span class="sxs-lookup"><span data-stu-id="28cbc-111">Declare Statement</span></span>](../../../visual-basic/language-reference/statements/declare-statement.md)
-- [<span data-ttu-id="28cbc-112">Creazione di prototipi nel codice gestito</span><span class="sxs-lookup"><span data-stu-id="28cbc-112">Creating Prototypes in Managed Code</span></span>](../../../framework/interop/creating-prototypes-in-managed-code.md)
+- [<span data-ttu-id="989fd-110">Procedura dettagliata: Chiamata delle API di Windows</span><span class="sxs-lookup"><span data-stu-id="989fd-110">Walkthrough: Calling Windows APIs</span></span>](../../programming-guide/com-interop/walkthrough-calling-windows-apis.md)
+- [<span data-ttu-id="989fd-111">Declare Statement</span><span class="sxs-lookup"><span data-stu-id="989fd-111">Declare Statement</span></span>](../statements/declare-statement.md)
+- [<span data-ttu-id="989fd-112">Creazione di prototipi nel codice gestito</span><span class="sxs-lookup"><span data-stu-id="989fd-112">Creating Prototypes in Managed Code</span></span>](../../../framework/interop/creating-prototypes-in-managed-code.md)
