--- a/docs/visual-basic/language-reference/error-messages/bc42358.md
+++ b/docs/visual-basic/language-reference/error-messages/bc42358.md
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC42358
 ms.assetid: 43342515-c3c8-4155-9263-c302afabcbc2
-ms.openlocfilehash: 436fa213f6bf87f78ad768b7cff70f17806fa568
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 20a12071ccecf119059e2dfd7ddb02b2ec2e272c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73198217"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415440"
 ---
-# <a name="because-this-call-is-not-awaited-execution-of-the-current-method-continues-before-the-call-is-completed"></a><span data-ttu-id="403e3-102">Non essendo possibile attendere la chiamata, l'esecuzione del metodo corrente continuerà prima del completamento della chiamata</span><span class="sxs-lookup"><span data-stu-id="403e3-102">Because this call is not awaited, execution of the current method continues before the call is completed</span></span>
+# <a name="because-this-call-is-not-awaited-execution-of-the-current-method-continues-before-the-call-is-completed"></a><span data-ttu-id="0bc66-102">Non essendo possibile attendere la chiamata, l'esecuzione del metodo corrente continuerà prima del completamento della chiamata</span><span class="sxs-lookup"><span data-stu-id="0bc66-102">Because this call is not awaited, execution of the current method continues before the call is completed</span></span>
 
-<span data-ttu-id="403e3-103">Non è possibile attendere la chiamata, pertanto l'esecuzione del metodo corrente continuerà prima del completamento della chiamata.</span><span class="sxs-lookup"><span data-stu-id="403e3-103">Because this call is not awaited, execution of the current method continues before the call is completed.</span></span> <span data-ttu-id="403e3-104">Si consiglia di applicare l'operatore `Await` al risultato della chiamata.</span><span class="sxs-lookup"><span data-stu-id="403e3-104">Consider applying the `Await` operator to the result of the call.</span></span>
+<span data-ttu-id="0bc66-103">Non è possibile attendere la chiamata, pertanto l'esecuzione del metodo corrente continuerà prima del completamento della chiamata.</span><span class="sxs-lookup"><span data-stu-id="0bc66-103">Because this call is not awaited, execution of the current method continues before the call is completed.</span></span> <span data-ttu-id="0bc66-104">Si consiglia di applicare l' `Await` operatore al risultato della chiamata.</span><span class="sxs-lookup"><span data-stu-id="0bc66-104">Consider applying the `Await` operator to the result of the call.</span></span>
 
-<span data-ttu-id="403e3-105">Il metodo corrente chiama un metodo asincrono che restituisce un <xref:System.Threading.Tasks.Task> o un <xref:System.Threading.Tasks.Task%601> e non applica l'operatore [await](../operators/await-operator.md) al risultato.</span><span class="sxs-lookup"><span data-stu-id="403e3-105">The current method calls an async method that returns a <xref:System.Threading.Tasks.Task> or a <xref:System.Threading.Tasks.Task%601> and doesn't apply the [Await](../operators/await-operator.md) operator to the result.</span></span> <span data-ttu-id="403e3-106">Con la chiamata al metodo asincrono viene avviata un'attività asincrona.</span><span class="sxs-lookup"><span data-stu-id="403e3-106">The call to the async method starts an asynchronous task.</span></span> <span data-ttu-id="403e3-107">Tuttavia, poiché non viene applicato alcun operatore `Await`, l'esecuzione del programma continua senza attendere il completamento dell'attività.</span><span class="sxs-lookup"><span data-stu-id="403e3-107">However, because no `Await` operator is applied, the program continues without waiting for the task to complete.</span></span> <span data-ttu-id="403e3-108">Nella maggior parte dei casi questo comportamento non è quello previsto.</span><span class="sxs-lookup"><span data-stu-id="403e3-108">In most cases, that behavior isn't expected.</span></span> <span data-ttu-id="403e3-109">Di solito altri aspetti del metodo chiamante dipendono dai risultati della chiamata o, come minimo, si prevede che il metodo chiamato venga completato prima della restituzione da parte del metodo contenente la chiamata.</span><span class="sxs-lookup"><span data-stu-id="403e3-109">Usually other aspects of the calling method depend on the results of the call or, minimally, the called method is expected to complete before you return from the method that contains the call.</span></span>
+<span data-ttu-id="0bc66-105">Il metodo corrente chiama un metodo asincrono che restituisce <xref:System.Threading.Tasks.Task> o <xref:System.Threading.Tasks.Task%601> e non applica l'operatore [await](../operators/await-operator.md) al risultato.</span><span class="sxs-lookup"><span data-stu-id="0bc66-105">The current method calls an async method that returns a <xref:System.Threading.Tasks.Task> or a <xref:System.Threading.Tasks.Task%601> and doesn't apply the [Await](../operators/await-operator.md) operator to the result.</span></span> <span data-ttu-id="0bc66-106">Con la chiamata al metodo asincrono viene avviata un'attività asincrona.</span><span class="sxs-lookup"><span data-stu-id="0bc66-106">The call to the async method starts an asynchronous task.</span></span> <span data-ttu-id="0bc66-107">Tuttavia, poiché non viene applicato alcun operatore `Await` , l'esecuzione del programma continua senza attendere il completamento dell'attività.</span><span class="sxs-lookup"><span data-stu-id="0bc66-107">However, because no `Await` operator is applied, the program continues without waiting for the task to complete.</span></span> <span data-ttu-id="0bc66-108">Nella maggior parte dei casi questo comportamento non è quello previsto.</span><span class="sxs-lookup"><span data-stu-id="0bc66-108">In most cases, that behavior isn't expected.</span></span> <span data-ttu-id="0bc66-109">Di solito altri aspetti del metodo chiamante dipendono dai risultati della chiamata o, come minimo, si prevede che il metodo chiamato venga completato prima della restituzione da parte del metodo contenente la chiamata.</span><span class="sxs-lookup"><span data-stu-id="0bc66-109">Usually other aspects of the calling method depend on the results of the call or, minimally, the called method is expected to complete before you return from the method that contains the call.</span></span>
 
-<span data-ttu-id="403e3-110">Un problema ugualmente importante riguarda cosa accade con le eccezioni generate nel metodo asincrono richiamato.</span><span class="sxs-lookup"><span data-stu-id="403e3-110">An equally important issue is what happens with exceptions that are raised in the called async method.</span></span> <span data-ttu-id="403e3-111">Un'eccezione generata in un metodo che restituisce <xref:System.Threading.Tasks.Task> o  <xref:System.Threading.Tasks.Task%601> viene archiviata nell'attività restituita.</span><span class="sxs-lookup"><span data-stu-id="403e3-111">An exception that’s raised in a method that returns a <xref:System.Threading.Tasks.Task> or  <xref:System.Threading.Tasks.Task%601> is stored in the returned task.</span></span> <span data-ttu-id="403e3-112">Se non si attende l'attività o si controllano in modo esplicito le eccezioni, l'eccezione viene persa.</span><span class="sxs-lookup"><span data-stu-id="403e3-112">If you don't await the task or explicitly check for exceptions, the exception is lost.</span></span> <span data-ttu-id="403e3-113">Se si attende l'attività, la relativa eccezione viene generata di nuovo.</span><span class="sxs-lookup"><span data-stu-id="403e3-113">If you await the task, its exception is rethrown.</span></span>
+<span data-ttu-id="0bc66-110">Un problema ugualmente importante riguarda cosa accade con le eccezioni generate nel metodo asincrono richiamato.</span><span class="sxs-lookup"><span data-stu-id="0bc66-110">An equally important issue is what happens with exceptions that are raised in the called async method.</span></span> <span data-ttu-id="0bc66-111">Un'eccezione generata in un metodo che restituisce <xref:System.Threading.Tasks.Task> o  <xref:System.Threading.Tasks.Task%601> viene archiviata nell'attività restituita.</span><span class="sxs-lookup"><span data-stu-id="0bc66-111">An exception that’s raised in a method that returns a <xref:System.Threading.Tasks.Task> or  <xref:System.Threading.Tasks.Task%601> is stored in the returned task.</span></span> <span data-ttu-id="0bc66-112">Se non si attende l'attività o si controllano in modo esplicito le eccezioni, l'eccezione viene persa.</span><span class="sxs-lookup"><span data-stu-id="0bc66-112">If you don't await the task or explicitly check for exceptions, the exception is lost.</span></span> <span data-ttu-id="0bc66-113">Se si attende l'attività, la relativa eccezione viene generata di nuovo.</span><span class="sxs-lookup"><span data-stu-id="0bc66-113">If you await the task, its exception is rethrown.</span></span>
 
-<span data-ttu-id="403e3-114">Come procedura consigliata, attendere sempre la chiamata.</span><span class="sxs-lookup"><span data-stu-id="403e3-114">As a best practice, you should always await the call.</span></span>
+<span data-ttu-id="0bc66-114">Come procedura consigliata, attendere sempre la chiamata.</span><span class="sxs-lookup"><span data-stu-id="0bc66-114">As a best practice, you should always await the call.</span></span>
 
-<span data-ttu-id="403e3-115">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="403e3-115">By default, this message is a warning.</span></span> <span data-ttu-id="403e3-116">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="403e3-116">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>
+<span data-ttu-id="0bc66-115">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="0bc66-115">By default, this message is a warning.</span></span> <span data-ttu-id="0bc66-116">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="0bc66-116">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>
 
-<span data-ttu-id="403e3-117">**ID errore:** BC42358</span><span class="sxs-lookup"><span data-stu-id="403e3-117">**Error ID:** BC42358</span></span>
+<span data-ttu-id="0bc66-117">**ID errore:** BC42358</span><span class="sxs-lookup"><span data-stu-id="0bc66-117">**Error ID:** BC42358</span></span>
 
-## <a name="to-address-this-warning"></a><span data-ttu-id="403e3-118">Per risolvere questo avviso</span><span class="sxs-lookup"><span data-stu-id="403e3-118">To address this warning</span></span>
+## <a name="to-address-this-warning"></a><span data-ttu-id="0bc66-118">Per risolvere questo avviso</span><span class="sxs-lookup"><span data-stu-id="0bc66-118">To address this warning</span></span>
 
-<span data-ttu-id="403e3-119">Si consideri la possibilità di eliminare l'avviso solo se si è certi che non si desidera attendere il completamento della chiamata asincrona e che il metodo chiamato non generi alcuna eccezione.</span><span class="sxs-lookup"><span data-stu-id="403e3-119">You should consider suppressing the warning only if you're sure that you don't want to wait for the asynchronous call to complete and that the called method won't raise any exceptions.</span></span> <span data-ttu-id="403e3-120">In tal caso, è possibile eliminare l'avviso assegnando il risultato dell'attività della chiamata a una variabile.</span><span class="sxs-lookup"><span data-stu-id="403e3-120">In that case, you can suppress the warning by assigning the task result of the call to a variable.</span></span>
+<span data-ttu-id="0bc66-119">Si consideri la possibilità di eliminare l'avviso solo se si è certi che non si desidera attendere il completamento della chiamata asincrona e che il metodo chiamato non generi alcuna eccezione.</span><span class="sxs-lookup"><span data-stu-id="0bc66-119">You should consider suppressing the warning only if you're sure that you don't want to wait for the asynchronous call to complete and that the called method won't raise any exceptions.</span></span> <span data-ttu-id="0bc66-120">In tal caso, è possibile eliminare l'avviso assegnando il risultato dell'attività della chiamata a una variabile.</span><span class="sxs-lookup"><span data-stu-id="0bc66-120">In that case, you can suppress the warning by assigning the task result of the call to a variable.</span></span>
 
-<span data-ttu-id="403e3-121">Nell'esempio seguente viene illustrato come generare l'avviso, come eliminarlo e come attendere la chiamata:</span><span class="sxs-lookup"><span data-stu-id="403e3-121">The following example shows how to cause the warning, how to suppress it, and how to await the call:</span></span>
+<span data-ttu-id="0bc66-121">Nell'esempio seguente viene illustrato come generare l'avviso, come eliminarlo e come attendere la chiamata:</span><span class="sxs-lookup"><span data-stu-id="0bc66-121">The following example shows how to cause the warning, how to suppress it, and how to await the call:</span></span>
 
 ```vb
 Async Function CallingMethodAsync() As Task
@@ -82,7 +82,7 @@ Async Function CalledMethodAsync(howLong As Integer) As Task
 End Function
 ```
 
-<span data-ttu-id="403e3-122">Nell'esempio, se si sceglie Call #1 o Call #2, il metodo asincrono senza attesa (`CalledMethodAsync`) termina dopo che il relativo chiamante (`CallingMethodAsync`) e il chiamante del chiamante (`StartButton_Click`) sono completati.</span><span class="sxs-lookup"><span data-stu-id="403e3-122">In the example, if you choose Call #1 or Call #2, the unawaited async method (`CalledMethodAsync`) finishes after both its caller (`CallingMethodAsync`) and the caller's caller (`StartButton_Click`) are complete.</span></span> <span data-ttu-id="403e3-123">Nell'ultima riga nell'output seguente viene mostrato quando viene completato il metodo chiamato.</span><span class="sxs-lookup"><span data-stu-id="403e3-123">The last line in the following output shows you when the called method finishes.</span></span> <span data-ttu-id="403e3-124">L'entrata e l'uscita dal gestore eventi tramite cui viene chiamato `CallingMethodAsync` nell'esempio completo sono contrassegnate nell'output.</span><span class="sxs-lookup"><span data-stu-id="403e3-124">Entry to and exit from the event handler that calls `CallingMethodAsync` in the full example are marked in the output.</span></span>
+<span data-ttu-id="0bc66-122">Nell'esempio, se si sceglie Call #1 o Call #2, il metodo asincrono senza attesa (`CalledMethodAsync`) termina dopo che il relativo chiamante (`CallingMethodAsync`) e il chiamante del chiamante (`StartButton_Click`) sono completati.</span><span class="sxs-lookup"><span data-stu-id="0bc66-122">In the example, if you choose Call #1 or Call #2, the unawaited async method (`CalledMethodAsync`) finishes after both its caller (`CallingMethodAsync`) and the caller's caller (`StartButton_Click`) are complete.</span></span> <span data-ttu-id="0bc66-123">Nell'ultima riga nell'output seguente viene mostrato quando viene completato il metodo chiamato.</span><span class="sxs-lookup"><span data-stu-id="0bc66-123">The last line in the following output shows you when the called method finishes.</span></span> <span data-ttu-id="0bc66-124">L'entrata e l'uscita dal gestore eventi tramite cui viene chiamato `CallingMethodAsync` nell'esempio completo sono contrassegnate nell'output.</span><span class="sxs-lookup"><span data-stu-id="0bc66-124">Entry to and exit from the event handler that calls `CallingMethodAsync` in the full example are marked in the output.</span></span>
 
 ```console
 Entering the Click event handler.
@@ -93,17 +93,17 @@ Exiting the Click event handler.
     Task.Delay is finished--returning from called method.
 ```
 
-## <a name="example"></a><span data-ttu-id="403e3-125">Esempio</span><span class="sxs-lookup"><span data-stu-id="403e3-125">Example</span></span>
+## <a name="example"></a><span data-ttu-id="0bc66-125">Esempio</span><span class="sxs-lookup"><span data-stu-id="0bc66-125">Example</span></span>
 
-<span data-ttu-id="403e3-126">Nell'applicazione Windows Presentation Foundation (WPF) seguente sono inclusi i metodi dell'esempio precedente.</span><span class="sxs-lookup"><span data-stu-id="403e3-126">The following Windows Presentation Foundation (WPF) application contains the methods from the previous example.</span></span> <span data-ttu-id="403e3-127">I passaggi seguenti configurano l'applicazione:</span><span class="sxs-lookup"><span data-stu-id="403e3-127">The following steps set up the application:</span></span>
+<span data-ttu-id="0bc66-126">Nell'applicazione Windows Presentation Foundation (WPF) seguente sono inclusi i metodi dell'esempio precedente.</span><span class="sxs-lookup"><span data-stu-id="0bc66-126">The following Windows Presentation Foundation (WPF) application contains the methods from the previous example.</span></span> <span data-ttu-id="0bc66-127">I passaggi seguenti configurano l'applicazione:</span><span class="sxs-lookup"><span data-stu-id="0bc66-127">The following steps set up the application:</span></span>
 
-1. <span data-ttu-id="403e3-128">Creare un'applicazione WPF e denominarla `AsyncWarning`.</span><span class="sxs-lookup"><span data-stu-id="403e3-128">Create a WPF application, and name it `AsyncWarning`.</span></span>
+1. <span data-ttu-id="0bc66-128">Creare un'applicazione WPF e denominarla `AsyncWarning`.</span><span class="sxs-lookup"><span data-stu-id="0bc66-128">Create a WPF application, and name it `AsyncWarning`.</span></span>
 
-2. <span data-ttu-id="403e3-129">Nell'Editor di codice di Visual Studio scegliere la scheda **MainWindow.xaml** .</span><span class="sxs-lookup"><span data-stu-id="403e3-129">In the Visual Studio Code Editor, choose the **MainWindow.xaml** tab.</span></span>
+2. <span data-ttu-id="0bc66-129">Nell'Editor di codice di Visual Studio scegliere la scheda **MainWindow.xaml** .</span><span class="sxs-lookup"><span data-stu-id="0bc66-129">In the Visual Studio Code Editor, choose the **MainWindow.xaml** tab.</span></span>
 
-     <span data-ttu-id="403e3-130">Se la scheda non è visibile, aprire il menu di scelta rapida per MainWindow.xaml in **Esplora soluzioni**, quindi scegliere **Visualizza codice**.</span><span class="sxs-lookup"><span data-stu-id="403e3-130">If the tab isn't visible, open the shortcut menu for MainWindow.xaml in **Solution Explorer**, and then choose **View Code**.</span></span>
+     <span data-ttu-id="0bc66-130">Se la scheda non è visibile, aprire il menu di scelta rapida per MainWindow. XAML in **Esplora soluzioni**, quindi scegliere **Visualizza codice**.</span><span class="sxs-lookup"><span data-stu-id="0bc66-130">If the tab isn't visible, open the shortcut menu for MainWindow.xaml in **Solution Explorer**, and then choose **View Code**.</span></span>
 
-3. <span data-ttu-id="403e3-131">Sostituire il codice nella visualizzazione **XAML** di MainWindow. XAML con il codice seguente:</span><span class="sxs-lookup"><span data-stu-id="403e3-131">Replace the code in the **XAML** view of MainWindow.xaml with the following code:</span></span>
+3. <span data-ttu-id="0bc66-131">Sostituire il codice nella visualizzazione **XAML** di MainWindow. XAML con il codice seguente:</span><span class="sxs-lookup"><span data-stu-id="0bc66-131">Replace the code in the **XAML** view of MainWindow.xaml with the following code:</span></span>
 
     ```xaml
     <Window x:Class="MainWindow"
@@ -117,11 +117,11 @@ Exiting the Click event handler.
     </Window>
     ```
 
-     <span data-ttu-id="403e3-132">Una finestra semplice con un pulsante e una casella di testo viene visualizzata nella visualizzazione **Progettazione** di MainWindow.xaml.</span><span class="sxs-lookup"><span data-stu-id="403e3-132">A simple window that contains a button and a text box appears in the **Design** view of MainWindow.xaml.</span></span>
+     <span data-ttu-id="0bc66-132">Una finestra semplice con un pulsante e una casella di testo viene visualizzata nella visualizzazione **Progettazione** di MainWindow.xaml.</span><span class="sxs-lookup"><span data-stu-id="0bc66-132">A simple window that contains a button and a text box appears in the **Design** view of MainWindow.xaml.</span></span>
 
-     <span data-ttu-id="403e3-133">Per altre informazioni sulla finestra di progettazione XAML, vedere [Creazione di un'interfaccia utente tramite la finestra di progettazione XAML](/visualstudio/xaml-tools/creating-a-ui-by-using-xaml-designer-in-visual-studio).</span><span class="sxs-lookup"><span data-stu-id="403e3-133">For more information about the XAML Designer, see [Creating a UI by using XAML Designer](/visualstudio/xaml-tools/creating-a-ui-by-using-xaml-designer-in-visual-studio).</span></span> <span data-ttu-id="403e3-134">Per informazioni su come compilare una semplice interfaccia utente, vedere le sezioni "Per creare un'applicazione WPF" e "Per progettare una finestra WPF MainWindow semplice" nella [Procedura dettagliata: Accesso al Web tramite Async e Await](../../../visual-basic/programming-guide/concepts/async/walkthrough-accessing-the-web-by-using-async-and-await.md).</span><span class="sxs-lookup"><span data-stu-id="403e3-134">For information about how to build your own simple UI, see the "To create a WPF application" and "To design a simple WPF MainWindow" sections of [Walkthrough: Accessing the Web by Using Async and Await](../../../visual-basic/programming-guide/concepts/async/walkthrough-accessing-the-web-by-using-async-and-await.md).</span></span>
+     <span data-ttu-id="0bc66-133">Per altre informazioni sulla finestra di progettazione XAML, vedere [Creating a UI by using XAML Designer](/visualstudio/xaml-tools/creating-a-ui-by-using-xaml-designer-in-visual-studio).</span><span class="sxs-lookup"><span data-stu-id="0bc66-133">For more information about the XAML Designer, see [Creating a UI by using XAML Designer](/visualstudio/xaml-tools/creating-a-ui-by-using-xaml-designer-in-visual-studio).</span></span> <span data-ttu-id="0bc66-134">Per informazioni su come compilare una semplice interfaccia utente, vedere le sezioni "Per creare un'applicazione WPF" e "Per progettare una finestra WPF MainWindow semplice" nella [Procedura dettagliata: Accesso al Web tramite Async e Await](../../programming-guide/concepts/async/walkthrough-accessing-the-web-by-using-async-and-await.md).</span><span class="sxs-lookup"><span data-stu-id="0bc66-134">For information about how to build your own simple UI, see the "To create a WPF application" and "To design a simple WPF MainWindow" sections of [Walkthrough: Accessing the Web by Using Async and Await](../../programming-guide/concepts/async/walkthrough-accessing-the-web-by-using-async-and-await.md).</span></span>
 
-4. <span data-ttu-id="403e3-135">Sostituire il codice in MainWindow.xaml.vb con quello riportato di seguito.</span><span class="sxs-lookup"><span data-stu-id="403e3-135">Replace the code in MainWindow.xaml.vb with the following code.</span></span>
+4. <span data-ttu-id="0bc66-135">Sostituire il codice in MainWindow.xaml.vb con quello riportato di seguito.</span><span class="sxs-lookup"><span data-stu-id="0bc66-135">Replace the code in MainWindow.xaml.vb with the following code.</span></span>
 
     ```vb
     Class MainWindow
@@ -201,11 +201,11 @@ Exiting the Click event handler.
     ' Exiting the Click event handler.
     ```
 
-5. <span data-ttu-id="403e3-136">Premere il tasto F5 per eseguire il programma e quindi scegliere il pulsante **Start** .</span><span class="sxs-lookup"><span data-stu-id="403e3-136">Choose the F5 key to run the program, and then choose the **Start** button.</span></span>
+5. <span data-ttu-id="0bc66-136">Premere F5 per eseguire il programma e quindi scegliere il pulsante **Avvia**.</span><span class="sxs-lookup"><span data-stu-id="0bc66-136">Choose the F5 key to run the program, and then choose the **Start** button.</span></span>
 
-     <span data-ttu-id="403e3-137">L'output previsto viene visualizzato alla fine del codice.</span><span class="sxs-lookup"><span data-stu-id="403e3-137">The expected output appears at the end of the code.</span></span>
+     <span data-ttu-id="0bc66-137">L'output previsto viene visualizzato alla fine del codice.</span><span class="sxs-lookup"><span data-stu-id="0bc66-137">The expected output appears at the end of the code.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="403e3-138">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="403e3-138">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0bc66-138">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0bc66-138">See also</span></span>
 
-- [<span data-ttu-id="403e3-139">Operatore Await</span><span class="sxs-lookup"><span data-stu-id="403e3-139">Await Operator</span></span>](../operators/await-operator.md)
-- [<span data-ttu-id="403e3-140">Programmazione asincrona con Async e Await</span><span class="sxs-lookup"><span data-stu-id="403e3-140">Asynchronous Programming with Async and Await</span></span>](../../programming-guide/concepts/async/index.md)
+- [<span data-ttu-id="0bc66-139">Operatore await</span><span class="sxs-lookup"><span data-stu-id="0bc66-139">Await Operator</span></span>](../operators/await-operator.md)
+- [<span data-ttu-id="0bc66-140">Programmazione asincrona con Async e await</span><span class="sxs-lookup"><span data-stu-id="0bc66-140">Asynchronous Programming with Async and Await</span></span>](../../programming-guide/concepts/async/index.md)
