--- a/docs/visual-basic/misc/bc30345.md
+++ b/docs/visual-basic/misc/bc30345.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ByRef' o 'ByVal'
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per parametri dichiarati come ' ByRef ' o ' ByVal '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30345
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30345
 ms.assetid: 82af13b1-2641-4881-b25a-c782974bded1
-ms.openlocfilehash: 8834f84341f4b2746b72345b640cc06556f033dc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bcb03064422960bf57fc249e36fafe95e9982880
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663802"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414129"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a><span data-ttu-id="979d7-102">«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ByRef' o 'ByVal'</span><span class="sxs-lookup"><span data-stu-id="979d7-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by parameters declared 'ByRef' or 'ByVal'</span></span>
-<span data-ttu-id="979d7-103">Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per un parametro dichiarato come `ByRef` o `ByVal`.</span><span class="sxs-lookup"><span data-stu-id="979d7-103">You have attempted to overload a method with another method that differs from the first only by a parameter declared as `ByRef` or `ByVal`.</span></span>  
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a><span data-ttu-id="5ac6a-102">' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per parametri dichiarati come ' ByRef ' o ' ByVal '</span><span class="sxs-lookup"><span data-stu-id="5ac6a-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by parameters declared 'ByRef' or 'ByVal'</span></span>
+<span data-ttu-id="5ac6a-103">Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per un parametro dichiarato come `ByRef` o `ByVal`.</span><span class="sxs-lookup"><span data-stu-id="5ac6a-103">You have attempted to overload a method with another method that differs from the first only by a parameter declared as `ByRef` or `ByVal`.</span></span>  
   
- <span data-ttu-id="979d7-104">**ID errore:** BC30345</span><span class="sxs-lookup"><span data-stu-id="979d7-104">**Error ID:** BC30345</span></span>  
+ <span data-ttu-id="5ac6a-104">**ID errore:** BC30345</span><span class="sxs-lookup"><span data-stu-id="5ac6a-104">**Error ID:** BC30345</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="979d7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="979d7-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5ac6a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5ac6a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="979d7-106">Verificare che i metodi si differenzino per il nome del parametro `ByRef` o `ByVal` .</span><span class="sxs-lookup"><span data-stu-id="979d7-106">Ensure that the methods are differentiated by more than the name of the `ByRef` or `ByVal` parameter.</span></span>  
+- <span data-ttu-id="5ac6a-106">Verificare che i metodi si differenzino per il nome del parametro `ByRef` o `ByVal` .</span><span class="sxs-lookup"><span data-stu-id="5ac6a-106">Ensure that the methods are differentiated by more than the name of the `ByRef` or `ByVal` parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="979d7-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="979d7-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5ac6a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5ac6a-107">See also</span></span>
 
-- [<span data-ttu-id="979d7-108">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="979d7-108">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="979d7-109">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="979d7-109">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [<span data-ttu-id="5ac6a-108">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="5ac6a-108">Procedure Overloading</span></span>](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="5ac6a-109">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="5ac6a-109">Considerations in Overloading Procedures</span></span>](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
