--- a/docs/visual-basic/misc/bc30359.md
+++ b/docs/visual-basic/misc/bc30359.md
@@ -1,5 +1,5 @@
 ---
-title: "'Default' può essere applicato solo un nome di proprietà in un <type>"
+title: Default' può essere applicato solo a un nome di proprietà in una <type>
 ms.date: 07/20/2015
 f1_keywords:
 - bc30359
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30359
 ms.assetid: d8dd0aa6-ebe1-4601-beec-130edc12f81e
-ms.openlocfilehash: 924036dbad2f103b94e0de2dfc7de35e3eb13512
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 89f5f2896f37e970e470e5886e111f9fe8883444
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663735"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414103"
 ---
-# <a name="default-can-be-applied-to-only-one-property-name-in-a-type"></a><span data-ttu-id="c6532-102">'Default' può essere applicato solo un nome di proprietà in un \<tipo ></span><span class="sxs-lookup"><span data-stu-id="c6532-102">'Default' can be applied to only one property name in a \<type></span></span>
-<span data-ttu-id="c6532-103">Si è provato ad applicare `Default` a più di un nome di proprietà all'interno di una classe, di un'interfaccia o di una struttura.</span><span class="sxs-lookup"><span data-stu-id="c6532-103">You have attempted to apply `Default` to more than one property name within a class, interface, or structure.</span></span>  
+# <a name="default-can-be-applied-to-only-one-property-name-in-a-type"></a><span data-ttu-id="1ee86-102">Default' può essere applicato solo a un nome di proprietà in una \<type></span><span class="sxs-lookup"><span data-stu-id="1ee86-102">'Default' can be applied to only one property name in a \<type></span></span>
+<span data-ttu-id="1ee86-103">Si è provato ad applicare `Default` a più di un nome di proprietà all'interno di una classe, di un'interfaccia o di una struttura.</span><span class="sxs-lookup"><span data-stu-id="1ee86-103">You have attempted to apply `Default` to more than one property name within a class, interface, or structure.</span></span>  
   
- <span data-ttu-id="c6532-104">**ID errore:** BC30359</span><span class="sxs-lookup"><span data-stu-id="c6532-104">**Error ID:** BC30359</span></span>  
+ <span data-ttu-id="1ee86-104">**ID errore:** BC30359</span><span class="sxs-lookup"><span data-stu-id="1ee86-104">**Error ID:** BC30359</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c6532-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c6532-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1ee86-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1ee86-105">To correct this error</span></span>  
   
-- <span data-ttu-id="c6532-106">Rimuovere tutte le dichiarazioni `Default` tranne una.</span><span class="sxs-lookup"><span data-stu-id="c6532-106">Remove all but one of the `Default` declarations.</span></span>  
+- <span data-ttu-id="1ee86-106">Rimuovere tutte le dichiarazioni `Default` tranne una.</span><span class="sxs-lookup"><span data-stu-id="1ee86-106">Remove all but one of the `Default` declarations.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c6532-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c6532-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1ee86-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1ee86-107">See also</span></span>
 
-- [<span data-ttu-id="c6532-108">Default</span><span class="sxs-lookup"><span data-stu-id="c6532-108">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+- [<span data-ttu-id="1ee86-108">Default</span><span class="sxs-lookup"><span data-stu-id="1ee86-108">Default</span></span>](../language-reference/modifiers/default.md)
