--- a/docs/visual-basic/misc/bc30360.md
+++ b/docs/visual-basic/misc/bc30360.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà '<propertyname>'deve essere dichiarata 'Default' perché esegue l'override di una proprietà predefinita nella base'<name>'
+title: La proprietà' <propertyname> ' deve essere dichiarata come ' default ' perché esegue l'override di una proprietà predefinita nella base ' <name> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30360
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30360
 ms.assetid: 6acbf77c-247e-4e49-9784-4c05cc0df748
-ms.openlocfilehash: 2773cfbe0de7789b3494737b3f659146db42d1db
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 42811fcf71c12fecbd4b8bb7cc9cb6c44aed0e37
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663755"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412780"
 ---
-# <a name="property-propertyname-must-be-declared-default-because-it-overrides-a-default-property-on-the-base-name"></a><span data-ttu-id="1a9ae-102">Proprietà '\<NomeProprietà >' deve essere dichiarata 'Default' perché esegue l'override di una proprietà predefinita nella base '\<nome >'</span><span class="sxs-lookup"><span data-stu-id="1a9ae-102">Property '\<propertyname>' must be declared 'Default' because it overrides a default property on the base '\<name>'</span></span>
-<span data-ttu-id="1a9ae-103">Un'istruzione `Property` nel codice esegue l'override di una proprietà `Default` nella classe base, struttura o interfaccia e deve quindi essere dichiarata `Default`.</span><span class="sxs-lookup"><span data-stu-id="1a9ae-103">A `Property` statement in your code overrides a `Default` property on the base class, structure, or interface and therefore needs to be declared `Default`.</span></span>  
+# <a name="property-propertyname-must-be-declared-default-because-it-overrides-a-default-property-on-the-base-name"></a><span data-ttu-id="493f9-102">La proprietà' \<propertyname> ' deve essere dichiarata come ' default ' perché esegue l'override di una proprietà predefinita nella base ' \<name> '</span><span class="sxs-lookup"><span data-stu-id="493f9-102">Property '\<propertyname>' must be declared 'Default' because it overrides a default property on the base '\<name>'</span></span>
+<span data-ttu-id="493f9-103">Un'istruzione `Property` nel codice esegue l'override di una proprietà `Default` nella classe base, struttura o interfaccia e deve quindi essere dichiarata `Default`.</span><span class="sxs-lookup"><span data-stu-id="493f9-103">A `Property` statement in your code overrides a `Default` property on the base class, structure, or interface and therefore needs to be declared `Default`.</span></span>  
   
- <span data-ttu-id="1a9ae-104">**ID errore:** BC30360</span><span class="sxs-lookup"><span data-stu-id="1a9ae-104">**Error ID:** BC30360</span></span>  
+ <span data-ttu-id="493f9-104">**ID errore:** BC30360</span><span class="sxs-lookup"><span data-stu-id="493f9-104">**Error ID:** BC30360</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1a9ae-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1a9ae-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="493f9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="493f9-105">To correct this error</span></span>  
   
-- <span data-ttu-id="1a9ae-106">Dichiarare la proprietà `Default`.</span><span class="sxs-lookup"><span data-stu-id="1a9ae-106">Declare the property `Default`.</span></span>  
+- <span data-ttu-id="493f9-106">Dichiarare la proprietà `Default`.</span><span class="sxs-lookup"><span data-stu-id="493f9-106">Declare the property `Default`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1a9ae-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1a9ae-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="493f9-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="493f9-107">See also</span></span>
 
-- [<span data-ttu-id="1a9ae-108">Default</span><span class="sxs-lookup"><span data-stu-id="1a9ae-108">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+- [<span data-ttu-id="493f9-108">Default</span><span class="sxs-lookup"><span data-stu-id="493f9-108">Default</span></span>](../language-reference/modifiers/default.md)
