--- a/docs/visual-basic/misc/bc30633.md
+++ b/docs/visual-basic/misc/bc30633.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30633
 ms.assetid: 5041c365-87b0-4e98-9f43-181fde6f9650
-ms.openlocfilehash: c96f6c1de37b94636a2274c79debead098f1b463
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: efcc6bd959eda17730b56b778a5a50ea145b5c09
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646636"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415180"
 ---
-# <a name="set-statement-must-end-with-a-matching-end-set"></a><span data-ttu-id="40026-102">L'istruzione 'Set' deve terminare con un oggetto 'End Set' corrispondente</span><span class="sxs-lookup"><span data-stu-id="40026-102">'Set' statement must end with a matching 'End Set'</span></span>
-<span data-ttu-id="40026-103">Le routine della proprietà`Set` devono terminare con un'istruzione `End Set` .</span><span class="sxs-lookup"><span data-stu-id="40026-103">`Set` property procedures must end with an `End Set` statement.</span></span>  
+# <a name="set-statement-must-end-with-a-matching-end-set"></a><span data-ttu-id="f9124-102">L'istruzione 'Set' deve terminare con un oggetto 'End Set' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f9124-102">'Set' statement must end with a matching 'End Set'</span></span>
+<span data-ttu-id="f9124-103">Le routine della proprietà`Set` devono terminare con un'istruzione `End Set` .</span><span class="sxs-lookup"><span data-stu-id="f9124-103">`Set` property procedures must end with an `End Set` statement.</span></span>  
   
- <span data-ttu-id="40026-104">**ID errore:** BC30633</span><span class="sxs-lookup"><span data-stu-id="40026-104">**Error ID:** BC30633</span></span>  
+ <span data-ttu-id="f9124-104">**ID errore:** BC30633</span><span class="sxs-lookup"><span data-stu-id="f9124-104">**Error ID:** BC30633</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="40026-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="40026-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f9124-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f9124-105">To correct this error</span></span>  
   
-- <span data-ttu-id="40026-106">Verificare che la routine della proprietà `Set` termini con un costrutto `End Set` .</span><span class="sxs-lookup"><span data-stu-id="40026-106">Make sure that the `Set` property procedure ends with an `End Set` construct.</span></span>  
+- <span data-ttu-id="f9124-106">Verificare che la routine della proprietà `Set` termini con un costrutto `End Set` .</span><span class="sxs-lookup"><span data-stu-id="f9124-106">Make sure that the `Set` property procedure ends with an `End Set` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="40026-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="40026-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f9124-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f9124-107">See also</span></span>
 
-- [<span data-ttu-id="40026-108">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="40026-108">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="f9124-108">Property Statement</span><span class="sxs-lookup"><span data-stu-id="f9124-108">Property Statement</span></span>](../language-reference/statements/property-statement.md)
