--- a/docs/visual-basic/misc/bc30642.md
+++ b/docs/visual-basic/misc/bc30642.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30642
 ms.assetid: 3eaaf781-be9a-4466-a127-9e57fc9d6b6d
-ms.openlocfilehash: 696838fa84b72b076e535ba0d92388bc69ff6835
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7304c316a275faa179f984526d2f1529bec928b5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646530"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415102"
 ---
-# <a name="optional-and-paramarray-cannot-be-combined"></a><span data-ttu-id="1b127-102">'Optional' e 'ParamArray' non possono essere combinati</span><span class="sxs-lookup"><span data-stu-id="1b127-102">'Optional' and 'ParamArray' cannot be combined</span></span>
-<span data-ttu-id="1b127-103">I modificatori `Optional` e `ParamArray` si escludono reciprocamente.</span><span class="sxs-lookup"><span data-stu-id="1b127-103">The `Optional` and `ParamArray` modifiers are mutually exclusive.</span></span>  
+# <a name="optional-and-paramarray-cannot-be-combined"></a><span data-ttu-id="b0224-102">'Optional' e 'ParamArray' non possono essere combinati</span><span class="sxs-lookup"><span data-stu-id="b0224-102">'Optional' and 'ParamArray' cannot be combined</span></span>
+<span data-ttu-id="b0224-103">I modificatori `Optional` e `ParamArray` si escludono reciprocamente.</span><span class="sxs-lookup"><span data-stu-id="b0224-103">The `Optional` and `ParamArray` modifiers are mutually exclusive.</span></span>  
   
- <span data-ttu-id="1b127-104">**ID errore:** BC30642</span><span class="sxs-lookup"><span data-stu-id="1b127-104">**Error ID:** BC30642</span></span>  
+ <span data-ttu-id="b0224-104">**ID errore:** BC30642</span><span class="sxs-lookup"><span data-stu-id="b0224-104">**Error ID:** BC30642</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1b127-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1b127-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b0224-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b0224-105">To correct this error</span></span>  
   
-- <span data-ttu-id="1b127-106">Specificare `ParamArray` o `Optional`, ma non entrambi.</span><span class="sxs-lookup"><span data-stu-id="1b127-106">Specify either `ParamArray` or `Optional`, but not both.</span></span>  
+- <span data-ttu-id="b0224-106">Specificare `ParamArray` o `Optional`, ma non entrambi.</span><span class="sxs-lookup"><span data-stu-id="b0224-106">Specify either `ParamArray` or `Optional`, but not both.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1b127-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1b127-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b0224-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b0224-107">See also</span></span>
 
-- [<span data-ttu-id="1b127-108">ParamArray</span><span class="sxs-lookup"><span data-stu-id="1b127-108">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [<span data-ttu-id="1b127-109">Optional</span><span class="sxs-lookup"><span data-stu-id="1b127-109">Optional</span></span>](../../visual-basic/language-reference/modifiers/optional.md)
+- [<span data-ttu-id="b0224-108">ParamArray</span><span class="sxs-lookup"><span data-stu-id="b0224-108">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="b0224-109">Facoltativo</span><span class="sxs-lookup"><span data-stu-id="b0224-109">Optional</span></span>](../language-reference/modifiers/optional.md)
