--- a/docs/visual-basic/misc/bc30654.md
+++ b/docs/visual-basic/misc/bc30654.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30654
 ms.assetid: af0fb1fc-1b2e-4cae-9768-10965cda5506
-ms.openlocfilehash: bb18232cd2fda0ad1f683cf48212abfdd3e4c06c
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 56a712e687a5a9bded5eca8e73193323f536f2b5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61762071"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415037"
 ---
-# <a name="return-statement-in-a-function-get-or-operator-must-return-a-value"></a><span data-ttu-id="a4126-102">L'istruzione 'Return' all'interno di un Function, un Get o un Operator deve restituire un valore</span><span class="sxs-lookup"><span data-stu-id="a4126-102">'Return' statement in a Function, Get, or Operator must return a value</span></span>
-<span data-ttu-id="a4126-103">Le istruzioni`Return` devono essere usate per restituire un valore a una routine chiamante.</span><span class="sxs-lookup"><span data-stu-id="a4126-103">`Return` statements must be used to return a value to a calling procedure.</span></span> <span data-ttu-id="a4126-104">Non è possibile usare le istruzioni `Return` per controllare il flusso di programma.</span><span class="sxs-lookup"><span data-stu-id="a4126-104">You cannot use `Return` statements by themselves to control program flow.</span></span>  
+# <a name="return-statement-in-a-function-get-or-operator-must-return-a-value"></a><span data-ttu-id="b71af-102">L'istruzione 'Return' all'interno di un Function, un Get o un Operator deve restituire un valore</span><span class="sxs-lookup"><span data-stu-id="b71af-102">'Return' statement in a Function, Get, or Operator must return a value</span></span>
+<span data-ttu-id="b71af-103">Le istruzioni`Return` devono essere usate per restituire un valore a una routine chiamante.</span><span class="sxs-lookup"><span data-stu-id="b71af-103">`Return` statements must be used to return a value to a calling procedure.</span></span> <span data-ttu-id="b71af-104">Non è possibile usare le istruzioni `Return` per controllare il flusso di programma.</span><span class="sxs-lookup"><span data-stu-id="b71af-104">You cannot use `Return` statements by themselves to control program flow.</span></span>  
   
- <span data-ttu-id="a4126-105">**ID errore:** BC30654</span><span class="sxs-lookup"><span data-stu-id="a4126-105">**Error ID:** BC30654</span></span>  
+ <span data-ttu-id="b71af-105">**ID errore:** BC30654</span><span class="sxs-lookup"><span data-stu-id="b71af-105">**Error ID:** BC30654</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a4126-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a4126-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b71af-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b71af-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="a4126-107">Specificare un valore che la funzione o la routine può restituire.</span><span class="sxs-lookup"><span data-stu-id="a4126-107">Specify a value that the function or procedure can return.</span></span>  
+1. <span data-ttu-id="b71af-107">Specificare un valore che la funzione o la routine può restituire.</span><span class="sxs-lookup"><span data-stu-id="b71af-107">Specify a value that the function or procedure can return.</span></span>  
   
-2. <span data-ttu-id="a4126-108">Usare l'istruzione `End` per determinare l'uscita del programma dalla routine corrente.</span><span class="sxs-lookup"><span data-stu-id="a4126-108">Use the `End` statement to cause the program to exit the current procedure.</span></span>  
+2. <span data-ttu-id="b71af-108">Usare l'istruzione `End` per determinare l'uscita del programma dalla routine corrente.</span><span class="sxs-lookup"><span data-stu-id="b71af-108">Use the `End` statement to cause the program to exit the current procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a4126-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a4126-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b71af-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b71af-109">See also</span></span>
 
-- [<span data-ttu-id="a4126-110">Istruzione Return</span><span class="sxs-lookup"><span data-stu-id="a4126-110">Return Statement</span></span>](../../visual-basic/language-reference/statements/return-statement.md)
-- [<span data-ttu-id="a4126-111">Fine \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="a4126-111">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [<span data-ttu-id="b71af-110">Return (istruzione)</span><span class="sxs-lookup"><span data-stu-id="b71af-110">Return Statement</span></span>](../language-reference/statements/return-statement.md)
+- [<span data-ttu-id="b71af-111">\<keyword>Istruzione End</span><span class="sxs-lookup"><span data-stu-id="b71af-111">End \<keyword> Statement</span></span>](../language-reference/statements/end-keyword-statement.md)
