--- a/docs/visual-basic/misc/bc30657.md
+++ b/docs/visual-basic/misc/bc30657.md
@@ -1,5 +1,5 @@
 ---
-title: "'<procedurename>' contiene un tipo restituito non supportato o tipi di parametro che non sono supportati"
+title: "' <procedurename> ' contiene un tipo restituito non supportato o tipi di parametri non supportati"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30657
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30657
 ms.assetid: dd28b718-6a88-444c-9844-672b93628c16
-ms.openlocfilehash: ffd1bd7b9cb2c1f366a474ef896e22764cd124ce
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 04b5c4152ceee6bceea4dbf894d11539c719d9ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646449"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415011"
 ---
-# <a name="procedurename-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a><span data-ttu-id="fbfd4-102">'\<nomeroutine >' contiene un tipo restituito non supportato o tipi di parametro che non sono supportati</span><span class="sxs-lookup"><span data-stu-id="fbfd4-102">'\<procedurename>' has a return type that is not supported or parameter types that are not supported</span></span>
-<span data-ttu-id="fbfd4-103">Una routine è dichiarata con parametri o un tipo restituito non può essere rappresentato da Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="fbfd4-103">A procedure is declared with parameters or a return type that cannot be represented by Visual Studio.</span></span>  
+# <a name="procedurename-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a><span data-ttu-id="b6b4a-102">' \<procedurename> ' contiene un tipo restituito non supportato o tipi di parametri non supportati</span><span class="sxs-lookup"><span data-stu-id="b6b4a-102">'\<procedurename>' has a return type that is not supported or parameter types that are not supported</span></span>
+<span data-ttu-id="b6b4a-103">Una routine viene dichiarata con parametri o un tipo restituito che non può essere rappresentato da Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="b6b4a-103">A procedure is declared with parameters or a return type that cannot be represented by Visual Studio.</span></span>  
   
- <span data-ttu-id="fbfd4-104">**ID errore:** BC30657</span><span class="sxs-lookup"><span data-stu-id="fbfd4-104">**Error ID:** BC30657</span></span>  
+ <span data-ttu-id="b6b4a-104">**ID errore:** BC30657</span><span class="sxs-lookup"><span data-stu-id="b6b4a-104">**Error ID:** BC30657</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fbfd4-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fbfd4-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b6b4a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b6b4a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="fbfd4-106">Definire i tipi restituiti o parametri come un tipo supportato.</span><span class="sxs-lookup"><span data-stu-id="fbfd4-106">Define the return types or parameters as a supported type.</span></span>  
+- <span data-ttu-id="b6b4a-106">Definire i tipi restituiti o parametri come un tipo supportato.</span><span class="sxs-lookup"><span data-stu-id="b6b4a-106">Define the return types or parameters as a supported type.</span></span>  
   
-- <span data-ttu-id="fbfd4-107">Sviluppare un nuovo tipo che descrive i dati usati da questa routine.</span><span class="sxs-lookup"><span data-stu-id="fbfd4-107">Develop a new type that describes the data used by this procedure.</span></span>  
+- <span data-ttu-id="b6b4a-107">Sviluppare un nuovo tipo che descrive i dati usati da questa routine.</span><span class="sxs-lookup"><span data-stu-id="b6b4a-107">Develop a new type that describes the data used by this procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fbfd4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fbfd4-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b6b4a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b6b4a-108">See also</span></span>
 
-- [<span data-ttu-id="fbfd4-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="fbfd4-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
+- [<span data-ttu-id="b6b4a-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="b6b4a-109">Data Types</span></span>](../language-reference/data-types/index.md)
