--- a/docs/visual-basic/misc/bc30664.md
+++ b/docs/visual-basic/misc/bc30664.md
@@ -1,5 +1,5 @@
 ---
-title: Le conversioni da '<typename1>'a'<typename2>' deve essere esplicita
+title: Le conversioni da '<typename1>' a '<typename2>' deve essere esplicita
 ms.date: 07/20/2015
 f1_keywords:
 - bc30664
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30664
 ms.assetid: 84c0ece9-d5be-46de-b985-3ea010f3a181
-ms.openlocfilehash: 732775792ec1a0336469aac4f1711989fd3f39f7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c2c2d69a2102710eb612fe0e40151ff7f7cad196
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646425"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414959"
 ---
-# <a name="conversions-from-typename1-to-typename2-must-be-explicit"></a><span data-ttu-id="1db1d-102">Le conversioni da '\<NomeTipo1 >' a '\<in NomeTipo2 >' deve essere esplicita</span><span class="sxs-lookup"><span data-stu-id="1db1d-102">Conversions from '\<typename1>' to '\<typename2>' must be explicit</span></span>
-<span data-ttu-id="1db1d-103">Questa conversione non può essere eseguita in modo implicito.</span><span class="sxs-lookup"><span data-stu-id="1db1d-103">This conversion cannot be accomplished implicitly.</span></span>  
+# <a name="conversions-from-typename1-to-typename2-must-be-explicit"></a><span data-ttu-id="11b46-102">Le conversioni da '\<typename1>' a '\<typename2>' deve essere esplicita</span><span class="sxs-lookup"><span data-stu-id="11b46-102">Conversions from '\<typename1>' to '\<typename2>' must be explicit</span></span>
+<span data-ttu-id="11b46-103">Questa conversione non può essere eseguita in modo implicito.</span><span class="sxs-lookup"><span data-stu-id="11b46-103">This conversion cannot be accomplished implicitly.</span></span>  
   
- <span data-ttu-id="1db1d-104">**ID errore:** BC30664</span><span class="sxs-lookup"><span data-stu-id="1db1d-104">**Error ID:** BC30664</span></span>  
+ <span data-ttu-id="11b46-104">**ID errore:** BC30664</span><span class="sxs-lookup"><span data-stu-id="11b46-104">**Error ID:** BC30664</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1db1d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1db1d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="11b46-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="11b46-105">To correct this error</span></span>  
   
-- <span data-ttu-id="1db1d-106">Usare `CType`o una delle funzioni di conversione specifiche, ad esempio `CInt` o `CDec`.</span><span class="sxs-lookup"><span data-stu-id="1db1d-106">Use the `CType`, or one of the specific conversion functions, such as `CInt` or `CDec`.</span></span>  
+- <span data-ttu-id="11b46-106">Usare `CType`o una delle funzioni di conversione specifiche, ad esempio `CInt` o `CDec`.</span><span class="sxs-lookup"><span data-stu-id="11b46-106">Use the `CType`, or one of the specific conversion functions, such as `CInt` or `CDec`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1db1d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1db1d-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="11b46-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="11b46-107">See also</span></span>
 
-- [<span data-ttu-id="1db1d-108">Funzioni di conversione del tipo</span><span class="sxs-lookup"><span data-stu-id="1db1d-108">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [<span data-ttu-id="11b46-108">CString</span><span class="sxs-lookup"><span data-stu-id="11b46-108">Type Conversion Functions</span></span>](../language-reference/functions/type-conversion-functions.md)
