--- a/docs/visual-basic/misc/bc30665.md
+++ b/docs/visual-basic/misc/bc30665.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30665
 ms.assetid: 7c228087-39ea-4b30-a410-6ba711e67e5e
-ms.openlocfilehash: 71727cc191f8ab1663589e64fb9ee5ce076684f4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 92fccbd2faac5580d28fef8cc02b51b23715f136
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646421"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414946"
 ---
-# <a name="throw-operand-must-derive-from-systemexception"></a><span data-ttu-id="a315d-102">L'operando 'Throw' deve derivare da 'System.Exception'</span><span class="sxs-lookup"><span data-stu-id="a315d-102">'Throw' operand must derive from 'System.Exception'</span></span>
-<span data-ttu-id="a315d-103">L'argomento fornito a `Throw` deve essere un'istanza di `System.Exception` o un'istanza di una classe derivata da `System.Exception`.</span><span class="sxs-lookup"><span data-stu-id="a315d-103">The argument supplied to `Throw` must either be an instance of `System.Exception` or an instance of a class derived from `System.Exception`.</span></span>  
+# <a name="throw-operand-must-derive-from-systemexception"></a><span data-ttu-id="eccaf-102">L'operando 'Throw' deve derivare da 'System.Exception'</span><span class="sxs-lookup"><span data-stu-id="eccaf-102">'Throw' operand must derive from 'System.Exception'</span></span>
+<span data-ttu-id="eccaf-103">L'argomento fornito a `Throw` deve essere un'istanza di `System.Exception` o un'istanza di una classe derivata da `System.Exception`.</span><span class="sxs-lookup"><span data-stu-id="eccaf-103">The argument supplied to `Throw` must either be an instance of `System.Exception` or an instance of a class derived from `System.Exception`.</span></span>  
   
- <span data-ttu-id="a315d-104">**ID errore:** BC30665</span><span class="sxs-lookup"><span data-stu-id="a315d-104">**Error ID:** BC30665</span></span>  
+ <span data-ttu-id="eccaf-104">**ID errore:** BC30665</span><span class="sxs-lookup"><span data-stu-id="eccaf-104">**Error ID:** BC30665</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a315d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a315d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="eccaf-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="eccaf-105">To correct this error</span></span>  
   
-- <span data-ttu-id="a315d-106">Usare un argomento derivato da `System.Exception`, come nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="a315d-106">Use an argument derived from `System.Exception`, as in the following example.</span></span>  
+- <span data-ttu-id="eccaf-106">Usare un argomento derivato da `System.Exception`, come nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="eccaf-106">Use an argument derived from `System.Exception`, as in the following example.</span></span>  
   
     ```vb
     Throw New System.Exception("This is an error.")  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="a315d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a315d-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="eccaf-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="eccaf-107">See also</span></span>
 
-- [<span data-ttu-id="a315d-108">Istruzione Throw</span><span class="sxs-lookup"><span data-stu-id="a315d-108">Throw Statement</span></span>](../../visual-basic/language-reference/statements/throw-statement.md)
-- [<span data-ttu-id="a315d-109">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="a315d-109">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="eccaf-108">Istruzione throw</span><span class="sxs-lookup"><span data-stu-id="eccaf-108">Throw Statement</span></span>](../language-reference/statements/throw-statement.md)
+- [<span data-ttu-id="eccaf-109">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="eccaf-109">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
 - <xref:System.Exception?displayProperty=nameWithType>
-- [<span data-ttu-id="a315d-110">Gestione e generazione di eccezioni in .NET</span><span class="sxs-lookup"><span data-stu-id="a315d-110">Handling and throwing exceptions in .NET</span></span>](../../standard/exceptions/index.md)
+- [<span data-ttu-id="eccaf-110">Gestione e generazione di eccezioni in .NET</span><span class="sxs-lookup"><span data-stu-id="eccaf-110">Handling and throwing exceptions in .NET</span></span>](../../standard/exceptions/index.md)
