--- a/docs/visual-basic/misc/bc30677.md
+++ b/docs/visual-basic/misc/bc30677.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30677
 ms.assetid: b71eb2f0-0bb2-4aeb-94ec-5c37ab960d9e
-ms.openlocfilehash: b1dcb68478d038150a647ac4a67b0916787743c7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5de9959a5811801ae69cca12dadbe8d10cbccfc9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646388"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414842"
 ---
-# <a name="addhandler-or-removehandler-statement-event-operand-must-be-a-dot-qualified-expression-or-a-simple-name"></a><span data-ttu-id="322ab-102">L'operando di evento dell'istruzione 'AddHandler' o 'RemoveHandler' deve essere un'espressione completa di punto o un nome semplice</span><span class="sxs-lookup"><span data-stu-id="322ab-102">'AddHandler' or 'RemoveHandler' statement event operand must be a dot-qualified expression or a simple name</span></span>
-<span data-ttu-id="322ab-103">L'elemento specificato per l'argomento dell'evento per `AddHandler` o `RemoveHandler` non è riconosciuto come un evento.</span><span class="sxs-lookup"><span data-stu-id="322ab-103">The item specified for the event argument to `AddHandler` or `RemoveHandler` is not recognized as an event.</span></span>  
+# <a name="addhandler-or-removehandler-statement-event-operand-must-be-a-dot-qualified-expression-or-a-simple-name"></a><span data-ttu-id="d8966-102">L'operando di evento dell'istruzione 'AddHandler' o 'RemoveHandler' deve essere un'espressione completa di punto o un nome semplice</span><span class="sxs-lookup"><span data-stu-id="d8966-102">'AddHandler' or 'RemoveHandler' statement event operand must be a dot-qualified expression or a simple name</span></span>
+<span data-ttu-id="d8966-103">L'elemento specificato per l'argomento dell'evento per `AddHandler` o `RemoveHandler` non è riconosciuto come un evento.</span><span class="sxs-lookup"><span data-stu-id="d8966-103">The item specified for the event argument to `AddHandler` or `RemoveHandler` is not recognized as an event.</span></span>  
   
- <span data-ttu-id="322ab-104">**ID errore:** BC30677</span><span class="sxs-lookup"><span data-stu-id="322ab-104">**Error ID:** BC30677</span></span>  
+ <span data-ttu-id="d8966-104">**ID errore:** BC30677</span><span class="sxs-lookup"><span data-stu-id="d8966-104">**Error ID:** BC30677</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="322ab-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="322ab-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d8966-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d8966-105">To correct this error</span></span>  
   
-- <span data-ttu-id="322ab-106">Specificare il nome dell'oggetto che genera l'evento seguito da un punto (`.`) e il nome dell'evento come nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="322ab-106">Specify the name of the object that raises the event followed by a dot (`.`) and the event name as in the following example.</span></span>  
+- <span data-ttu-id="d8966-106">Specificare il nome dell'oggetto che genera l'evento seguito da un punto (`.`) e il nome dell'evento come nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="d8966-106">Specify the name of the object that raises the event followed by a dot (`.`) and the event name as in the following example.</span></span>  
   
      [!code-vb[VbVbalrEventError#30](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#30)]  
   
-## <a name="see-also"></a><span data-ttu-id="322ab-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="322ab-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d8966-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d8966-107">See also</span></span>
 
-- [<span data-ttu-id="322ab-108">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="322ab-108">AddHandler Statement</span></span>](../../visual-basic/language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="322ab-109">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="322ab-109">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="d8966-108">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="d8966-108">AddHandler Statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="d8966-109">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="d8966-109">RemoveHandler Statement</span></span>](../language-reference/statements/removehandler-statement.md)
 
-- [<span data-ttu-id="322ab-110">Eventi</span><span class="sxs-lookup"><span data-stu-id="322ab-110">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="d8966-110">Events</span><span class="sxs-lookup"><span data-stu-id="d8966-110">Events</span></span>](../programming-guide/language-features/events/index.md)
