--- a/docs/visual-basic/misc/bc30678.md
+++ b/docs/visual-basic/misc/bc30678.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30678
 ms.assetid: 06dce4e0-2f2a-46c5-a4ba-3fb6b0184528
-ms.openlocfilehash: 324f8e0e329b84474ef239a52451281ecc1f965e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: aed8b3bfa5bd6ee8a91bab9dfa710eadbd457557
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958783"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414816"
 ---
-# <a name="end-statement-not-valid"></a><span data-ttu-id="902dd-102">L'istruzione 'End' non è valida</span><span class="sxs-lookup"><span data-stu-id="902dd-102">'End' statement not valid</span></span>
-<span data-ttu-id="902dd-103">La parola chiave `End` è usata in modo errato oppure non è appropriata nel contesto corrente.</span><span class="sxs-lookup"><span data-stu-id="902dd-103">The `End` keyword is used incorrectly or is inappropriate in the current context.</span></span>  
+# <a name="end-statement-not-valid"></a><span data-ttu-id="c34c4-102">L'istruzione 'End' non è valida</span><span class="sxs-lookup"><span data-stu-id="c34c4-102">'End' statement not valid</span></span>
+<span data-ttu-id="c34c4-103">La parola chiave `End` è usata in modo errato oppure non è appropriata nel contesto corrente.</span><span class="sxs-lookup"><span data-stu-id="c34c4-103">The `End` keyword is used incorrectly or is inappropriate in the current context.</span></span>  
   
- <span data-ttu-id="902dd-104">**ID errore:** BC30678</span><span class="sxs-lookup"><span data-stu-id="902dd-104">**Error ID:** BC30678</span></span>  
+ <span data-ttu-id="c34c4-104">**ID errore:** BC30678</span><span class="sxs-lookup"><span data-stu-id="c34c4-104">**Error ID:** BC30678</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="902dd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="902dd-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c34c4-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c34c4-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="902dd-106">Usare `End` da sola per fare in modo che una routine perda l'ambito.</span><span class="sxs-lookup"><span data-stu-id="902dd-106">Use `End` by itself to cause a procedure to lose scope.</span></span>  
+1. <span data-ttu-id="c34c4-106">Usare `End` da sola per fare in modo che una routine perda l'ambito.</span><span class="sxs-lookup"><span data-stu-id="c34c4-106">Use `End` by itself to cause a procedure to lose scope.</span></span>  
   
-2. <span data-ttu-id="902dd-107">Usare `End` con altre parole chiave per terminare un blocco di codice, ad esempio una struttura o una proprietà.</span><span class="sxs-lookup"><span data-stu-id="902dd-107">Use `End` with other keywords to terminate a block of code such as a structure or property.</span></span>  
+2. <span data-ttu-id="c34c4-107">Usare `End` con altre parole chiave per terminare un blocco di codice, ad esempio una struttura o una proprietà.</span><span class="sxs-lookup"><span data-stu-id="c34c4-107">Use `End` with other keywords to terminate a block of code such as a structure or property.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="902dd-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="902dd-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c34c4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c34c4-108">See also</span></span>
 
-- [<span data-ttu-id="902dd-109">Istruzione End</span><span class="sxs-lookup"><span data-stu-id="902dd-109">End Statement</span></span>](../../visual-basic/language-reference/statements/end-statement.md)
-- [<span data-ttu-id="902dd-110">Fine \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="902dd-110">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [<span data-ttu-id="c34c4-109">Istruzione End</span><span class="sxs-lookup"><span data-stu-id="c34c4-109">End Statement</span></span>](../language-reference/statements/end-statement.md)
+- [<span data-ttu-id="c34c4-110">\<keyword>Istruzione End</span><span class="sxs-lookup"><span data-stu-id="c34c4-110">End \<keyword> Statement</span></span>](../language-reference/statements/end-keyword-statement.md)
