--- a/docs/visual-basic/misc/bc30679.md
+++ b/docs/visual-basic/misc/bc30679.md
@@ -1,5 +1,5 @@
 ---
-title: Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di '<variablename>'is'<typename>'
+title: Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di ' <variablename> ' è <typename> ''
 ms.date: 07/20/2015
 f1_keywords:
 - bc30679
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC30679
 ms.assetid: 3cf34882-7a58-4074-8ebb-52e58199a506
-ms.openlocfilehash: 1bc055d6eba264c50d697d58b31c0e46f96d11fe
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7afdaac0963453b3459beb4f2f648dbb2d8af1e0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646374"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414803"
 ---
-# <a name="array-initializers-are-valid-only-for-arrays-but-the-type-of-variablename-is-typename"></a><span data-ttu-id="b1802-102">Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di '\<nomevariabile >' è '\<nomeTipo >'</span><span class="sxs-lookup"><span data-stu-id="b1802-102">Array initializers are valid only for arrays, but the type of '\<variablename>' is '\<typename>'</span></span>
-<span data-ttu-id="b1802-103">Si è provato a inizializzare una variabile non di matrice con un elenco di valori.</span><span class="sxs-lookup"><span data-stu-id="b1802-103">An attempt was made to initialize a non-array variable with a list of values.</span></span>  
+# <a name="array-initializers-are-valid-only-for-arrays-but-the-type-of-variablename-is-typename"></a><span data-ttu-id="5c353-102">Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di ' \<variablename> ' è \<typename> ''</span><span class="sxs-lookup"><span data-stu-id="5c353-102">Array initializers are valid only for arrays, but the type of '\<variablename>' is '\<typename>'</span></span>
+<span data-ttu-id="5c353-103">Si è provato a inizializzare una variabile non di matrice con un elenco di valori.</span><span class="sxs-lookup"><span data-stu-id="5c353-103">An attempt was made to initialize a non-array variable with a list of values.</span></span>  
   
- <span data-ttu-id="b1802-104">**ID errore:** BC30679</span><span class="sxs-lookup"><span data-stu-id="b1802-104">**Error ID:** BC30679</span></span>  
+ <span data-ttu-id="5c353-104">**ID errore:** BC30679</span><span class="sxs-lookup"><span data-stu-id="5c353-104">**Error ID:** BC30679</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b1802-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b1802-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5c353-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5c353-105">To correct this error</span></span>  
   
-- <span data-ttu-id="b1802-106">Dichiarare e inizializzare la variabile come una matrice, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="b1802-106">Declare and initialize the variable as an array; for example:</span></span>  
+- <span data-ttu-id="5c353-106">Dichiarare e inizializzare la variabile come una matrice, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="5c353-106">Declare and initialize the variable as an array; for example:</span></span>  
   
      `Dim intarray As Integer() = {1, 5, 9}`  
   
-- <span data-ttu-id="b1802-107">Inizializzare la variabile come un singolo valore, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="b1802-107">Initialize the variable as a single value; for example:</span></span>  
+- <span data-ttu-id="5c353-107">Inizializzare la variabile come un singolo valore, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="5c353-107">Initialize the variable as a single value; for example:</span></span>  
   
      `Dim intvalue As Integer = 1`  
   
-## <a name="see-also"></a><span data-ttu-id="b1802-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b1802-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5c353-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5c353-108">See also</span></span>
 
-- [<span data-ttu-id="b1802-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="b1802-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="b1802-110">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="b1802-110">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
-- [<span data-ttu-id="b1802-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="b1802-111">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="5c353-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="5c353-109">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="5c353-110">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="5c353-110">Variable Declaration</span></span>](../programming-guide/language-features/variables/variable-declaration.md)
+- [<span data-ttu-id="5c353-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="5c353-111">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
