--- a/docs/visual-basic/misc/bc30680.md
+++ b/docs/visual-basic/misc/bc30680.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30680
 ms.assetid: 1ea60620-c8dc-4957-8cf4-07b25d20da3b
-ms.openlocfilehash: da88ad610443b3493adfdb5d835e393ea98e08df
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 290474c926144340a9690315f0f9b84496e62a4f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657966"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414790"
 ---
-# <a name="end-region-must-be-preceded-by-a-matching-region"></a><span data-ttu-id="658ec-102">'#End Region' deve essere preceduto da un '#Region' corrispondente</span><span class="sxs-lookup"><span data-stu-id="658ec-102">'#End Region' must be preceded by a matching '#Region'</span></span>
-<span data-ttu-id="658ec-103">Con `#Region` è possibile specificare un blocco di codice da espandere o comprimere durante l'uso della funzionalità di struttura dell'Editor di codice di Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="658ec-103">With `#Region` you can specify a block of code to expand or collapse when using the outlining feature of the Visual Studio Code Editor.</span></span> <span data-ttu-id="658ec-104">L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.</span><span class="sxs-lookup"><span data-stu-id="658ec-104">The start and end of `#Region` statements must be in the same code block.</span></span>  
+# <a name="end-region-must-be-preceded-by-a-matching-region"></a><span data-ttu-id="f5d0b-102">'#End Region' deve essere preceduto da un '#Region' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f5d0b-102">'#End Region' must be preceded by a matching '#Region'</span></span>
+<span data-ttu-id="f5d0b-103">Con `#Region` è possibile specificare un blocco di codice da espandere o comprimere quando si usa la funzionalità di struttura dell'Editor Visual Studio Code.</span><span class="sxs-lookup"><span data-stu-id="f5d0b-103">With `#Region` you can specify a block of code to expand or collapse when using the outlining feature of the Visual Studio Code Editor.</span></span> <span data-ttu-id="f5d0b-104">L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.</span><span class="sxs-lookup"><span data-stu-id="f5d0b-104">The start and end of `#Region` statements must be in the same code block.</span></span>  
   
- <span data-ttu-id="658ec-105">**ID errore:** BC30680</span><span class="sxs-lookup"><span data-stu-id="658ec-105">**Error ID:** BC30680</span></span>  
+ <span data-ttu-id="f5d0b-105">**ID errore:** BC30680</span><span class="sxs-lookup"><span data-stu-id="f5d0b-105">**Error ID:** BC30680</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="658ec-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="658ec-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f5d0b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f5d0b-106">To correct this error</span></span>  
   
-- <span data-ttu-id="658ec-107">Inserire `#Region` nella posizione appropriata prima dell'istruzione `#End Region` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="658ec-107">Insert `#Region` at the appropriate place before the corresponding `#End Region` statement.</span></span>  
+- <span data-ttu-id="f5d0b-107">Inserire `#Region` nella posizione appropriata prima dell'istruzione `#End Region` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="f5d0b-107">Insert `#Region` at the appropriate place before the corresponding `#End Region` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="658ec-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="658ec-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f5d0b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f5d0b-108">See also</span></span>
 
-- [<span data-ttu-id="658ec-109">Direttiva #Region</span><span class="sxs-lookup"><span data-stu-id="658ec-109">#Region Directive</span></span>](../../visual-basic/language-reference/directives/region-directive.md)
+- [<span data-ttu-id="f5d0b-109">#Region (direttiva)</span><span class="sxs-lookup"><span data-stu-id="f5d0b-109">#Region Directive</span></span>](../language-reference/directives/region-directive.md)
