--- a/docs/visual-basic/misc/bc30689.md
+++ b/docs/visual-basic/misc/bc30689.md
@@ -1,5 +1,5 @@
 ---
-title: Istruzione non può trovarsi all'esterno di un'espressione lambda su più righe del corpo (metodo)
+title: L'istruzione non può trovarsi all'esterno del corpo di un metodo o di un'espressione lambda su più righe
 ms.date: 07/20/2015
 f1_keywords:
 - bc30689
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30689
 ms.assetid: bae41cae-375e-4a1a-a36f-9668ef7a795f
-ms.openlocfilehash: d5d2fe99bd6805985877de8d992b821ed59991dd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 58b7781bbd5b62f8719d690fba2b98458399b186
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657887"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412741"
 ---
-# <a name="statement-cannot-appear-outside-of-a-method-bodymultiline-lambda"></a><span data-ttu-id="25de1-102">L'istruzione non può trovarsi all'esterno del corpo di un metodo o di un'espressione lambda su più righe</span><span class="sxs-lookup"><span data-stu-id="25de1-102">Statement cannot appear outside of a method body/multiline lambda</span></span>
-<span data-ttu-id="25de1-103">Le istruzioni eseguibili devono essere usate senza routine.</span><span class="sxs-lookup"><span data-stu-id="25de1-103">Executable statements must be used within procedures.</span></span>  
+# <a name="statement-cannot-appear-outside-of-a-method-bodymultiline-lambda"></a><span data-ttu-id="7a8b5-102">L'istruzione non può trovarsi all'esterno del corpo di un metodo o di un'espressione lambda su più righe</span><span class="sxs-lookup"><span data-stu-id="7a8b5-102">Statement cannot appear outside of a method body/multiline lambda</span></span>
+<span data-ttu-id="7a8b5-103">Le istruzioni eseguibili devono essere usate senza routine.</span><span class="sxs-lookup"><span data-stu-id="7a8b5-103">Executable statements must be used within procedures.</span></span>  
   
- <span data-ttu-id="25de1-104">**ID errore:** BC30689</span><span class="sxs-lookup"><span data-stu-id="25de1-104">**Error ID:** BC30689</span></span>  
+ <span data-ttu-id="7a8b5-104">**ID errore:** BC30689</span><span class="sxs-lookup"><span data-stu-id="7a8b5-104">**Error ID:** BC30689</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="25de1-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="25de1-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7a8b5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7a8b5-105">To correct this error</span></span>  
   
-- <span data-ttu-id="25de1-106">Spostare l'istruzione in una routine o subroutine.</span><span class="sxs-lookup"><span data-stu-id="25de1-106">Move the statement into a procedure or subroutine.</span></span>  
+- <span data-ttu-id="7a8b5-106">Spostare l'istruzione in una routine o subroutine.</span><span class="sxs-lookup"><span data-stu-id="7a8b5-106">Move the statement into a procedure or subroutine.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="25de1-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="25de1-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7a8b5-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7a8b5-107">See also</span></span>
 
-- [<span data-ttu-id="25de1-108">Routine</span><span class="sxs-lookup"><span data-stu-id="25de1-108">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="7a8b5-108">Procedure</span><span class="sxs-lookup"><span data-stu-id="7a8b5-108">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
