--- a/docs/visual-basic/misc/bc30690.md
+++ b/docs/visual-basic/misc/bc30690.md
@@ -1,5 +1,5 @@
 ---
-title: Struttura '<structurename>' non può essere indicizzata perché non contiene proprietà predefinite
+title: La struttura '<structurename>' non può essere indicizzata perché non contiene proprietà predefinite
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30690
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30690
 ms.assetid: d3609e1d-0a26-46cc-968a-be8065b554c6
-ms.openlocfilehash: 91276e368fa4d44bf8a1534f373f7a8b345856f6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: de47c97e4fe57a54379c4236e8f31223190e0eb3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646371"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412715"
 ---
-# <a name="structure-structurename-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="0f7ff-102">Struttura '\<nomestruttura >' non può essere indicizzata perché non contiene proprietà predefinite</span><span class="sxs-lookup"><span data-stu-id="0f7ff-102">Structure '\<structurename>' cannot be indexed because it has no default property</span></span>
-<span data-ttu-id="0f7ff-103">Si è provato a usare una sintassi di proprietà predefinita con una struttura che non contiene alcuna proprietà predefinita.</span><span class="sxs-lookup"><span data-stu-id="0f7ff-103">An attempt was made to use default property syntax with a structure that has no default property.</span></span>  
+# <a name="structure-structurename-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="faa07-102">La struttura '\<structurename>' non può essere indicizzata perché non contiene proprietà predefinite</span><span class="sxs-lookup"><span data-stu-id="faa07-102">Structure '\<structurename>' cannot be indexed because it has no default property</span></span>
+<span data-ttu-id="faa07-103">Si è provato a usare una sintassi di proprietà predefinita con una struttura che non contiene alcuna proprietà predefinita.</span><span class="sxs-lookup"><span data-stu-id="faa07-103">An attempt was made to use default property syntax with a structure that has no default property.</span></span>  
   
- <span data-ttu-id="0f7ff-104">**ID errore:** BC30690</span><span class="sxs-lookup"><span data-stu-id="0f7ff-104">**Error ID:** BC30690</span></span>  
+ <span data-ttu-id="faa07-104">**ID errore:** BC30690</span><span class="sxs-lookup"><span data-stu-id="faa07-104">**Error ID:** BC30690</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0f7ff-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0f7ff-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="faa07-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="faa07-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0f7ff-106">Usare la sintassi di proprietà standard per accedere alle proprietà della struttura.</span><span class="sxs-lookup"><span data-stu-id="0f7ff-106">Use standard property syntax to access the structure's properties.</span></span>  
+- <span data-ttu-id="faa07-106">Usare la sintassi di proprietà standard per accedere alle proprietà della struttura.</span><span class="sxs-lookup"><span data-stu-id="faa07-106">Use standard property syntax to access the structure's properties.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0f7ff-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0f7ff-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="faa07-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="faa07-107">See also</span></span>
 
-- [<span data-ttu-id="0f7ff-108">Strutture e altri elementi di programmazione</span><span class="sxs-lookup"><span data-stu-id="0f7ff-108">Structures and Other Programming Elements</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-other-programming-elements.md)
+- [<span data-ttu-id="faa07-108">Strutture e altri elementi di programmazione</span><span class="sxs-lookup"><span data-stu-id="faa07-108">Structures and Other Programming Elements</span></span>](../programming-guide/language-features/data-types/structures-and-other-programming-elements.md)
