--- a/docs/visual-basic/misc/bc30691.md
+++ b/docs/visual-basic/misc/bc30691.md
@@ -1,5 +1,5 @@
 ---
-title: «<typename>'è un tipo in'<containername>' e non può essere usato come espressione
+title: "' <typename> ' è un tipo in ' <containername> ' e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30691
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30691
 ms.assetid: af3b73dc-1ce3-49ee-91d6-abbbf5538916
-ms.openlocfilehash: eca50304d4029b43257193b988937f5ead1d11e0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e786ccb929df6396397151cc49726de2ef7d5cdd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657913"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412728"
 ---
-# <a name="typename-is-a-type-in-containername-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="05e50-102">«\<nomeTipo >' è un tipo in '\<nomecontenitore >' e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="05e50-102">'\<typename>' is a type in '\<containername>' and cannot be used as an expression</span></span>
-<span data-ttu-id="05e50-103">Uno dei nomi in uso è già stato dichiarato come nome di un tipo e non può essere usato in un'espressione.</span><span class="sxs-lookup"><span data-stu-id="05e50-103">One of the names being used is already declared as the name of a type, and cannot be used in an expression.</span></span>  
+# <a name="typename-is-a-type-in-containername-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="2775a-102">' \<typename> ' è un tipo in ' \<containername> ' e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="2775a-102">'\<typename>' is a type in '\<containername>' and cannot be used as an expression</span></span>
+<span data-ttu-id="2775a-103">Uno dei nomi in uso è già stato dichiarato come nome di un tipo e non può essere usato in un'espressione.</span><span class="sxs-lookup"><span data-stu-id="2775a-103">One of the names being used is already declared as the name of a type, and cannot be used in an expression.</span></span>  
   
- <span data-ttu-id="05e50-104">**ID errore:** BC30691</span><span class="sxs-lookup"><span data-stu-id="05e50-104">**Error ID:** BC30691</span></span>  
+ <span data-ttu-id="2775a-104">**ID errore:** BC30691</span><span class="sxs-lookup"><span data-stu-id="2775a-104">**Error ID:** BC30691</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="05e50-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="05e50-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2775a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2775a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="05e50-106">Assegnare un nome univoco al membro.</span><span class="sxs-lookup"><span data-stu-id="05e50-106">Uniquely name the member.</span></span>  
+- <span data-ttu-id="2775a-106">Assegnare un nome univoco al membro.</span><span class="sxs-lookup"><span data-stu-id="2775a-106">Uniquely name the member.</span></span>  
   
-- <span data-ttu-id="05e50-107">Racchiudere il nome del membro tra parentesi quadre.</span><span class="sxs-lookup"><span data-stu-id="05e50-107">Use square brackets around the name of the member.</span></span>  
+- <span data-ttu-id="2775a-107">Racchiudere il nome del membro tra parentesi quadre.</span><span class="sxs-lookup"><span data-stu-id="2775a-107">Use square brackets around the name of the member.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="05e50-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="05e50-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2775a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2775a-108">See also</span></span>
 
-- [<span data-ttu-id="05e50-109">Parole chiave come nomi di elementi nel codice</span><span class="sxs-lookup"><span data-stu-id="05e50-109">Keywords as Element Names in Code</span></span>](../../visual-basic/programming-guide/program-structure/keywords-as-element-names-in-code.md)
-- [<span data-ttu-id="05e50-110">Convenzioni di denominazione di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="05e50-110">Visual Basic Naming Conventions</span></span>](../../visual-basic/programming-guide/program-structure/naming-conventions.md)
+- [<span data-ttu-id="2775a-109">Parole chiave come nomi di elementi nel codice</span><span class="sxs-lookup"><span data-stu-id="2775a-109">Keywords as Element Names in Code</span></span>](../programming-guide/program-structure/keywords-as-element-names-in-code.md)
+- [<span data-ttu-id="2775a-110">Convenzioni di denominazione di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2775a-110">Visual Basic Naming Conventions</span></span>](../programming-guide/program-structure/naming-conventions.md)
