--- a/docs/visual-basic/misc/bc30697.md
+++ b/docs/visual-basic/misc/bc30697.md
@@ -1,5 +1,5 @@
 ---
-title: «<membername1>'non è possibile eseguire l'override'<membername2>' perché si differenziano per i tipi di parametri facoltativi
+title: "' <membername1> ' non può eseguire l'override <membername2> di '' perché si differenziano per i tipi di parametri facoltativi"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30697
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30697
 ms.assetid: 286bc9e0-2e20-4dd5-9f5a-fb917a5c1375
-ms.openlocfilehash: c2d6453f8c7253ebd256efcd74f1cc2a161eb297
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8b1aa751d357484a967049db1b1e8073e418107e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646332"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412676"
 ---
-# <a name="membername1-cannot-override-membername2-because-they-differ-by-the-types-of-optional-parameters"></a><span data-ttu-id="21e29-102">«\<membername1 >' non è possibile eseguire l'override '\<membername2 >' perché si differenziano per i tipi di parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="21e29-102">'\<membername1>' cannot override '\<membername2>' because they differ by the types of optional parameters</span></span>
-<span data-ttu-id="21e29-103">I membri di overload devono presentare tipi di dati diversi per uno o più parametri obbligatori.</span><span class="sxs-lookup"><span data-stu-id="21e29-103">Overloaded members must have different data types for one or more required parameters.</span></span>  
+# <a name="membername1-cannot-override-membername2-because-they-differ-by-the-types-of-optional-parameters"></a><span data-ttu-id="621f5-102">' \<membername1> ' non può eseguire l'override \<membername2> di '' perché si differenziano per i tipi di parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="621f5-102">'\<membername1>' cannot override '\<membername2>' because they differ by the types of optional parameters</span></span>
+<span data-ttu-id="621f5-103">I membri di overload devono presentare tipi di dati diversi per uno o più parametri obbligatori.</span><span class="sxs-lookup"><span data-stu-id="621f5-103">Overloaded members must have different data types for one or more required parameters.</span></span>  
   
- <span data-ttu-id="21e29-104">**ID errore:** BC30697</span><span class="sxs-lookup"><span data-stu-id="21e29-104">**Error ID:** BC30697</span></span>  
+ <span data-ttu-id="621f5-104">**ID errore:** BC30697</span><span class="sxs-lookup"><span data-stu-id="621f5-104">**Error ID:** BC30697</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="21e29-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="21e29-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="621f5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="621f5-105">To correct this error</span></span>  
   
-- <span data-ttu-id="21e29-106">Definire almeno un parametro obbligatorio come tipo di dati diverso.</span><span class="sxs-lookup"><span data-stu-id="21e29-106">Define at least one required parameter as a different data type.</span></span>  
+- <span data-ttu-id="621f5-106">Definire almeno un parametro obbligatorio come tipo di dati diverso.</span><span class="sxs-lookup"><span data-stu-id="621f5-106">Define at least one required parameter as a different data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="21e29-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="21e29-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="621f5-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="621f5-107">See also</span></span>
 
-- [<span data-ttu-id="21e29-108">Overload</span><span class="sxs-lookup"><span data-stu-id="21e29-108">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
+- [<span data-ttu-id="621f5-108">Overload</span><span class="sxs-lookup"><span data-stu-id="621f5-108">Overloads</span></span>](../language-reference/modifiers/overloads.md)
