--- a/docs/visual-basic/misc/bc30702.md
+++ b/docs/visual-basic/misc/bc30702.md
@@ -1,5 +1,5 @@
 ---
-title: Indice '<indexnumber>'per la dimensione'<dimensionnumber>' non è compreso nell'intervallo
+title: Indice '<indexnumber>' per la dimensione '<dimensionnumber>' non compreso nell'intervallo
 ms.date: 07/20/2015
 f1_keywords:
 - bc30702
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30702
 ms.assetid: c81a2d76-7065-437e-8fc8-84e8ad01c7c6
-ms.openlocfilehash: a5ea9c5ec8ec5ec48142f5d9566745912a9766cc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a88aee923fa6e4b973873cbece75f5ea16d24f2f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646290"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412637"
 ---
-# <a name="index-indexnumber-for-dimension-dimensionnumber-is-out-of-range"></a><span data-ttu-id="0417a-102">Indice '\<NumeroIndice >' per la dimensione '\<numerodimensione >' non è compreso nell'intervallo</span><span class="sxs-lookup"><span data-stu-id="0417a-102">Index '\<indexnumber>' for dimension '\<dimensionnumber>' is out of range</span></span>
-<span data-ttu-id="0417a-103">Uno degli indici supera l'intervallo definito.</span><span class="sxs-lookup"><span data-stu-id="0417a-103">One of the indexes exceeds the range defined.</span></span>  
+# <a name="index-indexnumber-for-dimension-dimensionnumber-is-out-of-range"></a><span data-ttu-id="68491-102">Indice '\<indexnumber>' per la dimensione '\<dimensionnumber>' non compreso nell'intervallo</span><span class="sxs-lookup"><span data-stu-id="68491-102">Index '\<indexnumber>' for dimension '\<dimensionnumber>' is out of range</span></span>
+<span data-ttu-id="68491-103">Uno degli indici supera l'intervallo definito.</span><span class="sxs-lookup"><span data-stu-id="68491-103">One of the indexes exceeds the range defined.</span></span>  
   
- <span data-ttu-id="0417a-104">**ID errore:** BC30702</span><span class="sxs-lookup"><span data-stu-id="0417a-104">**Error ID:** BC30702</span></span>  
+ <span data-ttu-id="68491-104">**ID errore:** BC30702</span><span class="sxs-lookup"><span data-stu-id="68491-104">**Error ID:** BC30702</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0417a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0417a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="68491-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="68491-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0417a-106">Modificare la logica della routine in modo che non vengano superati i limiti della matrice.</span><span class="sxs-lookup"><span data-stu-id="0417a-106">Change the logic of the procedure so that the array bounds are not exceeded.</span></span>  
+- <span data-ttu-id="68491-106">Modificare la logica della routine in modo che non vengano superati i limiti della matrice.</span><span class="sxs-lookup"><span data-stu-id="68491-106">Change the logic of the procedure so that the array bounds are not exceeded.</span></span>  
   
-- <span data-ttu-id="0417a-107">Ridefinire la matrice per consentire un intervallo più ampio di valori.</span><span class="sxs-lookup"><span data-stu-id="0417a-107">Redefine the array to allow a wider range of values.</span></span>  
+- <span data-ttu-id="68491-107">Ridefinire la matrice per consentire un intervallo più ampio di valori.</span><span class="sxs-lookup"><span data-stu-id="68491-107">Redefine the array to allow a wider range of values.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0417a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0417a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="68491-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="68491-108">See also</span></span>
 
-- [<span data-ttu-id="0417a-109">Matrici</span><span class="sxs-lookup"><span data-stu-id="0417a-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="68491-109">Matrici</span><span class="sxs-lookup"><span data-stu-id="68491-109">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
