--- a/docs/visual-basic/misc/bc30916.md
+++ b/docs/visual-basic/misc/bc30916.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non è supportato perché eredita direttamente o indirettamente da se stesso
+title: Il tipo '<typename>' non è supportato perché eredita direttamente o indirettamente da se stesso
 ms.date: 07/20/2015
 f1_keywords:
 - bc30916
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30916
 ms.assetid: cea33daf-1971-4b70-a01d-7d8b5c9e4269
-ms.openlocfilehash: 75581e509f745210bad8e5e697b432d668ca7306
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c137106a749696c0fdc2f36489a9862c077dd2b0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622190"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414077"
 ---
-# <a name="type-typename-is-not-supported-because-it-either-directly-or-indirectly-inherits-from-itself"></a><span data-ttu-id="4a0e8-102">Tipo '\<nomeTipo >' non è supportato perché eredita direttamente o indirettamente da se stesso</span><span class="sxs-lookup"><span data-stu-id="4a0e8-102">Type '\<typename>' is not supported because it either directly or indirectly inherits from itself</span></span>
-<span data-ttu-id="4a0e8-103">Una classe o interfaccia eredita da se stessa o da un'altra classe o interfaccia che a sua volta eredita da essa.</span><span class="sxs-lookup"><span data-stu-id="4a0e8-103">A class or interface either inherits from itself or from another class or interface which ultimately inherits from it.</span></span>  
+# <a name="type-typename-is-not-supported-because-it-either-directly-or-indirectly-inherits-from-itself"></a><span data-ttu-id="bb1ee-102">Il tipo '\<typename>' non è supportato perché eredita direttamente o indirettamente da se stesso</span><span class="sxs-lookup"><span data-stu-id="bb1ee-102">Type '\<typename>' is not supported because it either directly or indirectly inherits from itself</span></span>
+<span data-ttu-id="bb1ee-103">Una classe o interfaccia eredita da se stessa o da un'altra classe o interfaccia che a sua volta eredita da essa.</span><span class="sxs-lookup"><span data-stu-id="bb1ee-103">A class or interface either inherits from itself or from another class or interface which ultimately inherits from it.</span></span>  
   
- <span data-ttu-id="4a0e8-104">Visual Basic non supporta l'ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="4a0e8-104">Visual Basic does not support circular inheritance.</span></span>  
+ <span data-ttu-id="bb1ee-104">Visual Basic non supporta l'ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="bb1ee-104">Visual Basic does not support circular inheritance.</span></span>  
   
- <span data-ttu-id="4a0e8-105">**ID errore:** BC30916</span><span class="sxs-lookup"><span data-stu-id="4a0e8-105">**Error ID:** BC30916</span></span>  
+ <span data-ttu-id="bb1ee-105">**ID errore:** BC30916</span><span class="sxs-lookup"><span data-stu-id="bb1ee-105">**Error ID:** BC30916</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4a0e8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4a0e8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bb1ee-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bb1ee-106">To correct this error</span></span>  
   
-- <span data-ttu-id="4a0e8-107">Modificare la struttura di ereditarietà in modo che si basi su un'interfaccia o classe base che non eredita da altre interfacce o classi.</span><span class="sxs-lookup"><span data-stu-id="4a0e8-107">Change the inheritance structure so that it is built on a base class or interface that does not inherit from any other class or interface.</span></span>  
+- <span data-ttu-id="bb1ee-107">Modificare la struttura di ereditarietà in modo che si basi su un'interfaccia o classe base che non eredita da altre interfacce o classi.</span><span class="sxs-lookup"><span data-stu-id="bb1ee-107">Change the inheritance structure so that it is built on a base class or interface that does not inherit from any other class or interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4a0e8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4a0e8-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="bb1ee-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bb1ee-108">See also</span></span>
 
-- [<span data-ttu-id="4a0e8-109">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="4a0e8-109">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="bb1ee-109">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="bb1ee-109">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
