--- a/docs/visual-basic/misc/bc31136.md
+++ b/docs/visual-basic/misc/bc31136.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC31136
 ms.assetid: 199b2f7b-a85e-465d-9853-0995156e7ab6
-ms.openlocfilehash: cee3f5f367b68752fa860ab2356281ee5111f2eb
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 347a1a9057864f272881d9dbac973f02e72ee642
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664549"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414686"
 ---
-# <a name="addhandler-and-removehandler-method-parameters-must-have-the-same-delegate-type-as-the-containing-event"></a><span data-ttu-id="75a77-102">Il tipo delegato dei parametri dei metodi 'AddHandler' e 'RemoveHandler' deve essere uguale a quello dell'evento che li contiene</span><span class="sxs-lookup"><span data-stu-id="75a77-102">'AddHandler' and 'RemoveHandler' method parameters must have the same delegate type as the containing event</span></span>
-<span data-ttu-id="75a77-103">Una dichiarazione `Custom Event` deve avere dichiarazioni `AddHandler` o `RemoveHandler` , ognuna delle quali accetta un solo parametro del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="75a77-103">A `Custom Event` declaration must have `AddHandler` or `RemoveHandler` declarations, each of which takes a single parameter of the delegate type specified by the custom event's `As` clause.</span></span>  
+# <a name="addhandler-and-removehandler-method-parameters-must-have-the-same-delegate-type-as-the-containing-event"></a><span data-ttu-id="39ed4-102">Il tipo delegato dei parametri dei metodi 'AddHandler' e 'RemoveHandler' deve essere uguale a quello dell'evento che li contiene</span><span class="sxs-lookup"><span data-stu-id="39ed4-102">'AddHandler' and 'RemoveHandler' method parameters must have the same delegate type as the containing event</span></span>
+<span data-ttu-id="39ed4-103">Una dichiarazione `Custom Event` deve avere dichiarazioni `AddHandler` o `RemoveHandler` , ognuna delle quali accetta un solo parametro del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="39ed4-103">A `Custom Event` declaration must have `AddHandler` or `RemoveHandler` declarations, each of which takes a single parameter of the delegate type specified by the custom event's `As` clause.</span></span>  
   
- <span data-ttu-id="75a77-104">**ID errore:** BC31136</span><span class="sxs-lookup"><span data-stu-id="75a77-104">**Error ID:** BC31136</span></span>  
+ <span data-ttu-id="39ed4-104">**ID errore:** BC31136</span><span class="sxs-lookup"><span data-stu-id="39ed4-104">**Error ID:** BC31136</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="75a77-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="75a77-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="39ed4-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="39ed4-105">To correct this error</span></span>  
   
-- <span data-ttu-id="75a77-106">Modificare il tipo del parametro affinché corrisponda al tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="75a77-106">Change the type of the parameter to be the same as the delegate type specified by the custom event's `As` clause.</span></span>  
+- <span data-ttu-id="39ed4-106">Modificare il tipo del parametro affinché corrisponda al tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="39ed4-106">Change the type of the parameter to be the same as the delegate type specified by the custom event's `As` clause.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="75a77-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="75a77-107">Example</span></span>  
- <span data-ttu-id="75a77-108">Questo esempio mostra un evento personalizzato con i tipi di parametro corretti per le dichiarazioni `AddHandler` e `RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="75a77-108">This example shows a custom event with the correct parameter types for the `AddHandler` and `RemoveHandler` declarations.</span></span>  
+## <a name="example"></a><span data-ttu-id="39ed4-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="39ed4-107">Example</span></span>  
+ <span data-ttu-id="39ed4-108">Questo esempio mostra un evento personalizzato con i tipi di parametro corretti per le dichiarazioni `AddHandler` e `RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="39ed4-108">This example shows a custom event with the correct parameter types for the `AddHandler` and `RemoveHandler` declarations.</span></span>  
   
  [!code-vb[VbVbalrEventError#1](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#1)]  
   
-## <a name="see-also"></a><span data-ttu-id="75a77-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="75a77-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="39ed4-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="39ed4-109">See also</span></span>
 
-- [<span data-ttu-id="75a77-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="75a77-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="75a77-111">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="75a77-111">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="75a77-112">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="75a77-112">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="75a77-113">Eventi</span><span class="sxs-lookup"><span data-stu-id="75a77-113">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="39ed4-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="39ed4-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="39ed4-111">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="39ed4-111">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="39ed4-112">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="39ed4-112">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="39ed4-113">Events</span><span class="sxs-lookup"><span data-stu-id="39ed4-113">Events</span></span>](../programming-guide/language-features/events/index.md)
