--- a/docs/visual-basic/misc/bc32007.md
+++ b/docs/visual-basic/misc/bc32007.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' i valori non possono essere convertiti in 'Char'"
+title: <typename>non è possibile convertire i valori '' in ' Char '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32007
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32007
 ms.assetid: b04212da-57ac-4493-9480-04c12b50f875
-ms.openlocfilehash: 5b4c25fb9a671a3de5fa249ef9036e4969800d10
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7909de4fcbdc915148ffb23239e538f62ca200db
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64593149"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413960"
 ---
-# <a name="typename-values-cannot-be-converted-to-char"></a><span data-ttu-id="d0943-102">'\<nomeTipo >' i valori non possono essere convertiti in 'Char'</span><span class="sxs-lookup"><span data-stu-id="d0943-102">'\<typename>' values cannot be converted to 'Char'</span></span>
-<span data-ttu-id="d0943-103">'\<nomeTipo >' non è possibile convertire i valori in Char.</span><span class="sxs-lookup"><span data-stu-id="d0943-103">'\<typename>' values cannot be converted to Char.</span></span> <span data-ttu-id="d0943-104">Usare 'Microsoft.VisualBasic.ChrW' per interpretare un valore numerico come carattere Unicode oppure convertirlo in 'String' per produrre una cifra</span><span class="sxs-lookup"><span data-stu-id="d0943-104">Use Microsoft.VisualBasic.ChrW to interpret a numeric value as a Unicode character or first convert it to 'String' to produce a digit.</span></span>  
+# <a name="typename-values-cannot-be-converted-to-char"></a><span data-ttu-id="a1fd7-102">\<typename>non è possibile convertire i valori '' in ' Char '</span><span class="sxs-lookup"><span data-stu-id="a1fd7-102">'\<typename>' values cannot be converted to 'Char'</span></span>
+<span data-ttu-id="a1fd7-103">\<typename>i valori '' non possono essere convertiti in caratteri.</span><span class="sxs-lookup"><span data-stu-id="a1fd7-103">'\<typename>' values cannot be converted to Char.</span></span> <span data-ttu-id="a1fd7-104">Usare 'Microsoft.VisualBasic.ChrW' per interpretare un valore numerico come carattere Unicode oppure convertirlo in 'String' per produrre una cifra</span><span class="sxs-lookup"><span data-stu-id="a1fd7-104">Use Microsoft.VisualBasic.ChrW to interpret a numeric value as a Unicode character or first convert it to 'String' to produce a digit.</span></span>  
   
- <span data-ttu-id="d0943-105">Un'espressione tenta di convertire un tipo di dati diverso da `String` o `Object` in `Char`.</span><span class="sxs-lookup"><span data-stu-id="d0943-105">An expression attempts to convert a data type other than `String` or `Object` to `Char`.</span></span>  
+ <span data-ttu-id="a1fd7-105">Un'espressione tenta di convertire un tipo di dati diverso da `String` o `Object` in `Char`.</span><span class="sxs-lookup"><span data-stu-id="a1fd7-105">An expression attempts to convert a data type other than `String` or `Object` to `Char`.</span></span>  
   
- <span data-ttu-id="d0943-106">**ID errore:** BC32007</span><span class="sxs-lookup"><span data-stu-id="d0943-106">**Error ID:** BC32007</span></span>  
+ <span data-ttu-id="a1fd7-106">**ID errore:** BC32007</span><span class="sxs-lookup"><span data-stu-id="a1fd7-106">**Error ID:** BC32007</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d0943-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d0943-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a1fd7-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a1fd7-107">To correct this error</span></span>  
   
-- <span data-ttu-id="d0943-108">Usare la funzione `ChrW` per convertire un valore numerico in un carattere Unicode oppure convertire prima il valore in `String` e quindi in `Char`.</span><span class="sxs-lookup"><span data-stu-id="d0943-108">Use the `ChrW` function to convert a numeric value to a Unicode character, or first convert the value to `String` and then to `Char`.</span></span>  
+- <span data-ttu-id="a1fd7-108">Usare la funzione `ChrW` per convertire un valore numerico in un carattere Unicode oppure convertire prima il valore in `String` e quindi in `Char`.</span><span class="sxs-lookup"><span data-stu-id="a1fd7-108">Use the `ChrW` function to convert a numeric value to a Unicode character, or first convert the value to `String` and then to `Char`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d0943-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d0943-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a1fd7-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a1fd7-109">See also</span></span>
 
-- [<span data-ttu-id="d0943-110">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="d0943-110">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [<span data-ttu-id="d0943-111">Tipo di dati Char</span><span class="sxs-lookup"><span data-stu-id="d0943-111">Char Data Type</span></span>](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [<span data-ttu-id="a1fd7-110">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="a1fd7-110">Implicit and Explicit Conversions</span></span>](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [<span data-ttu-id="a1fd7-111">Tipo di dati Char</span><span class="sxs-lookup"><span data-stu-id="a1fd7-111">Char Data Type</span></span>](../language-reference/data-types/char-data-type.md)
