--- a/docs/visual-basic/misc/bc32009.md
+++ b/docs/visual-basic/misc/bc32009.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32009
 ms.assetid: 77275387-5584-4419-aee3-a1b600f0412d
-ms.openlocfilehash: 0764cab4a9147b43bc75e402b80eec8275fbe94d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 26bab61b9590f93ee313f5bb6065515734d4088d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604937"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413947"
 ---
-# <a name="method-declaration-statements-must-be-the-first-on-a-logical-line"></a><span data-ttu-id="e3232-102">Le istruzioni della dichiarazione di metodo devono essere le prime in una riga logica</span><span class="sxs-lookup"><span data-stu-id="e3232-102">Method declaration statements must be the first on a logical line</span></span>
-<span data-ttu-id="e3232-103">Un'istruzione `Function` o `Sub` segue un separatore di istruzioni due punti (:).</span><span class="sxs-lookup"><span data-stu-id="e3232-103">A `Function` or `Sub` statement follows a colon (:) statement separator.</span></span> <span data-ttu-id="e3232-104">`Function` o `Sub` deve essere l'unica istruzione nella riga di origine.</span><span class="sxs-lookup"><span data-stu-id="e3232-104">`Function` or `Sub` must be the only statement on its source line.</span></span>  
+# <a name="method-declaration-statements-must-be-the-first-on-a-logical-line"></a><span data-ttu-id="9efa0-102">Le istruzioni della dichiarazione di metodo devono essere le prime in una riga logica</span><span class="sxs-lookup"><span data-stu-id="9efa0-102">Method declaration statements must be the first on a logical line</span></span>
+<span data-ttu-id="9efa0-103">Un'istruzione `Function` o `Sub` segue un separatore di istruzioni due punti (:).</span><span class="sxs-lookup"><span data-stu-id="9efa0-103">A `Function` or `Sub` statement follows a colon (:) statement separator.</span></span> <span data-ttu-id="9efa0-104">`Function` o `Sub` deve essere l'unica istruzione nella riga di origine.</span><span class="sxs-lookup"><span data-stu-id="9efa0-104">`Function` or `Sub` must be the only statement on its source line.</span></span>  
   
- <span data-ttu-id="e3232-105">**ID errore:** BC32009</span><span class="sxs-lookup"><span data-stu-id="e3232-105">**Error ID:** BC32009</span></span>  
+ <span data-ttu-id="9efa0-105">**ID errore:** BC32009</span><span class="sxs-lookup"><span data-stu-id="9efa0-105">**Error ID:** BC32009</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e3232-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3232-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9efa0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9efa0-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e3232-107">Suddividere più istruzioni su righe diverse.</span><span class="sxs-lookup"><span data-stu-id="e3232-107">Separate the multiple statements onto different lines.</span></span>  
+- <span data-ttu-id="9efa0-107">Suddividere più istruzioni su righe diverse.</span><span class="sxs-lookup"><span data-stu-id="9efa0-107">Separate the multiple statements onto different lines.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e3232-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3232-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9efa0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9efa0-108">See also</span></span>
 
-- [<span data-ttu-id="e3232-109">Procedura: Interrompere e combinare istruzioni nel codice</span><span class="sxs-lookup"><span data-stu-id="e3232-109">How to: Break and Combine Statements in Code</span></span>](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
-- [<span data-ttu-id="e3232-110">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="e3232-110">Sub Statement</span></span>](../../visual-basic/language-reference/statements/sub-statement.md)
-- [<span data-ttu-id="e3232-111">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="e3232-111">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
+- [<span data-ttu-id="9efa0-109">Procedura: Interrompere e combinare istruzioni nel codice</span><span class="sxs-lookup"><span data-stu-id="9efa0-109">How to: Break and Combine Statements in Code</span></span>](../programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
+- [<span data-ttu-id="9efa0-110">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="9efa0-110">Sub Statement</span></span>](../language-reference/statements/sub-statement.md)
+- [<span data-ttu-id="9efa0-111">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="9efa0-111">Function Statement</span></span>](../language-reference/statements/function-statement.md)
