--- a/docs/visual-basic/misc/bc32014.md
+++ b/docs/visual-basic/misc/bc32014.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32014
 ms.assetid: d8d7155d-82d1-4a25-b9bb-1883e1586383
-ms.openlocfilehash: 7454ebddc57e28afb819c78daf0609fec66e68de
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d716fabddbfd8562b88d45f39dbe3b47fa56e095
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61833404"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413921"
 ---
-# <a name="bounds-can-be-specified-only-for-the-top-level-array-when-initializing-an-array-of-arrays"></a><span data-ttu-id="5e86e-102">I limiti possono essere specificati solo per la matrice di primo livello durante l'inizializzazione di una matrice di matrici</span><span class="sxs-lookup"><span data-stu-id="5e86e-102">Bounds can be specified only for the top-level array when initializing an array of arrays</span></span>
-<span data-ttu-id="5e86e-103">L'inizializzazione di matrice per una matrice di matrici imposta la lunghezza iniziale di uno dei livelli inferiori.</span><span class="sxs-lookup"><span data-stu-id="5e86e-103">An array initialization for a jagged array (array of arrays) sets the initial length of one of the lower levels.</span></span> <span data-ttu-id="5e86e-104">Nell'istruzione di dichiarazione di matrice si può specificare solo la lunghezza della matrice di primo livello.</span><span class="sxs-lookup"><span data-stu-id="5e86e-104">You can specify the length of only the top-level array in the array declaration statement.</span></span>  
+# <a name="bounds-can-be-specified-only-for-the-top-level-array-when-initializing-an-array-of-arrays"></a><span data-ttu-id="17985-102">I limiti possono essere specificati solo per la matrice di primo livello durante l'inizializzazione di una matrice di matrici</span><span class="sxs-lookup"><span data-stu-id="17985-102">Bounds can be specified only for the top-level array when initializing an array of arrays</span></span>
+<span data-ttu-id="17985-103">L'inizializzazione di matrice per una matrice di matrici imposta la lunghezza iniziale di uno dei livelli inferiori.</span><span class="sxs-lookup"><span data-stu-id="17985-103">An array initialization for a jagged array (array of arrays) sets the initial length of one of the lower levels.</span></span> <span data-ttu-id="17985-104">Nell'istruzione di dichiarazione di matrice si può specificare solo la lunghezza della matrice di primo livello.</span><span class="sxs-lookup"><span data-stu-id="17985-104">You can specify the length of only the top-level array in the array declaration statement.</span></span>  
   
- <span data-ttu-id="5e86e-105">**ID errore:** BC32014</span><span class="sxs-lookup"><span data-stu-id="5e86e-105">**Error ID:** BC32014</span></span>  
+ <span data-ttu-id="17985-105">**ID errore:** BC32014</span><span class="sxs-lookup"><span data-stu-id="17985-105">**Error ID:** BC32014</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5e86e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5e86e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="17985-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="17985-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="5e86e-107">Rimuovere la specifica della lunghezza da tutte le matrici eccetto quella di primo livello.</span><span class="sxs-lookup"><span data-stu-id="5e86e-107">Remove the length specification from all but the top-level array.</span></span>  
+1. <span data-ttu-id="17985-107">Rimuovere la specifica della lunghezza da tutte le matrici eccetto quella di primo livello.</span><span class="sxs-lookup"><span data-stu-id="17985-107">Remove the length specification from all but the top-level array.</span></span>  
   
-2. <span data-ttu-id="5e86e-108">Impostare la lunghezza iniziale delle matrici di livello inferiore nelle istruzioni di assegnazione successive usando la parola chiave `New` .</span><span class="sxs-lookup"><span data-stu-id="5e86e-108">Set the initial length of lower-level arrays in subsequent assignment statements using the `New` keyword.</span></span>  
+2. <span data-ttu-id="17985-108">Impostare la lunghezza iniziale delle matrici di livello inferiore nelle istruzioni di assegnazione successive usando la parola chiave `New` .</span><span class="sxs-lookup"><span data-stu-id="17985-108">Set the initial length of lower-level arrays in subsequent assignment statements using the `New` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5e86e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5e86e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="17985-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="17985-109">See also</span></span>
 
-- [<span data-ttu-id="5e86e-110">Operatore New</span><span class="sxs-lookup"><span data-stu-id="5e86e-110">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)
+- [<span data-ttu-id="17985-110">Operatore New</span><span class="sxs-lookup"><span data-stu-id="17985-110">New Operator</span></span>](../language-reference/operators/new-operator.md)
