--- a/docs/visual-basic/misc/bc32017.md
+++ b/docs/visual-basic/misc/bc32017.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32017
 ms.assetid: 7e06022f-d12d-4f17-b712-bad573fea116
-ms.openlocfilehash: 7a0a15b6298d6e051d401bf1ff86ae10fd9faef9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bb0250a3b92aa9b9e1bb54a6f96b9aa4e1e9bdbc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64645944"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413882"
 ---
-# <a name="comma--or-a-valid-expression-continuation-expected"></a><span data-ttu-id="13e35-102">È prevista la virgola, il segno ')' o una continuazione di espressione valida</span><span class="sxs-lookup"><span data-stu-id="13e35-102">Comma, ')', or a valid expression continuation expected</span></span>
-<span data-ttu-id="13e35-103">I membri di un elenco, ad esempio un elenco di argomenti in una definizione o chiamata di routine, non sono separati o terminati correttamente.</span><span class="sxs-lookup"><span data-stu-id="13e35-103">A list, such as an argument list in a procedure definition or a procedure call, does not properly separate or terminate its members.</span></span> <span data-ttu-id="13e35-104">È possibile che due membri dell'elenco siano separati solo da uno o più spazi.</span><span class="sxs-lookup"><span data-stu-id="13e35-104">One possible cause is two list members being separated only by a space or spaces.</span></span>  
+# <a name="comma--or-a-valid-expression-continuation-expected"></a><span data-ttu-id="a8bbc-102">È prevista la virgola, il segno ')' o una continuazione di espressione valida</span><span class="sxs-lookup"><span data-stu-id="a8bbc-102">Comma, ')', or a valid expression continuation expected</span></span>
+<span data-ttu-id="a8bbc-103">I membri di un elenco, ad esempio un elenco di argomenti in una definizione o chiamata di routine, non sono separati o terminati correttamente.</span><span class="sxs-lookup"><span data-stu-id="a8bbc-103">A list, such as an argument list in a procedure definition or a procedure call, does not properly separate or terminate its members.</span></span> <span data-ttu-id="a8bbc-104">È possibile che due membri dell'elenco siano separati solo da uno o più spazi.</span><span class="sxs-lookup"><span data-stu-id="a8bbc-104">One possible cause is two list members being separated only by a space or spaces.</span></span>  
   
- <span data-ttu-id="13e35-105">**ID errore:** BC32017</span><span class="sxs-lookup"><span data-stu-id="13e35-105">**Error ID:** BC32017</span></span>  
+ <span data-ttu-id="a8bbc-105">**ID errore:** BC32017</span><span class="sxs-lookup"><span data-stu-id="a8bbc-105">**Error ID:** BC32017</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="13e35-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="13e35-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a8bbc-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8bbc-106">To correct this error</span></span>  
   
-- <span data-ttu-id="13e35-107">Usare una virgola (,) per separare i membri dell'elenco e una parentesi di chiusura ()) per concludere l'elenco.</span><span class="sxs-lookup"><span data-stu-id="13e35-107">Use a comma (,) to separate list members and a closing parentheses ()) to terminate the list.</span></span>  
+- <span data-ttu-id="a8bbc-107">Usare una virgola (,) per separare i membri dell'elenco e una parentesi di chiusura ()) per concludere l'elenco.</span><span class="sxs-lookup"><span data-stu-id="a8bbc-107">Use a comma (,) to separate list members and a closing parentheses ()) to terminate the list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="13e35-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="13e35-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a8bbc-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8bbc-108">See also</span></span>
 
-- [<span data-ttu-id="13e35-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="13e35-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [<span data-ttu-id="13e35-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="13e35-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="a8bbc-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="a8bbc-109">Sub Procedures</span></span>](../programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="a8bbc-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="a8bbc-110">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
