--- a/docs/visual-basic/misc/bc32019.md
+++ b/docs/visual-basic/misc/bc32019.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32019
 ms.assetid: c28a3a7f-cd11-4657-bf76-b9daccc383bc
-ms.openlocfilehash: d8ba3658c97da9ca85b2d7bb0bc55345dfa96c86
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 20bc85f369e8a58f2d426b8da6c6afaa26f6f186
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64645984"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413856"
 ---
-# <a name="resume-or-goto-expected"></a><span data-ttu-id="7e806-102">È previsto 'Resume' o 'GoTo'</span><span class="sxs-lookup"><span data-stu-id="7e806-102">'Resume' or 'GoTo' expected</span></span>
-<span data-ttu-id="7e806-103">Un'istruzione `On Error` non contiene una clausola `Resume` né una clausola `GoTo` .</span><span class="sxs-lookup"><span data-stu-id="7e806-103">An `On Error` statement does not contain either a `Resume` clause or a `GoTo` clause.</span></span> <span data-ttu-id="7e806-104">È necessario usare una delle due clausole.</span><span class="sxs-lookup"><span data-stu-id="7e806-104">It must use one clause or the other.</span></span>  
+# <a name="resume-or-goto-expected"></a><span data-ttu-id="763b1-102">È previsto 'Resume' o 'GoTo'</span><span class="sxs-lookup"><span data-stu-id="763b1-102">'Resume' or 'GoTo' expected</span></span>
+<span data-ttu-id="763b1-103">Un'istruzione `On Error` non contiene una clausola `Resume` né una clausola `GoTo` .</span><span class="sxs-lookup"><span data-stu-id="763b1-103">An `On Error` statement does not contain either a `Resume` clause or a `GoTo` clause.</span></span> <span data-ttu-id="763b1-104">È necessario usare una delle due clausole.</span><span class="sxs-lookup"><span data-stu-id="763b1-104">It must use one clause or the other.</span></span>  
   
- <span data-ttu-id="7e806-105">**ID errore:** BC32019</span><span class="sxs-lookup"><span data-stu-id="7e806-105">**Error ID:** BC32019</span></span>  
+ <span data-ttu-id="763b1-105">**ID errore:** BC32019</span><span class="sxs-lookup"><span data-stu-id="763b1-105">**Error ID:** BC32019</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7e806-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7e806-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="763b1-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="763b1-106">To correct this error</span></span>  
   
-- <span data-ttu-id="7e806-107">Aggiungere una clausola `Resume` o `GoTo` all'istruzione `On Error` .</span><span class="sxs-lookup"><span data-stu-id="7e806-107">Add either a `Resume` clause or a `GoTo` clause to the `On Error` statement.</span></span>  
+- <span data-ttu-id="763b1-107">Aggiungere una clausola `Resume` o `GoTo` all'istruzione `On Error` .</span><span class="sxs-lookup"><span data-stu-id="763b1-107">Add either a `Resume` clause or a `GoTo` clause to the `On Error` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7e806-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7e806-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="763b1-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="763b1-108">See also</span></span>
 
-- [<span data-ttu-id="7e806-109">Istruzione On Error</span><span class="sxs-lookup"><span data-stu-id="7e806-109">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)
-- [<span data-ttu-id="7e806-110">Istruzione Resume</span><span class="sxs-lookup"><span data-stu-id="7e806-110">Resume Statement</span></span>](../../visual-basic/language-reference/statements/resume-statement.md)
-- [<span data-ttu-id="7e806-111">Istruzione GoTo</span><span class="sxs-lookup"><span data-stu-id="7e806-111">GoTo Statement</span></span>](../../visual-basic/language-reference/statements/goto-statement.md)
+- [<span data-ttu-id="763b1-109">Istruzione On Error</span><span class="sxs-lookup"><span data-stu-id="763b1-109">On Error Statement</span></span>](../language-reference/statements/on-error-statement.md)
+- [<span data-ttu-id="763b1-110">Istruzione Resume</span><span class="sxs-lookup"><span data-stu-id="763b1-110">Resume Statement</span></span>](../language-reference/statements/resume-statement.md)
+- [<span data-ttu-id="763b1-111">Istruzione GoTo</span><span class="sxs-lookup"><span data-stu-id="763b1-111">GoTo Statement</span></span>](../language-reference/statements/goto-statement.md)
