--- a/docs/visual-basic/misc/bc32067.md
+++ b/docs/visual-basic/misc/bc32067.md
@@ -7,42 +7,42 @@ f1_keywords:
 helpviewer_keywords:
 - BC32067
 ms.assetid: 93ae2848-0a72-4ae5-82a3-32e0a49bb7cd
-ms.openlocfilehash: de784f44e2c9bd3207727dc35e2ab2736314e8ba
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6c9cf72f2065c84a4d392d174592255fe644c77d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64753733"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413843"
 ---
-# <a name="attributes-cannot-be-generics-or-types-nested-inside-generics"></a><span data-ttu-id="9c69a-102">Gli attributi non possono essere generics o tipi annidati all'interno di generics</span><span class="sxs-lookup"><span data-stu-id="9c69a-102">Attributes cannot be generics or types nested inside generics</span></span>
+# <a name="attributes-cannot-be-generics-or-types-nested-inside-generics"></a><span data-ttu-id="220c8-102">Gli attributi non possono essere generics o tipi annidati all'interno di generics</span><span class="sxs-lookup"><span data-stu-id="220c8-102">Attributes cannot be generics or types nested inside generics</span></span>
 
-<span data-ttu-id="9c69a-103">Un attributo è dichiarato come tipo generico o all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="9c69a-103">An attribute is declared as a generic type, or within a generic type.</span></span>
+<span data-ttu-id="220c8-103">Un attributo è dichiarato come tipo generico o all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="220c8-103">An attribute is declared as a generic type, or within a generic type.</span></span>
 
-<span data-ttu-id="9c69a-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="9c69a-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="9c69a-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="9c69a-105">This means the following limitations apply:</span></span>
+<span data-ttu-id="220c8-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="220c8-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="220c8-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="220c8-105">This means the following limitations apply:</span></span>
 
-- <span data-ttu-id="9c69a-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="9c69a-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
+- <span data-ttu-id="220c8-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="220c8-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
 
-- <span data-ttu-id="9c69a-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="9c69a-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
+- <span data-ttu-id="220c8-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="220c8-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
 
-- <span data-ttu-id="9c69a-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="9c69a-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
+- <span data-ttu-id="220c8-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="220c8-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
 
-  - <span data-ttu-id="9c69a-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="9c69a-109">A generic type,</span></span>
+  - <span data-ttu-id="220c8-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="220c8-109">A generic type,</span></span>
 
-  - <span data-ttu-id="9c69a-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="9c69a-110">A type constructed from a generic type,</span></span>
+  - <span data-ttu-id="220c8-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="220c8-110">A type constructed from a generic type,</span></span>
 
-  - <span data-ttu-id="9c69a-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="9c69a-111">A type parameter of a containing type, or</span></span>
+  - <span data-ttu-id="220c8-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="220c8-111">A type parameter of a containing type, or</span></span>
 
-  - <span data-ttu-id="9c69a-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="9c69a-112">A type constructed from a type parameter of a containing type.</span></span>
+  - <span data-ttu-id="220c8-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="220c8-112">A type constructed from a type parameter of a containing type.</span></span>
 
-<span data-ttu-id="9c69a-113">**ID errore:** BC32067</span><span class="sxs-lookup"><span data-stu-id="9c69a-113">**Error ID:** BC32067</span></span>
+<span data-ttu-id="220c8-113">**ID errore:** BC32067</span><span class="sxs-lookup"><span data-stu-id="220c8-113">**Error ID:** BC32067</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="9c69a-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9c69a-114">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="220c8-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="220c8-114">To correct this error</span></span>
 
-- <span data-ttu-id="9c69a-115">Se la dichiarazione di attributo include la parola chiave `Of` e un elenco di parametri di tipo, rimuoverli.</span><span class="sxs-lookup"><span data-stu-id="9c69a-115">If the attribute declaration includes the `Of` keyword and a type parameter list, then remove them.</span></span>
+- <span data-ttu-id="220c8-115">Se la dichiarazione di attributo include la parola chiave `Of` e un elenco di parametri di tipo, rimuoverli.</span><span class="sxs-lookup"><span data-stu-id="220c8-115">If the attribute declaration includes the `Of` keyword and a type parameter list, then remove them.</span></span>
 
-- <span data-ttu-id="9c69a-116">Se la dichiarazione di attributo compare all'interno di un tipo generico, spostarla in una posizione che sia esterna a qualsiasi tipo generico.</span><span class="sxs-lookup"><span data-stu-id="9c69a-116">If the attribute declaration appears inside a generic type, then move it to where it is not inside any generic type.</span></span>
+- <span data-ttu-id="220c8-116">Se la dichiarazione di attributo compare all'interno di un tipo generico, spostarla in una posizione che sia esterna a qualsiasi tipo generico.</span><span class="sxs-lookup"><span data-stu-id="220c8-116">If the attribute declaration appears inside a generic type, then move it to where it is not inside any generic type.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="9c69a-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9c69a-117">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="220c8-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="220c8-117">See also</span></span>
 
-- <span data-ttu-id="9c69a-118"><xref:System.Attribute>s</span><span class="sxs-lookup"><span data-stu-id="9c69a-118"><xref:System.Attribute>s</span></span>
-- [<span data-ttu-id="9c69a-119">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9c69a-119">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- <span data-ttu-id="220c8-118"><xref:System.Attribute>s</span><span class="sxs-lookup"><span data-stu-id="220c8-118"><xref:System.Attribute>s</span></span>
+- [<span data-ttu-id="220c8-119">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="220c8-119">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
