--- a/docs/visual-basic/misc/bc32073.md
+++ b/docs/visual-basic/misc/bc32073.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC32073
 ms.assetid: 47246e2b-51d4-4a10-a3ac-bc77b44fa2ca
-ms.openlocfilehash: 9cc4b9eeeb2628dc3732eb93b7c413f83eaceabd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ca30fd7e3bd7b56dc3a251cac5ba051d8ca2cd52
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61943611"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413778"
 ---
-# <a name="modules-cannot-be-generic"></a><span data-ttu-id="58c66-102">I moduli non possono essere generici</span><span class="sxs-lookup"><span data-stu-id="58c66-102">Modules cannot be generic</span></span>
-<span data-ttu-id="58c66-103">Un'istruzione `Module` usa la parola chiave `Of` per introdurre parametri di tipo generico.</span><span class="sxs-lookup"><span data-stu-id="58c66-103">A `Module` statement uses the `Of` keyword to introduce generic type parameters.</span></span>  
+# <a name="modules-cannot-be-generic"></a><span data-ttu-id="02d64-102">I moduli non possono essere generici</span><span class="sxs-lookup"><span data-stu-id="02d64-102">Modules cannot be generic</span></span>
+<span data-ttu-id="02d64-103">Un'istruzione `Module` usa la parola chiave `Of` per introdurre parametri di tipo generico.</span><span class="sxs-lookup"><span data-stu-id="02d64-103">A `Module` statement uses the `Of` keyword to introduce generic type parameters.</span></span>  
   
- <span data-ttu-id="58c66-104">È possibile definire e usare classi, strutture, interfacce, routine e delegati generici.</span><span class="sxs-lookup"><span data-stu-id="58c66-104">You can define and use generic classes, structures, interfaces, procedures, and delegates.</span></span> <span data-ttu-id="58c66-105">Non è possibile definire moduli generici.</span><span class="sxs-lookup"><span data-stu-id="58c66-105">You cannot define generic modules.</span></span>  
+ <span data-ttu-id="02d64-104">È possibile definire e usare classi, strutture, interfacce, routine e delegati generici.</span><span class="sxs-lookup"><span data-stu-id="02d64-104">You can define and use generic classes, structures, interfaces, procedures, and delegates.</span></span> <span data-ttu-id="02d64-105">Non è possibile definire moduli generici.</span><span class="sxs-lookup"><span data-stu-id="02d64-105">You cannot define generic modules.</span></span>  
   
- <span data-ttu-id="58c66-106">**ID errore:** BC32073</span><span class="sxs-lookup"><span data-stu-id="58c66-106">**Error ID:** BC32073</span></span>  
+ <span data-ttu-id="02d64-106">**ID errore:** BC32073</span><span class="sxs-lookup"><span data-stu-id="02d64-106">**Error ID:** BC32073</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="58c66-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="58c66-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="02d64-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="02d64-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="58c66-108">Rimuovere la parola chiave `Of` dall'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="58c66-108">Remove the `Of` keyword from the `Module` statement.</span></span>  
+1. <span data-ttu-id="02d64-108">Rimuovere la parola chiave `Of` dall'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="02d64-108">Remove the `Of` keyword from the `Module` statement.</span></span>  
   
-2. <span data-ttu-id="58c66-109">Se si vuole la funzionalità di un modulo generico, la migliore approssimazione è una classe generica.</span><span class="sxs-lookup"><span data-stu-id="58c66-109">If you want the functionality of a generic module, the closest approximation is a generic class.</span></span> <span data-ttu-id="58c66-110">Usare un [istruzione Class](../../visual-basic/language-reference/statements/class-statement.md) anziché un `Module` istruzione.</span><span class="sxs-lookup"><span data-stu-id="58c66-110">Use a [Class Statement](../../visual-basic/language-reference/statements/class-statement.md) instead of a `Module` statement.</span></span>  
+2. <span data-ttu-id="02d64-109">Se si vuole la funzionalità di un modulo generico, la migliore approssimazione è una classe generica.</span><span class="sxs-lookup"><span data-stu-id="02d64-109">If you want the functionality of a generic module, the closest approximation is a generic class.</span></span> <span data-ttu-id="02d64-110">Utilizzare un' [istruzione di classe](../language-reference/statements/class-statement.md) anziché un' `Module` istruzione.</span><span class="sxs-lookup"><span data-stu-id="02d64-110">Use a [Class Statement](../language-reference/statements/class-statement.md) instead of a `Module` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="58c66-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="58c66-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="02d64-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="02d64-111">See also</span></span>
 
-- [<span data-ttu-id="58c66-112">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="58c66-112">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
-- [<span data-ttu-id="58c66-113">Of</span><span class="sxs-lookup"><span data-stu-id="58c66-113">Of</span></span>](../../visual-basic/language-reference/statements/of-clause.md)
-- [<span data-ttu-id="58c66-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="58c66-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="58c66-115">Procedura: Definire una classe in grado di fornire funzionalità identiche con tipi di dati diversi</span><span class="sxs-lookup"><span data-stu-id="58c66-115">How to: Define a Class That Can Provide Identical Functionality on Different Data Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-define-a-class-that-can-provide-identical-functionality.md)
+- [<span data-ttu-id="02d64-112">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="02d64-112">Module Statement</span></span>](../language-reference/statements/module-statement.md)
+- [<span data-ttu-id="02d64-113">Di</span><span class="sxs-lookup"><span data-stu-id="02d64-113">Of</span></span>](../language-reference/statements/of-clause.md)
+- [<span data-ttu-id="02d64-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="02d64-114">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="02d64-115">Procedura: Definire una classe in grado di fornire funzionalità identiche con tipi di dati diversi</span><span class="sxs-lookup"><span data-stu-id="02d64-115">How to: Define a Class That Can Provide Identical Functionality on Different Data Types</span></span>](../programming-guide/language-features/data-types/how-to-define-a-class-that-can-provide-identical-functionality.md)
