--- a/docs/visual-basic/misc/bc32090.md
+++ b/docs/visual-basic/misc/bc32090.md
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC32090
 ms.assetid: 02f4d82c-dcd7-44cc-b725-81e235f680f6
-ms.openlocfilehash: edfb77f33ab06d6963e6b81347bf398af2887dfc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ac7c844fb3ed01a5395f8b0f64fe81813363bc32
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618583"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358633"
 ---
-# <a name="type-parameter-cannot-have-the-same-name-as-its-defining-function"></a><span data-ttu-id="ebb94-102">Il nome del parametro di tipo non può essere uguale a quello della funzione che lo definisce</span><span class="sxs-lookup"><span data-stu-id="ebb94-102">Type parameter cannot have the same name as its defining function</span></span>
-<span data-ttu-id="ebb94-103">Un parametro di tipo di un tipo generico viene dichiarato con lo stesso nome del tipo generico.</span><span class="sxs-lookup"><span data-stu-id="ebb94-103">A type parameter of a generic type is declared with the same name as the generic type.</span></span>  
+# <a name="type-parameter-cannot-have-the-same-name-as-its-defining-function"></a><span data-ttu-id="d9ad8-102">Il nome del parametro di tipo non può essere uguale a quello della funzione che lo definisce</span><span class="sxs-lookup"><span data-stu-id="d9ad8-102">Type parameter cannot have the same name as its defining function</span></span>
+<span data-ttu-id="d9ad8-103">Un parametro di tipo di un tipo generico viene dichiarato con lo stesso nome del tipo generico.</span><span class="sxs-lookup"><span data-stu-id="d9ad8-103">A type parameter of a generic type is declared with the same name as the generic type.</span></span>  
   
- <span data-ttu-id="ebb94-104">Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:</span><span class="sxs-lookup"><span data-stu-id="ebb94-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
+ <span data-ttu-id="d9ad8-104">Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:</span><span class="sxs-lookup"><span data-stu-id="d9ad8-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
   
-- <span data-ttu-id="ebb94-105">Ogni altro parametro di tipo nell'elenco di parametri dello stesso tipo,</span><span class="sxs-lookup"><span data-stu-id="ebb94-105">Every other type parameter in the same type parameter list,</span></span>  
+- <span data-ttu-id="d9ad8-105">Ogni altro parametro di tipo nell'elenco di parametri dello stesso tipo,</span><span class="sxs-lookup"><span data-stu-id="d9ad8-105">Every other type parameter in the same type parameter list,</span></span>  
   
-- <span data-ttu-id="ebb94-106">Ogni parametro di tipo nell'elenco dei parametri di tipo di qualsiasi tipo generico contenitore e</span><span class="sxs-lookup"><span data-stu-id="ebb94-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
+- <span data-ttu-id="d9ad8-106">Ogni parametro di tipo nell'elenco dei parametri di tipo di qualsiasi tipo generico contenitore e</span><span class="sxs-lookup"><span data-stu-id="d9ad8-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
   
-- <span data-ttu-id="ebb94-107">Il nome del tipo generico stesso.</span><span class="sxs-lookup"><span data-stu-id="ebb94-107">The name of the generic type itself.</span></span>  
+- <span data-ttu-id="d9ad8-107">Il nome del tipo generico stesso.</span><span class="sxs-lookup"><span data-stu-id="d9ad8-107">The name of the generic type itself.</span></span>  
   
- <span data-ttu-id="ebb94-108">**ID errore:** BC32090</span><span class="sxs-lookup"><span data-stu-id="ebb94-108">**Error ID:** BC32090</span></span>  
+ <span data-ttu-id="d9ad8-108">**ID errore:** BC32090</span><span class="sxs-lookup"><span data-stu-id="d9ad8-108">**Error ID:** BC32090</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ebb94-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ebb94-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d9ad8-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d9ad8-109">To correct this error</span></span>  
   
-- <span data-ttu-id="ebb94-110">Rinominare il parametro di tipo in modo che sia diverso da qualsiasi altro nome presente nell'elenco in questa pagina della Guida.</span><span class="sxs-lookup"><span data-stu-id="ebb94-110">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
+- <span data-ttu-id="d9ad8-110">Rinominare il parametro di tipo in modo che sia diverso da qualsiasi altro nome presente nell'elenco in questa pagina della Guida.</span><span class="sxs-lookup"><span data-stu-id="d9ad8-110">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ebb94-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ebb94-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d9ad8-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d9ad8-111">See also</span></span>
 
-- [<span data-ttu-id="ebb94-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="ebb94-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="ebb94-113">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="ebb94-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="d9ad8-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d9ad8-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="d9ad8-113">Type List</span><span class="sxs-lookup"><span data-stu-id="d9ad8-113">Type List</span></span>](../language-reference/statements/type-list.md)
