--- a/docs/visual-basic/misc/bc32103.md
+++ b/docs/visual-basic/misc/bc32103.md
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC32103
 ms.assetid: 5418b420-a014-4006-84aa-20ddac6739e6
-ms.openlocfilehash: d7a5e5ce702a68f187a093ccf79dbcd6760bb092
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4f9a16dfdf626976e15a2f9a53ca96c5dd32f186
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61672224"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413687"
 ---
-# <a name="new-constraint-and-structure-constraint-cannot-be-combined"></a><span data-ttu-id="4a8bc-102">Non è possibile combinare i vincoli 'New' e 'Structure'</span><span class="sxs-lookup"><span data-stu-id="4a8bc-102">'New' constraint and 'Structure' constraint cannot be combined</span></span>
-<span data-ttu-id="4a8bc-103">Un elenco di vincoli include sia la [nuovo operatore](../../visual-basic/language-reference/operators/new-operator.md) vincolo e il [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) vincolo.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-103">A constraint list includes both the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint and the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint.</span></span>  
+# <a name="new-constraint-and-structure-constraint-cannot-be-combined"></a><span data-ttu-id="b502c-102">Non è possibile combinare i vincoli 'New' e 'Structure'</span><span class="sxs-lookup"><span data-stu-id="b502c-102">'New' constraint and 'Structure' constraint cannot be combined</span></span>
+<span data-ttu-id="b502c-103">Un elenco di vincoli include sia il vincolo di [nuovo operatore](../language-reference/operators/new-operator.md) che il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) .</span><span class="sxs-lookup"><span data-stu-id="b502c-103">A constraint list includes both the [New Operator](../language-reference/operators/new-operator.md) constraint and the [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) constraint.</span></span>  
   
- <span data-ttu-id="4a8bc-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) ).</span><span class="sxs-lookup"><span data-stu-id="4a8bc-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint).</span></span> <span data-ttu-id="4a8bc-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="b502c-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) ).</span><span class="sxs-lookup"><span data-stu-id="b502c-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint).</span></span> <span data-ttu-id="b502c-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="b502c-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="4a8bc-106">Il vincolo `New` specifica che l'argomento di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-106">The `New` constraint specifies that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="4a8bc-107">Tuttavia, una struttura non può avere un costruttore senza parametri non condiviso.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-107">However, a structure cannot have a nonshared parameterless constructor.</span></span> <span data-ttu-id="4a8bc-108">Quindi, i vincoli `New` e `Structure` sono in conflitto.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-108">Therefore, the `New` and `Structure` constraints are in conflict.</span></span>  
+ <span data-ttu-id="b502c-106">Il vincolo `New` specifica che l'argomento di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="b502c-106">The `New` constraint specifies that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="b502c-107">Tuttavia, una struttura non può avere un costruttore senza parametri non condiviso.</span><span class="sxs-lookup"><span data-stu-id="b502c-107">However, a structure cannot have a nonshared parameterless constructor.</span></span> <span data-ttu-id="b502c-108">Quindi, i vincoli `New` e `Structure` sono in conflitto.</span><span class="sxs-lookup"><span data-stu-id="b502c-108">Therefore, the `New` and `Structure` constraints are in conflict.</span></span>  
   
- <span data-ttu-id="4a8bc-109">**ID errore:** BC32103</span><span class="sxs-lookup"><span data-stu-id="4a8bc-109">**Error ID:** BC32103</span></span>  
+ <span data-ttu-id="b502c-109">**ID errore:** BC32103</span><span class="sxs-lookup"><span data-stu-id="b502c-109">**Error ID:** BC32103</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4a8bc-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4a8bc-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b502c-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b502c-110">To correct this error</span></span>  
   
-1. <span data-ttu-id="4a8bc-111">Decidere se richiedere un tipo valore di tipo o un tipo riferimento per l'argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-111">Decide whether you want to require a value type or a reference type for the type argument.</span></span>  
+1. <span data-ttu-id="b502c-111">Decidere se richiedere un tipo valore di tipo o un tipo riferimento per l'argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="b502c-111">Decide whether you want to require a value type or a reference type for the type argument.</span></span>  
   
-2. <span data-ttu-id="4a8bc-112">Se si vuole che l'argomento di tipo sia un tipo valore, rimuovere la parola chiave `New` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-112">If you want the type argument to be a value type, remove the `New` keyword from the constraint list.</span></span>  
+2. <span data-ttu-id="b502c-112">Se si vuole che l'argomento di tipo sia un tipo valore, rimuovere la parola chiave `New` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="b502c-112">If you want the type argument to be a value type, remove the `New` keyword from the constraint list.</span></span>  
   
-3. <span data-ttu-id="4a8bc-113">Se si vuole che l'argomento di tipo sia un tipo riferimento, rimuovere la parola chiave `Structure` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="4a8bc-113">If you want the type argument to be a reference type, remove the `Structure` keyword from the constraint list.</span></span>  
+3. <span data-ttu-id="b502c-113">Se si vuole che l'argomento di tipo sia un tipo riferimento, rimuovere la parola chiave `Structure` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="b502c-113">If you want the type argument to be a reference type, remove the `Structure` keyword from the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4a8bc-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4a8bc-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b502c-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b502c-114">See also</span></span>
 
-- [<span data-ttu-id="4a8bc-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4a8bc-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="4a8bc-116">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="4a8bc-116">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="b502c-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b502c-115">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="b502c-116">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="b502c-116">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
