--- a/docs/visual-basic/misc/bc32106.md
+++ b/docs/visual-basic/misc/bc32106.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'non soddisfa il vincolo 'Class' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' non soddisfa il vincolo ' Class ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32106
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32106
 ms.assetid: 1bac1dd6-f86b-4e98-ba2d-57d1936e3658
-ms.openlocfilehash: 55288dc90cc0314914068612f800bc882bd9cad1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2cac1e83f881a9f3eeae1d1b4fba0c05e59ecf7a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640487"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413648"
 ---
-# <a name="type-argument-typeargumentname-does-not-satisfy-the-class-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="64680-102">Argomento di tipo '\<nomeargomentotipo >' non soddisfa il vincolo' della classe per il parametro di tipo\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="64680-102">Type argument '\<typeargumentname>' does not satisfy the 'Class' constraint for type parameter '\<typeparametername>'</span></span>
-<span data-ttu-id="64680-103">Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di tipo riferimento nel parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="64680-103">A type argument supplied to a generic type does not satisfy the reference type constraint on its corresponding type parameter.</span></span>  
+# <a name="type-argument-typeargumentname-does-not-satisfy-the-class-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="a8e8d-102">L'argomento di tipo ' \<typeargumentname> ' non soddisfa il vincolo ' Class ' per il parametro di tipo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="a8e8d-102">Type argument '\<typeargumentname>' does not satisfy the 'Class' constraint for type parameter '\<typeparametername>'</span></span>
+<span data-ttu-id="a8e8d-103">Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di tipo riferimento nel parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="a8e8d-103">A type argument supplied to a generic type does not satisfy the reference type constraint on its corresponding type parameter.</span></span>  
   
- <span data-ttu-id="64680-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="64680-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="64680-105">Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito generale specificando una delle seguenti condizioni:</span><span class="sxs-lookup"><span data-stu-id="64680-105">If you do not include any specific class or interface in the constraint list, you can impose a general requirement by specifying one of the following:</span></span>  
+ <span data-ttu-id="a8e8d-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="a8e8d-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="a8e8d-105">Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito generale specificando una delle seguenti condizioni:</span><span class="sxs-lookup"><span data-stu-id="a8e8d-105">If you do not include any specific class or interface in the constraint list, you can impose a general requirement by specifying one of the following:</span></span>  
   
-- <span data-ttu-id="64680-106">L'argomento di tipo deve essere un tipo valore (deve includere il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="64680-106">The type argument must be a value type (include the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint)</span></span>  
+- <span data-ttu-id="a8e8d-106">L'argomento di tipo deve essere un tipo valore (deve includere il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="a8e8d-106">The type argument must be a value type (include the [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) constraint)</span></span>  
   
-- <span data-ttu-id="64680-107">L'argomento di tipo deve essere un tipo riferimento (deve includere il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="64680-107">The type argument must be a reference type (include the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint)</span></span>  
+- <span data-ttu-id="a8e8d-107">L'argomento di tipo deve essere un tipo riferimento (deve includere il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) )</span><span class="sxs-lookup"><span data-stu-id="a8e8d-107">The type argument must be a reference type (include the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint)</span></span>  
   
- <span data-ttu-id="64680-108">Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="64680-108">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="a8e8d-108">Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="a8e8d-108">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="64680-109">**ID errore:** BC32106</span><span class="sxs-lookup"><span data-stu-id="64680-109">**Error ID:** BC32106</span></span>  
+ <span data-ttu-id="a8e8d-109">**ID errore:** BC32106</span><span class="sxs-lookup"><span data-stu-id="a8e8d-109">**Error ID:** BC32106</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="64680-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="64680-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a8e8d-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8e8d-110">To correct this error</span></span>  
   
-- <span data-ttu-id="64680-111">Selezionare un argomento di tipo di qualsiasi tipo riferimento.</span><span class="sxs-lookup"><span data-stu-id="64680-111">Select a type argument of any reference type.</span></span>  
+- <span data-ttu-id="a8e8d-111">Selezionare un argomento di tipo di qualsiasi tipo riferimento.</span><span class="sxs-lookup"><span data-stu-id="a8e8d-111">Select a type argument of any reference type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="64680-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="64680-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a8e8d-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8e8d-112">See also</span></span>
 
-- [<span data-ttu-id="64680-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="64680-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="64680-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="64680-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [<span data-ttu-id="64680-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="64680-115">How to: Use a Generic Class</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [<span data-ttu-id="a8e8d-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a8e8d-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="a8e8d-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="a8e8d-114">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="a8e8d-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="a8e8d-115">How to: Use a Generic Class</span></span>](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
