--- a/docs/visual-basic/misc/bc32107.md
+++ b/docs/visual-basic/misc/bc32107.md
@@ -7,41 +7,41 @@ f1_keywords:
 helpviewer_keywords:
 - BC32107
 ms.assetid: 218a7f0c-dd4f-4086-a52c-e8d581377e8b
-ms.openlocfilehash: e4afd105cdafafec2096e6de6646e9ee3b303254
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 15fb8c3e9cf4a63f190eae75c35c5248bac57b9f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640479"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413635"
 ---
-# <a name="class-constraint-and-a-specific-class-type-constraint-cannot-be-combined"></a><span data-ttu-id="9165f-102">Impossibile combinare il vincolo 'Class' e uno specifico vincolo di tipo di classe</span><span class="sxs-lookup"><span data-stu-id="9165f-102">'Class' constraint and a specific class type constraint cannot be combined</span></span>
-<span data-ttu-id="9165f-103">Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) che il nome di una classe definita.</span><span class="sxs-lookup"><span data-stu-id="9165f-103">A constraint list includes both the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint and the name of a defined class.</span></span>  
+# <a name="class-constraint-and-a-specific-class-type-constraint-cannot-be-combined"></a><span data-ttu-id="dac42-102">Impossibile combinare il vincolo 'Class' e uno specifico vincolo di tipo di classe</span><span class="sxs-lookup"><span data-stu-id="dac42-102">'Class' constraint and a specific class type constraint cannot be combined</span></span>
+<span data-ttu-id="dac42-103">Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) che il nome di una classe definita.</span><span class="sxs-lookup"><span data-stu-id="dac42-103">A constraint list includes both the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint and the name of a defined class.</span></span>  
   
- <span data-ttu-id="9165f-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="9165f-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="9165f-105">Si possono specificare i requisiti seguenti in qualsiasi combinazione:</span><span class="sxs-lookup"><span data-stu-id="9165f-105">You can specify the following requirements in any combination:</span></span>  
+ <span data-ttu-id="dac42-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="dac42-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="dac42-105">Si possono specificare i requisiti seguenti in qualsiasi combinazione:</span><span class="sxs-lookup"><span data-stu-id="dac42-105">You can specify the following requirements in any combination:</span></span>  
   
-- <span data-ttu-id="9165f-106">L'argomento di tipo deve implementare una o più interfacce</span><span class="sxs-lookup"><span data-stu-id="9165f-106">The type argument must implement one or more interfaces</span></span>  
+- <span data-ttu-id="dac42-106">L'argomento di tipo deve implementare una o più interfacce</span><span class="sxs-lookup"><span data-stu-id="dac42-106">The type argument must implement one or more interfaces</span></span>  
   
-- <span data-ttu-id="9165f-107">L'argomento di tipo deve ereditare al massimo da una classe</span><span class="sxs-lookup"><span data-stu-id="9165f-107">The type argument must inherit from at most one class</span></span>  
+- <span data-ttu-id="dac42-107">L'argomento di tipo deve ereditare al massimo da una classe</span><span class="sxs-lookup"><span data-stu-id="dac42-107">The type argument must inherit from at most one class</span></span>  
   
-- <span data-ttu-id="9165f-108">L'argomento di tipo deve esporre un costruttore senza parametri a cui il codice di creazione possa accedere (includere il vincolo `New` )</span><span class="sxs-lookup"><span data-stu-id="9165f-108">The type argument must expose a parameterless constructor that the creating code can access (include the `New` constraint)</span></span>  
+- <span data-ttu-id="dac42-108">L'argomento di tipo deve esporre un costruttore senza parametri a cui il codice di creazione possa accedere (includere il vincolo `New` )</span><span class="sxs-lookup"><span data-stu-id="dac42-108">The type argument must expose a parameterless constructor that the creating code can access (include the `New` constraint)</span></span>  
   
- <span data-ttu-id="9165f-109">Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito più generale specificando una delle condizioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="9165f-109">If you do not include any specific class or interface in the constraint list, you can impose a more general requirement by specifying one of the following:</span></span>  
+ <span data-ttu-id="dac42-109">Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito più generale specificando una delle condizioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="dac42-109">If you do not include any specific class or interface in the constraint list, you can impose a more general requirement by specifying one of the following:</span></span>  
   
-- <span data-ttu-id="9165f-110">L'argomento di tipo deve essere un tipo valore (includere il vincolo `Structure` )</span><span class="sxs-lookup"><span data-stu-id="9165f-110">The type argument must be a value type (include the `Structure` constraint)</span></span>  
+- <span data-ttu-id="dac42-110">L'argomento di tipo deve essere un tipo valore (includere il vincolo `Structure` )</span><span class="sxs-lookup"><span data-stu-id="dac42-110">The type argument must be a value type (include the `Structure` constraint)</span></span>  
   
-- <span data-ttu-id="9165f-111">L'argomento di tipo deve essere un tipo riferimento (includere il vincolo `Class` )</span><span class="sxs-lookup"><span data-stu-id="9165f-111">The type argument must be a reference type (include the `Class` constraint)</span></span>  
+- <span data-ttu-id="dac42-111">L'argomento di tipo deve essere un tipo riferimento (includere il vincolo `Class` )</span><span class="sxs-lookup"><span data-stu-id="dac42-111">The type argument must be a reference type (include the `Class` constraint)</span></span>  
   
- <span data-ttu-id="9165f-112">Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="9165f-112">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="dac42-112">Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="dac42-112">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="9165f-113">**ID errore:** BC32107</span><span class="sxs-lookup"><span data-stu-id="9165f-113">**Error ID:** BC32107</span></span>  
+ <span data-ttu-id="dac42-113">**ID errore:** BC32107</span><span class="sxs-lookup"><span data-stu-id="dac42-113">**Error ID:** BC32107</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9165f-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9165f-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dac42-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dac42-114">To correct this error</span></span>  
   
-- <span data-ttu-id="9165f-115">Se si vuole consentire che l'argomento di tipo sia un tipo riferimento, rimuovere il nome della classe dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="9165f-115">If you want to allow the type argument to be any reference type, remove the class name from the constraint list.</span></span>  
+- <span data-ttu-id="dac42-115">Se si vuole consentire che l'argomento di tipo sia un tipo riferimento, rimuovere il nome della classe dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="dac42-115">If you want to allow the type argument to be any reference type, remove the class name from the constraint list.</span></span>  
   
-- <span data-ttu-id="9165f-116">Se si vuole che l'argomento di tipo erediti dal nome della classe specificato, rimuovere la parola chiave `Class` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="9165f-116">If you want the type argument to inherit from the specified class name, remove the `Class` keyword from the constraint list.</span></span>  
+- <span data-ttu-id="dac42-116">Se si vuole che l'argomento di tipo erediti dal nome della classe specificato, rimuovere la parola chiave `Class` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="dac42-116">If you want the type argument to inherit from the specified class name, remove the `Class` keyword from the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9165f-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9165f-117">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dac42-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dac42-117">See also</span></span>
 
-- [<span data-ttu-id="9165f-118">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9165f-118">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="9165f-119">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="9165f-119">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="dac42-118">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dac42-118">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="dac42-119">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="dac42-119">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
