--- a/docs/visual-basic/misc/bc42303.md
+++ b/docs/visual-basic/misc/bc42303.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC42303
 ms.assetid: b09d3d91-395e-4c72-981e-e9f7d467e1f5
-ms.openlocfilehash: 809250ff5411728ca4a20f49912f91871b893436
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f1833d82cc23a7a47f6edecdf89453555cacf937
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588044"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413557"
 ---
-# <a name="xml-comment-cannot-appear-within-a-method-or-a-property"></a><span data-ttu-id="60cdd-102">Il commento XML non può essere specificato all'interno di un metodo o di una proprietà</span><span class="sxs-lookup"><span data-stu-id="60cdd-102">XML comment cannot appear within a method or a property</span></span>
-<span data-ttu-id="60cdd-103">Non è possibile specificare un commento XML all'interno di un metodo o di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="60cdd-103">An XML comment cannot appear within a method or a property.</span></span> <span data-ttu-id="60cdd-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="60cdd-104">The XML comment will be ignored.</span></span> <span data-ttu-id="60cdd-105">I blocchi di commento XML non possono essere inseriti in metodi o proprietà.</span><span class="sxs-lookup"><span data-stu-id="60cdd-105">XML comment blocks cannot appear within methods or properties.</span></span>  
+# <a name="xml-comment-cannot-appear-within-a-method-or-a-property"></a><span data-ttu-id="fb1d0-102">Il commento XML non può essere specificato all'interno di un metodo o di una proprietà</span><span class="sxs-lookup"><span data-stu-id="fb1d0-102">XML comment cannot appear within a method or a property</span></span>
+<span data-ttu-id="fb1d0-103">Non è possibile specificare un commento XML all'interno di un metodo o di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="fb1d0-103">An XML comment cannot appear within a method or a property.</span></span> <span data-ttu-id="fb1d0-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="fb1d0-104">The XML comment will be ignored.</span></span> <span data-ttu-id="fb1d0-105">I blocchi di commento XML non possono essere inseriti in metodi o proprietà.</span><span class="sxs-lookup"><span data-stu-id="fb1d0-105">XML comment blocks cannot appear within methods or properties.</span></span>  
   
- <span data-ttu-id="60cdd-106">**ID errore:** BC42303</span><span class="sxs-lookup"><span data-stu-id="60cdd-106">**Error ID:** BC42303</span></span>  
+ <span data-ttu-id="fb1d0-106">**ID errore:** BC42303</span><span class="sxs-lookup"><span data-stu-id="fb1d0-106">**Error ID:** BC42303</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="60cdd-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="60cdd-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fb1d0-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fb1d0-107">To correct this error</span></span>  
   
-- <span data-ttu-id="60cdd-108">Rimuovere il blocco di commento o spostarlo in una posizione più appropriata.</span><span class="sxs-lookup"><span data-stu-id="60cdd-108">Remove the comment block or move it to a more appropriate location.</span></span>  
+- <span data-ttu-id="fb1d0-108">Rimuovere il blocco di commento o spostarlo in una posizione più appropriata.</span><span class="sxs-lookup"><span data-stu-id="fb1d0-108">Remove the comment block or move it to a more appropriate location.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="60cdd-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="60cdd-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fb1d0-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fb1d0-109">See also</span></span>
 
-- [<span data-ttu-id="60cdd-110">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="60cdd-110">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [<span data-ttu-id="60cdd-111">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="60cdd-111">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
+- [<span data-ttu-id="fb1d0-110">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="fb1d0-110">How to: Create XML Documentation</span></span>](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [<span data-ttu-id="fb1d0-111">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="fb1d0-111">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
