--- a/docs/visual-basic/misc/bc42304.md
+++ b/docs/visual-basic/misc/bc42304.md
@@ -1,5 +1,5 @@
 ---
-title: 'Errore di analisi di documentazione XML: <error>'
+title: 'Errore di analisi della documentazione XML: <error>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc42304
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC42304
 ms.assetid: 44b043d2-ebfe-415c-87ed-00ea32227b23
-ms.openlocfilehash: 90b12dab28145d9aeb64944b8834c56fa2e47df5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c2e29f5aab136c0fb93d1a2673cd903ae6218e46
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588031"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413544"
 ---
-# <a name="xml-documentation-parse-error-error"></a><span data-ttu-id="078fb-102">Errore di analisi di documentazione XML: \<errore ></span><span class="sxs-lookup"><span data-stu-id="078fb-102">XML documentation parse error: \<error></span></span>
-<span data-ttu-id="078fb-103">I messaggi seguenti vengono visualizzati con questo errore.</span><span class="sxs-lookup"><span data-stu-id="078fb-103">The following messages may appear with this error.</span></span> <span data-ttu-id="078fb-104">Per altre informazioni, vedere l'argomento specifico:</span><span class="sxs-lookup"><span data-stu-id="078fb-104">See the individual topic for more information:</span></span>  
+# <a name="xml-documentation-parse-error-error"></a><span data-ttu-id="a68e8-102">Errore di analisi della documentazione XML: \<error></span><span class="sxs-lookup"><span data-stu-id="a68e8-102">XML documentation parse error: \<error></span></span>
+<span data-ttu-id="a68e8-103">I messaggi seguenti vengono visualizzati con questo errore.</span><span class="sxs-lookup"><span data-stu-id="a68e8-103">The following messages may appear with this error.</span></span> <span data-ttu-id="a68e8-104">Per altre informazioni, vedere l'argomento specifico:</span><span class="sxs-lookup"><span data-stu-id="a68e8-104">See the individual topic for more information:</span></span>  
   
-- [<span data-ttu-id="078fb-105">Tag del commento XML '\<tag >' presente più volte con attributi identici nello stesso blocco di commento XML</span><span class="sxs-lookup"><span data-stu-id="078fb-105">XML comment tag '\<tag>' appears with identical attributes more than once in the same XML comment block</span></span>](../../visual-basic/misc/bc42305.md)  
+- [<span data-ttu-id="a68e8-105">Il tag '\<tag>' del commento XML è presente più volte con attributi identici nello stesso blocco di commento XML</span><span class="sxs-lookup"><span data-stu-id="a68e8-105">XML comment tag '\<tag>' appears with identical attributes more than once in the same XML comment block</span></span>](bc42305.md)  
   
-- [<span data-ttu-id="078fb-106">Tag del commento XML '\<tag >' non è consentito in un '\<elemento >' elemento di linguaggio</span><span class="sxs-lookup"><span data-stu-id="078fb-106">XML comment tag '\<tag>' is not permitted on a '\<element>' language element</span></span>](../../visual-basic/misc/bc42306.md)  
+- [<span data-ttu-id="a68e8-106">Il tag del commento XML \<tag> non è consentito in un elemento di linguaggio '\<element>'</span><span class="sxs-lookup"><span data-stu-id="a68e8-106">XML comment tag '\<tag>' is not permitted on a '\<element>' language element</span></span>](bc42306.md)  
   
-- [<span data-ttu-id="078fb-107">Il parametro del commento XML '\<parametro >' non corrisponde a un parametro corrispondente \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="078fb-107">XML comment parameter '\<parameter>' does not match a parameter on the corresponding \<keyword> statement</span></span>](../../visual-basic/misc/bc42307.md)  
+- [<span data-ttu-id="a68e8-107">Il parametro '\<parameter>' del commento XML non corrisponde a un parametro nell'istruzione \<keyword> corrispondente</span><span class="sxs-lookup"><span data-stu-id="a68e8-107">XML comment parameter '\<parameter>' does not match a parameter on the corresponding \<keyword> statement</span></span>](bc42307.md)  
   
-- [<span data-ttu-id="078fb-108">Il parametro di commento XML deve avere un attributo 'name'</span><span class="sxs-lookup"><span data-stu-id="078fb-108">XML comment parameter must have a 'name' attribute</span></span>](../../visual-basic/misc/bc42308.md)  
+- [<span data-ttu-id="a68e8-108">Il parametro di commento XML deve avere un attributo 'name'</span><span class="sxs-lookup"><span data-stu-id="a68e8-108">XML comment parameter must have a 'name' attribute</span></span>](bc42308.md)  
   
-- [<span data-ttu-id="078fb-109">Il commento XML contiene un tag con un attributo 'cref' '\<attributo >' che non può essere risolto</span><span class="sxs-lookup"><span data-stu-id="078fb-109">XML comment has a tag with a 'cref' attribute '\<attribute>' that could not be resolved</span></span>](../../visual-basic/misc/bc42309.md)  
+- [<span data-ttu-id="a68e8-109">Il commento XML contiene un elemento con un attributo 'cref' '\<attribute>' che non è stato possibile risolvere</span><span class="sxs-lookup"><span data-stu-id="a68e8-109">XML comment has a tag with a 'cref' attribute '\<attribute>' that could not be resolved</span></span>](bc42309.md)  
   
-- [<span data-ttu-id="078fb-110">Tag del commento XML 'include' deve avere un '\<attributo >' attributo</span><span class="sxs-lookup"><span data-stu-id="078fb-110">XML comment tag 'include' must have a '\<attribute>' attribute</span></span>](../../visual-basic/misc/bc42310.md)  
+- [<span data-ttu-id="a68e8-110">Il tag 'include' del commento XML deve avere un attributo '\<attribute>'</span><span class="sxs-lookup"><span data-stu-id="a68e8-110">XML comment tag 'include' must have a '\<attribute>' attribute</span></span>](bc42310.md)  
   
- <span data-ttu-id="078fb-111">**ID errore:** BC42304</span><span class="sxs-lookup"><span data-stu-id="078fb-111">**Error ID:** BC42304</span></span>  
+ <span data-ttu-id="a68e8-111">**ID errore:** BC42304</span><span class="sxs-lookup"><span data-stu-id="a68e8-111">**Error ID:** BC42304</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="078fb-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="078fb-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a68e8-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a68e8-112">See also</span></span>
 
-- [<span data-ttu-id="078fb-113">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="078fb-113">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="078fb-114">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="078fb-114">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="a68e8-113">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="a68e8-113">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="a68e8-114">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="a68e8-114">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
