--- a/docs/visual-basic/misc/bc42309.md
+++ b/docs/visual-basic/misc/bc42309.md
@@ -1,5 +1,5 @@
 ---
-title: Il commento XML contiene un tag con un attributo 'cref' '<attribute>' che non può essere risolto
+title: Il commento XML contiene un elemento con un attributo 'cref' '<attribute>' che non è stato possibile risolvere
 ms.date: 07/20/2015
 f1_keywords:
 - bc42309
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42309
 ms.assetid: c9f3cfa5-565f-48bf-8616-cfb25d24f89e
-ms.openlocfilehash: ee763c482fa72f1ab08ea0c2ece322f79e0f8e2d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 095f0775db3a7f1f8bd9a72db7fd09e408476625
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604353"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413466"
 ---
-# <a name="xml-comment-has-a-tag-with-a-cref-attribute-attribute-that-could-not-be-resolved"></a><span data-ttu-id="c3b28-102">Il commento XML contiene un tag con un attributo 'cref' '\<attributo >' che non può essere risolto</span><span class="sxs-lookup"><span data-stu-id="c3b28-102">XML comment has a tag with a 'cref' attribute '\<attribute>' that could not be resolved</span></span>
-<span data-ttu-id="c3b28-103">Il commento XML contiene un tag con un attributo 'cref' \<attributo > che non può essere risolto.</span><span class="sxs-lookup"><span data-stu-id="c3b28-103">XML comment has a tag with a 'cref' attribute \<attribute> that could not be resolved.</span></span> <span data-ttu-id="c3b28-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="c3b28-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-has-a-tag-with-a-cref-attribute-attribute-that-could-not-be-resolved"></a><span data-ttu-id="02b16-102">Il commento XML contiene un elemento con un attributo 'cref' '\<attribute>' che non è stato possibile risolvere</span><span class="sxs-lookup"><span data-stu-id="02b16-102">XML comment has a tag with a 'cref' attribute '\<attribute>' that could not be resolved</span></span>
+<span data-ttu-id="02b16-103">Il commento XML contiene un tag con un attributo ' cref ' \<attribute> che non è stato possibile risolvere.</span><span class="sxs-lookup"><span data-stu-id="02b16-103">XML comment has a tag with a 'cref' attribute \<attribute> that could not be resolved.</span></span> <span data-ttu-id="02b16-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="02b16-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="c3b28-105">I tag possono includere un attributo `cref` che designa un collegamento a un altro elemento del commento XML specificando il nome relativo dell'identificatore.</span><span class="sxs-lookup"><span data-stu-id="c3b28-105">Tags can have a `cref` attribute that designates a link to another element of the XML by specifying the relative name of the identifier.</span></span> <span data-ttu-id="c3b28-106">In fase di compilazione il valore viene sostituito con l'identificatore XML qualificato per il valore a cui si riferisce l'utente.</span><span class="sxs-lookup"><span data-stu-id="c3b28-106">At compile time, the compiler replaces the value with the qualified XML identifier for the value pointed at by the user.</span></span> <span data-ttu-id="c3b28-107">Il compilatore usa le normali regole di risoluzione per trovare il tipo o il membro.</span><span class="sxs-lookup"><span data-stu-id="c3b28-107">The compiler uses its normal resolution rules for finding the type or member.</span></span>  
+ <span data-ttu-id="02b16-105">I tag possono includere un attributo `cref` che designa un collegamento a un altro elemento del commento XML specificando il nome relativo dell'identificatore.</span><span class="sxs-lookup"><span data-stu-id="02b16-105">Tags can have a `cref` attribute that designates a link to another element of the XML by specifying the relative name of the identifier.</span></span> <span data-ttu-id="02b16-106">In fase di compilazione il valore viene sostituito con l'identificatore XML qualificato per il valore a cui si riferisce l'utente.</span><span class="sxs-lookup"><span data-stu-id="02b16-106">At compile time, the compiler replaces the value with the qualified XML identifier for the value pointed at by the user.</span></span> <span data-ttu-id="02b16-107">Il compilatore usa le normali regole di risoluzione per trovare il tipo o il membro.</span><span class="sxs-lookup"><span data-stu-id="02b16-107">The compiler uses its normal resolution rules for finding the type or member.</span></span>  
   
- <span data-ttu-id="c3b28-108">**ID errore:** BC42309</span><span class="sxs-lookup"><span data-stu-id="c3b28-108">**Error ID:** BC42309</span></span>  
+ <span data-ttu-id="02b16-108">**ID errore:** BC42309</span><span class="sxs-lookup"><span data-stu-id="02b16-108">**Error ID:** BC42309</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c3b28-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c3b28-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="02b16-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="02b16-109">To correct this error</span></span>  
   
-- <span data-ttu-id="c3b28-110">Convalidare l'attributo `cref` in modo che punti a un elemento di codice valido.</span><span class="sxs-lookup"><span data-stu-id="c3b28-110">Validate the `cref` attribute so that it points to a valid code element.</span></span>  
+- <span data-ttu-id="02b16-110">Convalidare l'attributo `cref` in modo che punti a un elemento di codice valido.</span><span class="sxs-lookup"><span data-stu-id="02b16-110">Validate the `cref` attribute so that it points to a valid code element.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c3b28-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c3b28-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="02b16-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="02b16-111">See also</span></span>
 
-- [<span data-ttu-id="c3b28-112">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="c3b28-112">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [<span data-ttu-id="c3b28-113">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="c3b28-113">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
+- [<span data-ttu-id="02b16-112">Procedura: Creare documentazione XML</span><span class="sxs-lookup"><span data-stu-id="02b16-112">How to: Create XML Documentation</span></span>](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [<span data-ttu-id="02b16-113">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="02b16-113">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
